commit bilingual contents

--- a/docs/visual-basic/misc/bc30676.md
+++ b/docs/visual-basic/misc/bc30676.md
@@ -1,5 +1,5 @@
 ---
-title: «<eventname>'non è un evento di'<containername>»
+title: "' <eventname> ' non è un evento di ' <containername> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30676
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30676
 ms.assetid: 16875ec2-94bd-45fd-9198-cc72772d4878
-ms.openlocfilehash: a62852825d99f26cdd1e2224d4fff79a9ff75cd1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 40fbbbc2328a45b5a725ed23a917174f3345c149
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958795"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414829"
 ---
-# <a name="eventname-is-not-an-event-of-containername"></a><span data-ttu-id="de685-102">«\<NomeEvento >' non è un evento di '\<nomecontenitore >»</span><span class="sxs-lookup"><span data-stu-id="de685-102">'\<eventname>' is not an event of '\<containername>'</span></span>
-<span data-ttu-id="de685-103">L'evento specificato non è dichiarato per l'oggetto.</span><span class="sxs-lookup"><span data-stu-id="de685-103">The event specified is not declared for the object.</span></span>  
+# <a name="eventname-is-not-an-event-of-containername"></a><span data-ttu-id="d039d-102">' \<eventname> ' non è un evento di ' \<containername> '</span><span class="sxs-lookup"><span data-stu-id="d039d-102">'\<eventname>' is not an event of '\<containername>'</span></span>
+<span data-ttu-id="d039d-103">L'evento specificato non è dichiarato per l'oggetto.</span><span class="sxs-lookup"><span data-stu-id="d039d-103">The event specified is not declared for the object.</span></span>  
   
- <span data-ttu-id="de685-104">**ID errore:** BC30676</span><span class="sxs-lookup"><span data-stu-id="de685-104">**Error ID:** BC30676</span></span>  
+ <span data-ttu-id="d039d-104">**ID errore:** BC30676</span><span class="sxs-lookup"><span data-stu-id="d039d-104">**Error ID:** BC30676</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="de685-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="de685-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d039d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d039d-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="de685-106">Controllare l'ortografia del nome dell'evento.</span><span class="sxs-lookup"><span data-stu-id="de685-106">Check the spelling of the event's name.</span></span>  
+1. <span data-ttu-id="d039d-106">Controllare l'ortografia del nome dell'evento.</span><span class="sxs-lookup"><span data-stu-id="d039d-106">Check the spelling of the event's name.</span></span>  
   
-2. <span data-ttu-id="de685-107">Controllare che si stia effettuando l'accesso all'oggetto corretto.</span><span class="sxs-lookup"><span data-stu-id="de685-107">Check that you are accessing the correct object.</span></span> <span data-ttu-id="de685-108">Usare riferimenti completi all'oggetto o usare l'istruzione `Imports` per importare lo spazio dei nomi appropriato, se necessario.</span><span class="sxs-lookup"><span data-stu-id="de685-108">Use fully qualified references to the object or use the `Imports` statement to import the appropriate namespace if necessary.</span></span>  
+2. <span data-ttu-id="d039d-107">Controllare che si stia effettuando l'accesso all'oggetto corretto.</span><span class="sxs-lookup"><span data-stu-id="d039d-107">Check that you are accessing the correct object.</span></span> <span data-ttu-id="d039d-108">Usare riferimenti completi all'oggetto o usare l'istruzione `Imports` per importare lo spazio dei nomi appropriato, se necessario.</span><span class="sxs-lookup"><span data-stu-id="d039d-108">Use fully qualified references to the object or use the `Imports` statement to import the appropriate namespace if necessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="de685-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="de685-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d039d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d039d-109">See also</span></span>
 
-- [<span data-ttu-id="de685-110">Eventi</span><span class="sxs-lookup"><span data-stu-id="de685-110">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
-- [<span data-ttu-id="de685-111">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="de685-111">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="d039d-110">Events</span><span class="sxs-lookup"><span data-stu-id="d039d-110">Events</span></span>](../programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="d039d-111">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="d039d-111">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
