--- a/docs/visual-basic/misc/bc30795.md
+++ b/docs/visual-basic/misc/bc30795.md
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - BC30795
 ms.assetid: 8e4e1ad8-3bac-475f-82e8-e4f134692204
-ms.openlocfilehash: 201ccfad3bd9d5997251de6697c7b971b8f250fc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e955e93a7db5228437172a65dd63364fa2f0d881
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588301"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412390"
 ---
-# <a name="non-shared-members-in-a-structure-cannot-be-declared-new"></a><span data-ttu-id="4b5b1-102">I membri non condivisi di una struttura non possono essere dichiarati come 'New'</span><span class="sxs-lookup"><span data-stu-id="4b5b1-102">Non-shared members in a Structure cannot be declared 'New'</span></span>
-<span data-ttu-id="4b5b1-103">Una variabile non condivisa in una struttura è dichiarata con una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="4b5b1-103">A nonshared variable in a structure is declared with a `New` clause.</span></span>  
+# <a name="non-shared-members-in-a-structure-cannot-be-declared-new"></a><span data-ttu-id="28842-102">I membri non condivisi di una struttura non possono essere dichiarati come 'New'</span><span class="sxs-lookup"><span data-stu-id="28842-102">Non-shared members in a Structure cannot be declared 'New'</span></span>
+<span data-ttu-id="28842-103">Una variabile non condivisa in una struttura è dichiarata con una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="28842-103">A nonshared variable in a structure is declared with a `New` clause.</span></span>  
   
- <span data-ttu-id="4b5b1-104">Si può inizializzare una variabile di riferimento condivisa in una struttura ed è possibile avere una variabile di riferimento non condivisa senza inizializzazione, come mostrano le righe di codice seguenti.</span><span class="sxs-lookup"><span data-stu-id="4b5b1-104">You can initialize a shared reference variable in a structure, and you can have a nonshared reference variable without initialization, as the following code lines show.</span></span>  
+ <span data-ttu-id="28842-104">Si può inizializzare una variabile di riferimento condivisa in una struttura ed è possibile avere una variabile di riferimento non condivisa senza inizializzazione, come mostrano le righe di codice seguenti.</span><span class="sxs-lookup"><span data-stu-id="28842-104">You can initialize a shared reference variable in a structure, and you can have a nonshared reference variable without initialization, as the following code lines show.</span></span>  
   
  `Shared structVar1 As New System.ApplicationException`  
   
  `Dim structVar2 As System.ApplicationException`  
   
- <span data-ttu-id="4b5b1-105">Tuttavia, non è possibile inizializzare una variabile di riferimento non condivisa in una struttura.</span><span class="sxs-lookup"><span data-stu-id="4b5b1-105">However, you cannot initialize a nonshared reference variable in a structure.</span></span> <span data-ttu-id="4b5b1-106">La riga di codice seguente non è valida.</span><span class="sxs-lookup"><span data-stu-id="4b5b1-106">The following code line is invalid.</span></span>  
+ <span data-ttu-id="28842-105">Tuttavia, non è possibile inizializzare una variabile di riferimento non condivisa in una struttura.</span><span class="sxs-lookup"><span data-stu-id="28842-105">However, you cannot initialize a nonshared reference variable in a structure.</span></span> <span data-ttu-id="28842-106">La riga di codice seguente non è valida.</span><span class="sxs-lookup"><span data-stu-id="28842-106">The following code line is invalid.</span></span>  
   
  `Dim structVar3 As New System.ApplicationException ' INVALID IN A STRUCTURE`  
   
- <span data-ttu-id="4b5b1-107">**ID errore:** BC30795</span><span class="sxs-lookup"><span data-stu-id="4b5b1-107">**Error ID:** BC30795</span></span>  
+ <span data-ttu-id="28842-107">**ID errore:** BC30795</span><span class="sxs-lookup"><span data-stu-id="28842-107">**Error ID:** BC30795</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4b5b1-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4b5b1-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="28842-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="28842-108">To correct this error</span></span>  
   
-- <span data-ttu-id="4b5b1-109">Rimuovere il modificatore `Shared` o la parola chiave `New` dalla dichiarazione di variabile di riferimento.</span><span class="sxs-lookup"><span data-stu-id="4b5b1-109">Remove either the `Shared` modifier or the `New` keyword from the reference variable declaration.</span></span>  
+- <span data-ttu-id="28842-109">Rimuovere il modificatore `Shared` o la parola chiave `New` dalla dichiarazione di variabile di riferimento.</span><span class="sxs-lookup"><span data-stu-id="28842-109">Remove either the `Shared` modifier or the `New` keyword from the reference variable declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4b5b1-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4b5b1-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="28842-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="28842-110">See also</span></span>
 
-- [<span data-ttu-id="4b5b1-111">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="4b5b1-111">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="4b5b1-112">Shared</span><span class="sxs-lookup"><span data-stu-id="4b5b1-112">Shared</span></span>](../../visual-basic/language-reference/modifiers/shared.md)
-- [<span data-ttu-id="4b5b1-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="4b5b1-113">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
+- [<span data-ttu-id="28842-111">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="28842-111">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="28842-112">Condivisa</span><span class="sxs-lookup"><span data-stu-id="28842-112">Shared</span></span>](../language-reference/modifiers/shared.md)
+- [<span data-ttu-id="28842-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="28842-113">New Operator</span></span>](../language-reference/operators/new-operator.md)
