--- a/docs/visual-basic/misc/bc30810.md
+++ b/docs/visual-basic/misc/bc30810.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30810
 ms.assetid: 3c412d58-1007-4278-b365-a85dc55ebe48
-ms.openlocfilehash: b623bdaad4b291b6d5736f037da4ae5f1d599e2e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 03da3a036fbd3c10beb122a34ab15c80e76f979b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412260"
 ---
-# <a name="methods-cannot-be-declared-static"></a><span data-ttu-id="0dcfb-102">I metodi non possono essere dichiarati come 'Static'</span><span class="sxs-lookup"><span data-stu-id="0dcfb-102">Methods cannot be declared 'Static'</span></span>
-<span data-ttu-id="0dcfb-103">Il modificatore `Static` non può essere applicato a intere routine.</span><span class="sxs-lookup"><span data-stu-id="0dcfb-103">The `Static` modifier cannot be applied to entire procedures.</span></span>  
+# <a name="methods-cannot-be-declared-static"></a><span data-ttu-id="47f06-102">I metodi non possono essere dichiarati come 'Static'</span><span class="sxs-lookup"><span data-stu-id="47f06-102">Methods cannot be declared 'Static'</span></span>
+<span data-ttu-id="47f06-103">Il modificatore `Static` non può essere applicato a intere routine.</span><span class="sxs-lookup"><span data-stu-id="47f06-103">The `Static` modifier cannot be applied to entire procedures.</span></span>  
   
- <span data-ttu-id="0dcfb-104">**ID errore:** BC30810</span><span class="sxs-lookup"><span data-stu-id="0dcfb-104">**Error ID:** BC30810</span></span>  
+ <span data-ttu-id="47f06-104">**ID errore:** BC30810</span><span class="sxs-lookup"><span data-stu-id="47f06-104">**Error ID:** BC30810</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0dcfb-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0dcfb-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="47f06-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="47f06-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0dcfb-106">Usare il modificatore `Static` per dichiarare come statici i singoli elementi all'interno di una routine.</span><span class="sxs-lookup"><span data-stu-id="0dcfb-106">Use the `Static` modifier to declare individual items within a procedure as static.</span></span>  
+- <span data-ttu-id="47f06-106">Usare il modificatore `Static` per dichiarare come statici i singoli elementi all'interno di una routine.</span><span class="sxs-lookup"><span data-stu-id="47f06-106">Use the `Static` modifier to declare individual items within a procedure as static.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0dcfb-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0dcfb-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="47f06-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="47f06-107">See also</span></span>
 
-- [<span data-ttu-id="0dcfb-108">Static</span><span class="sxs-lookup"><span data-stu-id="0dcfb-108">Static</span></span>](../../visual-basic/language-reference/modifiers/static.md)
+- [<span data-ttu-id="47f06-108">Statico</span><span class="sxs-lookup"><span data-stu-id="47f06-108">Static</span></span>](../language-reference/modifiers/static.md)
