--- a/docs/visual-basic/misc/bc30927.md
+++ b/docs/visual-basic/misc/bc30927.md
@@ -1,5 +1,5 @@
 ---
-title: "'MustOverride' non può essere specificato in '<procedurename>' perché si trova in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale"
+title: "'MustOverride' non può essere specificato in '<procedurename>' perché è in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30927
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC30927
 ms.assetid: 5798dfda-3d7b-4f30-9715-40cbf52d6dc4
-ms.openlocfilehash: e8a4e221c0e08f1b9550740b36c61c6a033aec36
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7dd4dd7b507f63e956e2d163986d0821e6a5043e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622071"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414064"
 ---
-# <a name="mustoverride-cannot-be-specified-on-procedurename-because-it-is-in-a-partial-type-that-is-declared-notinheritable-in-another-partial-definition"></a><span data-ttu-id="65d6a-102">'MustOverride' non può essere specificato in '\<nomeroutine >' perché si trova in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale</span><span class="sxs-lookup"><span data-stu-id="65d6a-102">'MustOverride' cannot be specified on '\<procedurename>' because it is in a partial type that is declared 'NotInheritable' in another partial definition</span></span>
-<span data-ttu-id="65d6a-103">Una routine o una proprietà è dichiarata come `MustOverride` all'interno di una classe definita in più dichiarazioni parziali, ma una delle definizioni parziali specifica `NotInheritable` per la classe.</span><span class="sxs-lookup"><span data-stu-id="65d6a-103">A procedure or property is declared as `MustOverride` within a class that is defined in multiple partial declarations, but one of the partial definitions specifies `NotInheritable` for the class.</span></span>  
+# <a name="mustoverride-cannot-be-specified-on-procedurename-because-it-is-in-a-partial-type-that-is-declared-notinheritable-in-another-partial-definition"></a><span data-ttu-id="ddd2a-102">'MustOverride' non può essere specificato in '\<procedurename>' perché è in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale</span><span class="sxs-lookup"><span data-stu-id="ddd2a-102">'MustOverride' cannot be specified on '\<procedurename>' because it is in a partial type that is declared 'NotInheritable' in another partial definition</span></span>
+<span data-ttu-id="ddd2a-103">Una routine o una proprietà è dichiarata come `MustOverride` all'interno di una classe definita in più dichiarazioni parziali, ma una delle definizioni parziali specifica `NotInheritable` per la classe.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-103">A procedure or property is declared as `MustOverride` within a class that is defined in multiple partial declarations, but one of the partial definitions specifies `NotInheritable` for the class.</span></span>  
   
- <span data-ttu-id="65d6a-104">Quando si divide la definizione di una classe in diverse dichiarazioni parziali, il compilatore considera la classe come l'unione di tutte le sue dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="65d6a-104">When you divide the definition of a class among several partial declarations, the compiler treats the class as the union of all its partial declarations.</span></span> <span data-ttu-id="65d6a-105">Questo riguarda non soltanto i membri, ma anche l'implementazione, l'ereditarietà e il livello di accesso.</span><span class="sxs-lookup"><span data-stu-id="65d6a-105">This applies not only to the members but also to the implementation, inheritance, and access level.</span></span>  
+ <span data-ttu-id="ddd2a-104">Quando si divide la definizione di una classe in diverse dichiarazioni parziali, il compilatore considera la classe come l'unione di tutte le sue dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-104">When you divide the definition of a class among several partial declarations, the compiler treats the class as the union of all its partial declarations.</span></span> <span data-ttu-id="ddd2a-105">Questo riguarda non soltanto i membri, ma anche l'implementazione, l'ereditarietà e il livello di accesso.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-105">This applies not only to the members but also to the implementation, inheritance, and access level.</span></span>  
   
- <span data-ttu-id="65d6a-106">Per eseguire l'override di una routine o una proprietà, una classe deve ereditarla da una classe base.</span><span class="sxs-lookup"><span data-stu-id="65d6a-106">To override a procedure or property, a class must inherit it from a base class.</span></span> <span data-ttu-id="65d6a-107">Per specificare `MustOverride` per una routine o una proprietà in una classe base, di conseguenza, è necessario specificare `MustInherit` per la classe.</span><span class="sxs-lookup"><span data-stu-id="65d6a-107">Therefore, to specify `MustOverride` for a procedure or property in a base class, you must specify `MustInherit` for the class.</span></span> <span data-ttu-id="65d6a-108">Dal momento che `MustInherit` e `NotInheritable` sono in contraddizione fra loro, non è possibile specificarli entrambi per la medesima classe.</span><span class="sxs-lookup"><span data-stu-id="65d6a-108">Because they are mutually contradictory, you cannot specify both `MustInherit` and `NotInheritable` for the same class.</span></span>  
+ <span data-ttu-id="ddd2a-106">Per eseguire l'override di una routine o una proprietà, una classe deve ereditarla da una classe base.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-106">To override a procedure or property, a class must inherit it from a base class.</span></span> <span data-ttu-id="ddd2a-107">Per specificare `MustOverride` per una routine o una proprietà in una classe base, di conseguenza, è necessario specificare `MustInherit` per la classe.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-107">Therefore, to specify `MustOverride` for a procedure or property in a base class, you must specify `MustInherit` for the class.</span></span> <span data-ttu-id="ddd2a-108">Dal momento che `MustInherit` e `NotInheritable` sono in contraddizione fra loro, non è possibile specificarli entrambi per la medesima classe.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-108">Because they are mutually contradictory, you cannot specify both `MustInherit` and `NotInheritable` for the same class.</span></span>  
   
- <span data-ttu-id="65d6a-109">**ID errore:** BC30927</span><span class="sxs-lookup"><span data-stu-id="65d6a-109">**Error ID:** BC30927</span></span>  
+ <span data-ttu-id="ddd2a-109">**ID errore:** BC30927</span><span class="sxs-lookup"><span data-stu-id="ddd2a-109">**Error ID:** BC30927</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="65d6a-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="65d6a-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ddd2a-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ddd2a-110">To correct this error</span></span>  
   
-- <span data-ttu-id="65d6a-111">Se è necessario eseguire l'override della proprietà o della routine, rimuovere la parola chiave `NotInheritable` dalla dichiarazione parziale in cui compare.</span><span class="sxs-lookup"><span data-stu-id="65d6a-111">If the property or procedure must be overridden, then remove the `NotInheritable` keyword from the partial declaration in which it appears.</span></span>  
+- <span data-ttu-id="ddd2a-111">Se è necessario eseguire l'override della proprietà o della routine, rimuovere la parola chiave `NotInheritable` dalla dichiarazione parziale in cui compare.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-111">If the property or procedure must be overridden, then remove the `NotInheritable` keyword from the partial declaration in which it appears.</span></span>  
   
-- <span data-ttu-id="65d6a-112">Se la classe deve essere `NotInheritable`, rimuovere la parola chiave `MustOverride` dalla routine o dalla proprietà.</span><span class="sxs-lookup"><span data-stu-id="65d6a-112">If the class must be `NotInheritable`, then remove the `MustOverride` keyword from the procedure or property.</span></span> <span data-ttu-id="65d6a-113">Non è possibile eseguirne l'override perché la classe non è ereditabile.</span><span class="sxs-lookup"><span data-stu-id="65d6a-113">You cannot override it because you cannot inherit the class.</span></span>  
+- <span data-ttu-id="ddd2a-112">Se la classe deve essere `NotInheritable`, rimuovere la parola chiave `MustOverride` dalla routine o dalla proprietà.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-112">If the class must be `NotInheritable`, then remove the `MustOverride` keyword from the procedure or property.</span></span> <span data-ttu-id="ddd2a-113">Non è possibile eseguirne l'override perché la classe non è ereditabile.</span><span class="sxs-lookup"><span data-stu-id="ddd2a-113">You cannot override it because you cannot inherit the class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="65d6a-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="65d6a-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ddd2a-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ddd2a-114">See also</span></span>
 
-- [<span data-ttu-id="65d6a-115">Partial</span><span class="sxs-lookup"><span data-stu-id="65d6a-115">Partial</span></span>](../../visual-basic/language-reference/modifiers/partial.md)
-- [<span data-ttu-id="65d6a-116">MustOverride</span><span class="sxs-lookup"><span data-stu-id="65d6a-116">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [<span data-ttu-id="65d6a-117">MustInherit</span><span class="sxs-lookup"><span data-stu-id="65d6a-117">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
-- [<span data-ttu-id="65d6a-118">NotInheritable</span><span class="sxs-lookup"><span data-stu-id="65d6a-118">NotInheritable</span></span>](../../visual-basic/language-reference/modifiers/notinheritable.md)
-- [<span data-ttu-id="65d6a-119">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="65d6a-119">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="ddd2a-115">Partial</span><span class="sxs-lookup"><span data-stu-id="ddd2a-115">Partial</span></span>](../language-reference/modifiers/partial.md)
+- [<span data-ttu-id="ddd2a-116">MustOverride</span><span class="sxs-lookup"><span data-stu-id="ddd2a-116">MustOverride</span></span>](../language-reference/modifiers/mustoverride.md)
+- [<span data-ttu-id="ddd2a-117">MustInherit</span><span class="sxs-lookup"><span data-stu-id="ddd2a-117">MustInherit</span></span>](../language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="ddd2a-118">NotInheritable</span><span class="sxs-lookup"><span data-stu-id="ddd2a-118">NotInheritable</span></span>](../language-reference/modifiers/notinheritable.md)
+- [<span data-ttu-id="ddd2a-119">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="ddd2a-119">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
