--- a/docs/visual-basic/misc/bc31133.md
+++ b/docs/visual-basic/misc/bc31133.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC31133
 ms.assetid: f6295626-dd63-408c-ab5f-76367f94d6ca
-ms.openlocfilehash: 7d47aea277220a64bd948eff898b9d23ef2bbe53
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b2807626f799a1c8499f245a3dddc96cb5e9eeaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664597"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414738"
 ---
-# <a name="addhandler-and-removehandler-methods-must-have-exactly-one-parameter"></a><span data-ttu-id="ee743-102">I metodi 'AddHandler' e 'RemoveHandler' devono avere esattamente un parametro</span><span class="sxs-lookup"><span data-stu-id="ee743-102">'AddHandler' and 'RemoveHandler' methods must have exactly one parameter</span></span>
-<span data-ttu-id="ee743-103">Una dichiarazione di evento personalizzato deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="ee743-103">A custom event declaration must have `AddHandler` or `RemoveHandler` declarations, each of which takes a single parameter of the delegate type specified by the custom event's `As` clause.</span></span>  
+# <a name="addhandler-and-removehandler-methods-must-have-exactly-one-parameter"></a><span data-ttu-id="06ddf-102">I metodi 'AddHandler' e 'RemoveHandler' devono avere esattamente un parametro</span><span class="sxs-lookup"><span data-stu-id="06ddf-102">'AddHandler' and 'RemoveHandler' methods must have exactly one parameter</span></span>
+<span data-ttu-id="06ddf-103">Una dichiarazione di evento personalizzato deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="06ddf-103">A custom event declaration must have `AddHandler` or `RemoveHandler` declarations, each of which takes a single parameter of the delegate type specified by the custom event's `As` clause.</span></span>  
   
- <span data-ttu-id="ee743-104">**ID errore:** BC31133</span><span class="sxs-lookup"><span data-stu-id="ee743-104">**Error ID:** BC31133</span></span>  
+ <span data-ttu-id="06ddf-104">**ID errore:** BC31133</span><span class="sxs-lookup"><span data-stu-id="06ddf-104">**Error ID:** BC31133</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ee743-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ee743-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="06ddf-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="06ddf-105">To correct this error</span></span>  
   
-- <span data-ttu-id="ee743-106">Rimuovere i parametri aggiuntivi dall'elenco dei parametri e modificare il tipo di parametro in modo che corrisponda al tipo delegato specificato per la clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="ee743-106">Remove the extra parameters from the parameter list, and change the parameter type to be the same as the delegate type specified by the custom event's `As` clause.</span></span>  
+- <span data-ttu-id="06ddf-106">Rimuovere i parametri aggiuntivi dall'elenco dei parametri e modificare il tipo di parametro in modo che corrisponda al tipo delegato specificato per la clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="06ddf-106">Remove the extra parameters from the parameter list, and change the parameter type to be the same as the delegate type specified by the custom event's `As` clause.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="ee743-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="ee743-107">Example</span></span>  
- <span data-ttu-id="ee743-108">Questo esempio mostra un evento personalizzato con i tipi di parametro corretti per le dichiarazioni `AddHandler` e `RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="ee743-108">This example shows a custom event with the correct parameter types for the `AddHandler` and `RemoveHandler` declarations.</span></span>  
+## <a name="example"></a><span data-ttu-id="06ddf-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="06ddf-107">Example</span></span>  
+ <span data-ttu-id="06ddf-108">Questo esempio mostra un evento personalizzato con i tipi di parametro corretti per le dichiarazioni `AddHandler` e `RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="06ddf-108">This example shows a custom event with the correct parameter types for the `AddHandler` and `RemoveHandler` declarations.</span></span>  
   
  [!code-vb[VbVbalrEventError#1](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#1)]  
   
-## <a name="see-also"></a><span data-ttu-id="ee743-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ee743-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="06ddf-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="06ddf-109">See also</span></span>
 
-- [<span data-ttu-id="ee743-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="ee743-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="ee743-111">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="ee743-111">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="ee743-112">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="ee743-112">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="ee743-113">Eventi</span><span class="sxs-lookup"><span data-stu-id="ee743-113">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="06ddf-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="06ddf-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="06ddf-111">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="06ddf-111">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="06ddf-112">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="06ddf-112">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="06ddf-113">Events</span><span class="sxs-lookup"><span data-stu-id="06ddf-113">Events</span></span>](../programming-guide/language-features/events/index.md)
