--- a/docs/visual-basic/misc/bc31510.md
+++ b/docs/visual-basic/misc/bc31510.md
@@ -1,5 +1,5 @@
 ---
-title: La costante di<constantname>attributo '' non può essere la destinazione di un'assegnazione
+title: La costante di attributo '<constantname>' non può essere la destinazione di un'assegnazione
 ms.date: 07/20/2015
 f1_keywords:
 - bc31510
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31510
 ms.assetid: 5459c531-3a4e-4e03-b185-9c5766254982
-ms.openlocfilehash: 26526919a969530e853e103c53ad46f86df0a8cb
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: ef29c529037a05ad1ea54ab7a44adca925516a6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660945"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412221"
 ---
-# <a name="attribute-constant-constantname-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="3e5cf-102">La costante di\<attributo ' constantname >' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="3e5cf-102">Attribute constant '\<constantname>' cannot be the target of an assignment</span></span>
-<span data-ttu-id="3e5cf-103">Si è provato ad assegnare un valore a una costante dichiarata in un attributo.</span><span class="sxs-lookup"><span data-stu-id="3e5cf-103">An attempt was made to assign a value to a constant declared in an attribute.</span></span>  
+# <a name="attribute-constant-constantname-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="24aa9-102">La costante di attributo '\<constantname>' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="24aa9-102">Attribute constant '\<constantname>' cannot be the target of an assignment</span></span>
+<span data-ttu-id="24aa9-103">Si è provato ad assegnare un valore a una costante dichiarata in un attributo.</span><span class="sxs-lookup"><span data-stu-id="24aa9-103">An attempt was made to assign a value to a constant declared in an attribute.</span></span>  
   
- <span data-ttu-id="3e5cf-104">**ID errore:** BC31510</span><span class="sxs-lookup"><span data-stu-id="3e5cf-104">**Error ID:** BC31510</span></span>  
+ <span data-ttu-id="24aa9-104">**ID errore:** BC31510</span><span class="sxs-lookup"><span data-stu-id="24aa9-104">**Error ID:** BC31510</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3e5cf-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3e5cf-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="24aa9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="24aa9-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3e5cf-106">Rimuovere l'assegnazione errata.</span><span class="sxs-lookup"><span data-stu-id="3e5cf-106">Remove the erroneous assignment.</span></span>  
+- <span data-ttu-id="24aa9-106">Rimuovere l'assegnazione errata.</span><span class="sxs-lookup"><span data-stu-id="24aa9-106">Remove the erroneous assignment.</span></span>  
   
-- <span data-ttu-id="3e5cf-107">Se si usano attributi personalizzati che sono stati sviluppati, ridefinire il membro nell'attributo come un campo.</span><span class="sxs-lookup"><span data-stu-id="3e5cf-107">If you are using custom attributes that you developed, redefine the member in the attribute as a field.</span></span>  
+- <span data-ttu-id="24aa9-107">Se si usano attributi personalizzati che sono stati sviluppati, ridefinire il membro nell'attributo come un campo.</span><span class="sxs-lookup"><span data-stu-id="24aa9-107">If you are using custom attributes that you developed, redefine the member in the attribute as a field.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3e5cf-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3e5cf-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="24aa9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="24aa9-108">See also</span></span>
 
-- [<span data-ttu-id="3e5cf-109">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="3e5cf-109">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
-- [<span data-ttu-id="3e5cf-110">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="3e5cf-110">Constants and Enumerations</span></span>](../../visual-basic/language-reference/constants-and-enumerations.md)
+- [<span data-ttu-id="24aa9-109">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="24aa9-109">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="24aa9-110">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="24aa9-110">Constants and Enumerations</span></span>](../language-reference/constants-and-enumerations.md)
