--- a/docs/visual-basic/misc/bc31527.md
+++ b/docs/visual-basic/misc/bc31527.md
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC31527
 ms.assetid: ea125bff-d020-4933-b277-6e24943eea88
-ms.openlocfilehash: b1d46ed20e917959ff6e76a67315deb480a66a11
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ebab65a9b3d84cdfc7e01b3ea5d911a26aecd2ce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605316"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412156"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-generic-or-nested-inside-a-generic-type"></a><span data-ttu-id="73373-102">Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe generica o contenuta all'interno di un tipo generico</span><span class="sxs-lookup"><span data-stu-id="73373-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to a class that is generic or nested inside a generic type</span></span>
-<span data-ttu-id="73373-103">Viene dichiarata una classe con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma è generica o contenuta all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="73373-103">A class is declared with <xref:Microsoft.VisualBasic.ComClassAttribute>, but it is either generic or contained in a generic class or structure.</span></span>  
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-generic-or-nested-inside-a-generic-type"></a><span data-ttu-id="c13d7-102">Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe generica o contenuta all'interno di un tipo generico</span><span class="sxs-lookup"><span data-stu-id="c13d7-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to a class that is generic or nested inside a generic type</span></span>
+<span data-ttu-id="c13d7-103">Viene dichiarata una classe con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma è generica o contenuta all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="c13d7-103">A class is declared with <xref:Microsoft.VisualBasic.ComClassAttribute>, but it is either generic or contained in a generic class or structure.</span></span>  
   
- <span data-ttu-id="73373-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="73373-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
+ <span data-ttu-id="c13d7-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="c13d7-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
   
-- <span data-ttu-id="73373-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="73373-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
+- <span data-ttu-id="c13d7-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="c13d7-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
   
-- <span data-ttu-id="73373-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="73373-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
+- <span data-ttu-id="c13d7-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="c13d7-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
   
-- <span data-ttu-id="73373-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="73373-107">It must not be generic or be declared within a generic container type.</span></span>  
+- <span data-ttu-id="c13d7-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="c13d7-107">It must not be generic or be declared within a generic container type.</span></span>  
   
- <span data-ttu-id="73373-108">**ID errore:** BC31527</span><span class="sxs-lookup"><span data-stu-id="73373-108">**Error ID:** BC31527</span></span>  
+ <span data-ttu-id="c13d7-108">**ID errore:** BC31527</span><span class="sxs-lookup"><span data-stu-id="c13d7-108">**Error ID:** BC31527</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="73373-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="73373-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c13d7-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c13d7-109">To correct this error</span></span>  
   
-- <span data-ttu-id="73373-110">Modificare la dichiarazione della classe in modo che non sia generica e assicurarsi che l'elemento contenitore non sia generico.</span><span class="sxs-lookup"><span data-stu-id="73373-110">Change the declaration of the class so that it is not generic, and make sure its containing element is not generic.</span></span>  
+- <span data-ttu-id="c13d7-110">Modificare la dichiarazione della classe in modo che non sia generica e assicurarsi che l'elemento contenitore non sia generico.</span><span class="sxs-lookup"><span data-stu-id="c13d7-110">Change the declaration of the class so that it is not generic, and make sure its containing element is not generic.</span></span>  
   
-     <span data-ttu-id="73373-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="73373-111">-or-</span></span>  
+     <span data-ttu-id="c13d7-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="c13d7-111">-or-</span></span>  
   
-- <span data-ttu-id="73373-112">Se la classe o il relativo elemento contenitore deve essere generico, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="73373-112">If the class or its containing element must be generic, remove <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="73373-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="73373-113">You cannot expose it to COM.</span></span>  
+- <span data-ttu-id="c13d7-112">Se la classe o il relativo elemento contenitore deve essere generico, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="c13d7-112">If the class or its containing element must be generic, remove <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="c13d7-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="c13d7-113">You cannot expose it to COM.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="73373-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="73373-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c13d7-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c13d7-114">See also</span></span>
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [<span data-ttu-id="73373-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="73373-115">COM Interop</span></span>](../../visual-basic/programming-guide/com-interop/index.md)
-- [<span data-ttu-id="73373-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="73373-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="c13d7-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="c13d7-115">COM Interop</span></span>](../programming-guide/com-interop/index.md)
+- [<span data-ttu-id="c13d7-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c13d7-116">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
