--- a/docs/visual-basic/misc/bc31529.md
+++ b/docs/visual-basic/misc/bc31529.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC31529
 ms.assetid: c8bde5d7-c6bf-4d21-bb1a-e8627d65ad29
-ms.openlocfilehash: 7d9d232f7fac757823eac49a5fd36e02d89b894c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f47b1260dc3318ebebb0e87e57e64d27885f35
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605333"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412130"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-instance-methods"></a><span data-ttu-id="afe36-102">Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di istanza</span><span class="sxs-lookup"><span data-stu-id="afe36-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to instance methods</span></span>
-<span data-ttu-id="afe36-103">Una routine non condivisa viene dichiarata con l'attributo <xref:System.Runtime.InteropServices.DllImportAttribute>.</span><span class="sxs-lookup"><span data-stu-id="afe36-103">A nonshared procedure is declared with the <xref:System.Runtime.InteropServices.DllImportAttribute>.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-instance-methods"></a><span data-ttu-id="bc7b0-102">Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di istanza</span><span class="sxs-lookup"><span data-stu-id="bc7b0-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to instance methods</span></span>
+<span data-ttu-id="bc7b0-103">Una routine non condivisa viene dichiarata con l'attributo <xref:System.Runtime.InteropServices.DllImportAttribute>.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-103">A nonshared procedure is declared with the <xref:System.Runtime.InteropServices.DllImportAttribute>.</span></span>  
   
- <span data-ttu-id="afe36-104">Common Language Runtime (CLR) rileva che questo attributo e la relativa proprietà <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> designano una routine di sostituzione definita in una libreria di collegamento dinamico (DLL) non gestita all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="afe36-104">The common language runtime (CLR) recognizes this attribute and its <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> property as designating a replacement procedure defined in an unmanaged dynamic-link library (DLL) outside the .NET Framework.</span></span> <span data-ttu-id="afe36-105">Quando il codice chiama la routine a cui è applicato <xref:System.Runtime.InteropServices.DllImportAttribute> , Common Language Runtime chiama invece la routine non gestita designata.</span><span class="sxs-lookup"><span data-stu-id="afe36-105">When code calls the procedure to which the <xref:System.Runtime.InteropServices.DllImportAttribute> is applied, the common language runtime calls the designated unmanaged procedure instead.</span></span>  
+ <span data-ttu-id="bc7b0-104">Common Language Runtime (CLR) rileva che questo attributo e la relativa proprietà <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> designano una routine di sostituzione definita in una libreria di collegamento dinamico (DLL) non gestita all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-104">The common language runtime (CLR) recognizes this attribute and its <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> property as designating a replacement procedure defined in an unmanaged dynamic-link library (DLL) outside the .NET Framework.</span></span> <span data-ttu-id="bc7b0-105">Quando il codice chiama la routine a cui è applicato <xref:System.Runtime.InteropServices.DllImportAttribute> , Common Language Runtime chiama invece la routine non gestita designata.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-105">When code calls the procedure to which the <xref:System.Runtime.InteropServices.DllImportAttribute> is applied, the common language runtime calls the designated unmanaged procedure instead.</span></span>  
   
- <span data-ttu-id="afe36-106">Dal momento che le piattaforme non gestite all'esterno di .NET Framework non supportano le routine non condivise come accade per .NET Framework, non è possibile interagire con loro usando routine non condivise.</span><span class="sxs-lookup"><span data-stu-id="afe36-106">Because unmanaged platforms outside the .NET Framework do not support nonshared procedures the same way the .NET Framework does, you cannot interoperate with them using nonshared procedures.</span></span>  
+ <span data-ttu-id="bc7b0-106">Dal momento che le piattaforme non gestite all'esterno di .NET Framework non supportano le routine non condivise come accade per .NET Framework, non è possibile interagire con loro usando routine non condivise.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-106">Because unmanaged platforms outside the .NET Framework do not support nonshared procedures the same way the .NET Framework does, you cannot interoperate with them using nonshared procedures.</span></span>  
   
- <span data-ttu-id="afe36-107">**ID errore:** BC31529</span><span class="sxs-lookup"><span data-stu-id="afe36-107">**Error ID:** BC31529</span></span>  
+ <span data-ttu-id="bc7b0-107">**ID errore:** BC31529</span><span class="sxs-lookup"><span data-stu-id="bc7b0-107">**Error ID:** BC31529</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="afe36-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="afe36-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bc7b0-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bc7b0-108">To correct this error</span></span>  
   
-- <span data-ttu-id="afe36-109">Se la routine non necessita di essere applicata individualmente a ogni istanza della classe o struttura, dichiararla come `Shared`.</span><span class="sxs-lookup"><span data-stu-id="afe36-109">If the procedure does not need to apply individually to each instance of its class or structure, then declare it as `Shared`.</span></span>  
+- <span data-ttu-id="bc7b0-109">Se la routine non necessita di essere applicata individualmente a ogni istanza della classe o struttura, dichiararla come `Shared`.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-109">If the procedure does not need to apply individually to each instance of its class or structure, then declare it as `Shared`.</span></span>  
   
-- <span data-ttu-id="afe36-110">Se la routine non può essere `Shared`, rimuovere l'attributo <xref:System.Runtime.InteropServices.DllImportAttribute> dalla dichiarazione di questa routine.</span><span class="sxs-lookup"><span data-stu-id="afe36-110">If the procedure cannot be `Shared`, then remove the <xref:System.Runtime.InteropServices.DllImportAttribute> from the declaration of this procedure.</span></span>  
+- <span data-ttu-id="bc7b0-110">Se la routine non può essere `Shared`, rimuovere l'attributo <xref:System.Runtime.InteropServices.DllImportAttribute> dalla dichiarazione di questa routine.</span><span class="sxs-lookup"><span data-stu-id="bc7b0-110">If the procedure cannot be `Shared`, then remove the <xref:System.Runtime.InteropServices.DllImportAttribute> from the declaration of this procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="afe36-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="afe36-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="bc7b0-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bc7b0-111">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [<span data-ttu-id="afe36-112">Shared</span><span class="sxs-lookup"><span data-stu-id="afe36-112">Shared</span></span>](../../visual-basic/language-reference/modifiers/shared.md)
+- [<span data-ttu-id="bc7b0-112">Condivisa</span><span class="sxs-lookup"><span data-stu-id="bc7b0-112">Shared</span></span>](../language-reference/modifiers/shared.md)
