--- a/docs/visual-basic/misc/bc31530.md
+++ b/docs/visual-basic/misc/bc31530.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31530
 ms.assetid: e63f1f7d-b7df-4637-a0f4-2783479ca1af
-ms.openlocfilehash: 16d74477e87b70565bd6050b5973701fa00bdb82
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a4ee453b5b833483cead24d66011bd7c7ebaf5a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64617045"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412117"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-interface-methods"></a><span data-ttu-id="97fac-102">Non è possibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="97fac-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to interface methods</span></span>
-<span data-ttu-id="97fac-103">All'interno di un'interfaccia è stata definita una routine, ma la definizione di quest'ultima applica <xref:System.Runtime.InteropServices.DllImportAttribute>.</span><span class="sxs-lookup"><span data-stu-id="97fac-103">A procedure is defined inside an interface, but the procedure definition applies the <xref:System.Runtime.InteropServices.DllImportAttribute>.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-interface-methods"></a><span data-ttu-id="42757-102">Non è possibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="42757-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to interface methods</span></span>
+<span data-ttu-id="42757-103">All'interno di un'interfaccia è stata definita una routine, ma la definizione di quest'ultima applica <xref:System.Runtime.InteropServices.DllImportAttribute>.</span><span class="sxs-lookup"><span data-stu-id="42757-103">A procedure is defined inside an interface, but the procedure definition applies the <xref:System.Runtime.InteropServices.DllImportAttribute>.</span></span>  
   
- <span data-ttu-id="97fac-104">Common Language Runtime (CLR) rileva che questo attributo e la relativa proprietà <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> designano una routine di sostituzione definita in una libreria di collegamento dinamico (DLL) non gestita all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="97fac-104">The common language runtime (CLR) recognizes this attribute and its <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> property as designating a replacement procedure defined in an unmanaged dynamic-link library (DLL) outside the .NET Framework.</span></span> <span data-ttu-id="97fac-105">Quando il codice chiama la routine a cui è applicato <xref:System.Runtime.InteropServices.DllImportAttribute> , Common Language Runtime chiama invece la routine non gestita designata.</span><span class="sxs-lookup"><span data-stu-id="97fac-105">When code calls the procedure to which the <xref:System.Runtime.InteropServices.DllImportAttribute> is applied, the common language runtime calls the designated unmanaged procedure instead.</span></span>  
+ <span data-ttu-id="42757-104">Common Language Runtime (CLR) rileva che questo attributo e la relativa proprietà <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> designano una routine di sostituzione definita in una libreria di collegamento dinamico (DLL) non gestita all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="42757-104">The common language runtime (CLR) recognizes this attribute and its <xref:System.Runtime.InteropServices._Assembly.EntryPoint%2A> property as designating a replacement procedure defined in an unmanaged dynamic-link library (DLL) outside the .NET Framework.</span></span> <span data-ttu-id="42757-105">Quando il codice chiama la routine a cui è applicato <xref:System.Runtime.InteropServices.DllImportAttribute> , Common Language Runtime chiama invece la routine non gestita designata.</span><span class="sxs-lookup"><span data-stu-id="42757-105">When code calls the procedure to which the <xref:System.Runtime.InteropServices.DllImportAttribute> is applied, the common language runtime calls the designated unmanaged procedure instead.</span></span>  
   
- <span data-ttu-id="97fac-106">La definizione di una routine all'interno di un'interfaccia non include alcuna implementazione e non può quindi interagire con le piattaforme non gestite all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="97fac-106">Because the definition of a procedure inside an interface does not include any implementation, it cannot interoperate with unmanaged platforms outside the .NET Framework.</span></span>  
+ <span data-ttu-id="42757-106">La definizione di una routine all'interno di un'interfaccia non include alcuna implementazione e non può quindi interagire con le piattaforme non gestite all'esterno di .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="42757-106">Because the definition of a procedure inside an interface does not include any implementation, it cannot interoperate with unmanaged platforms outside the .NET Framework.</span></span>  
   
- <span data-ttu-id="97fac-107">**ID errore:** BC31530</span><span class="sxs-lookup"><span data-stu-id="97fac-107">**Error ID:** BC31530</span></span>  
+ <span data-ttu-id="42757-107">**ID errore:** BC31530</span><span class="sxs-lookup"><span data-stu-id="42757-107">**Error ID:** BC31530</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="97fac-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97fac-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="42757-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="42757-108">To correct this error</span></span>  
   
-- <span data-ttu-id="97fac-109">Rimuovere <xref:System.Runtime.InteropServices.DllImportAttribute> dalla definizione di questa routine.</span><span class="sxs-lookup"><span data-stu-id="97fac-109">Remove the <xref:System.Runtime.InteropServices.DllImportAttribute> from the definition of this procedure.</span></span>  
+- <span data-ttu-id="42757-109">Rimuovere <xref:System.Runtime.InteropServices.DllImportAttribute> dalla definizione di questa routine.</span><span class="sxs-lookup"><span data-stu-id="42757-109">Remove the <xref:System.Runtime.InteropServices.DllImportAttribute> from the definition of this procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="97fac-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97fac-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="42757-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="42757-110">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [<span data-ttu-id="97fac-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="97fac-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="42757-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="42757-111">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
