--- a/docs/visual-basic/misc/bc32020.md
+++ b/docs/visual-basic/misc/bc32020.md
@@ -1,5 +1,5 @@
 ---
-title: previsto ' =' (Let o set Assignment)
+title: Previsto '=' (assegnazione Let o Set)
 ms.date: 07/20/2015
 f1_keywords:
 - bc32020
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32020
 ms.assetid: 1b12f082-e502-4524-9326-b9b372670243
-ms.openlocfilehash: 94d4c241dddb44b4296ac8245993f96f049dc567
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 53659b21a23b9c0a29bd80e0add9143d879d2b8b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667603"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412039"
 ---
-# <a name="-expected-let-or-set-assignment"></a><span data-ttu-id="28537-102">previsto ' =' (Let o set Assignment)</span><span class="sxs-lookup"><span data-stu-id="28537-102">'=' expected (Let or Set assignment)</span></span>
-<span data-ttu-id="28537-103">Un' `Let` istruzione `Set` di assegnazione o non include un segno di uguale`=`().</span><span class="sxs-lookup"><span data-stu-id="28537-103">A `Let` or `Set` assignment statement does not include an equal sign (`=`).</span></span>  
+# <a name="-expected-let-or-set-assignment"></a><span data-ttu-id="b5ebd-102">Previsto '=' (assegnazione Let o Set)</span><span class="sxs-lookup"><span data-stu-id="b5ebd-102">'=' expected (Let or Set assignment)</span></span>
+<span data-ttu-id="b5ebd-103">Un' `Let` istruzione di assegnazione o non `Set` include un segno di uguale ( `=` ).</span><span class="sxs-lookup"><span data-stu-id="b5ebd-103">A `Let` or `Set` assignment statement does not include an equal sign (`=`).</span></span>  
   
- <span data-ttu-id="28537-104">Le `Let` istruzioni `Set` di assegnazione e non sono supportate nella versione corrente di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="28537-104">The `Let` and `Set` assignment statements are not supported in the current version of Visual Basic.</span></span> <span data-ttu-id="28537-105">Il compilatore è in grado di determinare il tipo di assegnazione dal tipo di dati dell'elemento di programmazione che deve ricevere il valore.</span><span class="sxs-lookup"><span data-stu-id="28537-105">The compiler can determine the type of assignment from the data type of the programming element that is to receive the value.</span></span> <span data-ttu-id="28537-106">Un'assegnazione del *tipo* di valore `Let` sostituisce l'istruzione e un'assegnazione del *tipo* di riferimento `Set` sostituisce l'istruzione precedente.</span><span class="sxs-lookup"><span data-stu-id="28537-106">A *value type* assignment replaces the `Let` statement, and a *reference type* assignment replaces the former `Set` statement.</span></span>  
+ <span data-ttu-id="b5ebd-104">Le `Let` `Set` istruzioni di assegnazione e non sono supportate nella versione corrente di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="b5ebd-104">The `Let` and `Set` assignment statements are not supported in the current version of Visual Basic.</span></span> <span data-ttu-id="b5ebd-105">Il compilatore è in grado di determinare il tipo di assegnazione dal tipo di dati dell'elemento di programmazione che deve ricevere il valore.</span><span class="sxs-lookup"><span data-stu-id="b5ebd-105">The compiler can determine the type of assignment from the data type of the programming element that is to receive the value.</span></span> <span data-ttu-id="b5ebd-106">Un'assegnazione del *tipo di valore* sostituisce l' `Let` istruzione e un'assegnazione del *tipo di riferimento* sostituisce l' `Set` istruzione precedente.</span><span class="sxs-lookup"><span data-stu-id="b5ebd-106">A *value type* assignment replaces the `Let` statement, and a *reference type* assignment replaces the former `Set` statement.</span></span>  
   
- <span data-ttu-id="28537-107">L' [istruzione set](../../visual-basic/language-reference/statements/set-statement.md) viene utilizzata nelle definizioni di proprietà e non ha alcuna relazione `Set` con l'istruzione di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="28537-107">The [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) is used in property definitions and has no relation to the `Set` assignment statement.</span></span>  
+ <span data-ttu-id="b5ebd-107">L' [istruzione set](../language-reference/statements/set-statement.md) viene utilizzata nelle definizioni di proprietà e non ha alcuna relazione con l' `Set` istruzione di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="b5ebd-107">The [Set Statement](../language-reference/statements/set-statement.md) is used in property definitions and has no relation to the `Set` assignment statement.</span></span>  
   
- <span data-ttu-id="28537-108">**ID errore:** BC32020</span><span class="sxs-lookup"><span data-stu-id="28537-108">**Error ID:** BC32020</span></span>  
+ <span data-ttu-id="b5ebd-108">**ID errore:** BC32020</span><span class="sxs-lookup"><span data-stu-id="b5ebd-108">**Error ID:** BC32020</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="28537-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="28537-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b5ebd-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b5ebd-109">To correct this error</span></span>  
   
-- <span data-ttu-id="28537-110">Utilizzare un'istruzione di assegnazione standard, includendo un segno`=`di uguale () e un valore da assegnare alla variabile o alla proprietà.</span><span class="sxs-lookup"><span data-stu-id="28537-110">Use a standard assignment statement, including an equal sign (`=`) and a value to be assigned to the variable or property.</span></span>  
+- <span data-ttu-id="b5ebd-110">Utilizzare un'istruzione di assegnazione standard, includendo un segno di uguale ( `=` ) e un valore da assegnare alla variabile o alla proprietà.</span><span class="sxs-lookup"><span data-stu-id="b5ebd-110">Use a standard assignment statement, including an equal sign (`=`) and a value to be assigned to the variable or property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="28537-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="28537-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b5ebd-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b5ebd-111">See also</span></span>
 
-- [<span data-ttu-id="28537-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="28537-112">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="28537-113">Operatori di assegnazione (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="28537-113">Assignment operators (Visual Basic)</span></span>](../language-reference/operators/assignment-operators.md)
+- [<span data-ttu-id="b5ebd-112">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="b5ebd-112">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="b5ebd-113">Operatori di assegnazione (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b5ebd-113">Assignment operators (Visual Basic)</span></span>](../language-reference/operators/assignment-operators.md)
