--- a/docs/visual-basic/misc/bc42308.md
+++ b/docs/visual-basic/misc/bc42308.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42308
 ms.assetid: ff619982-84ef-44c4-8be0-b65e43099af1
-ms.openlocfilehash: 3b148ed751e164480ae3ae360166e51b6947f61b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f085e14a854b63344a8f4494dab80822ab29f9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663099"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413492"
 ---
-# <a name="xml-comment-parameter-must-have-a-name-attribute"></a><span data-ttu-id="cae1d-102">Il parametro di commento XML deve avere un attributo 'name'</span><span class="sxs-lookup"><span data-stu-id="cae1d-102">XML comment parameter must have a 'name' attribute</span></span>
-<span data-ttu-id="cae1d-103">Il parametro di commento XML deve avere un attributo 'name'.</span><span class="sxs-lookup"><span data-stu-id="cae1d-103">XML comment parameter must have a 'name' attribute.</span></span> <span data-ttu-id="cae1d-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="cae1d-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-parameter-must-have-a-name-attribute"></a><span data-ttu-id="974c0-102">Il parametro di commento XML deve avere un attributo 'name'</span><span class="sxs-lookup"><span data-stu-id="974c0-102">XML comment parameter must have a 'name' attribute</span></span>
+<span data-ttu-id="974c0-103">Il parametro di commento XML deve avere un attributo 'name'.</span><span class="sxs-lookup"><span data-stu-id="974c0-103">XML comment parameter must have a 'name' attribute.</span></span> <span data-ttu-id="974c0-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="974c0-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="cae1d-105">Nel tag XML manca un attributo `name` obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="cae1d-105">The XML tag is missing a required `name` attribute.</span></span>  
+ <span data-ttu-id="974c0-105">Nel tag XML manca un attributo `name` obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="974c0-105">The XML tag is missing a required `name` attribute.</span></span>  
   
- <span data-ttu-id="cae1d-106">**ID errore:** BC42308</span><span class="sxs-lookup"><span data-stu-id="cae1d-106">**Error ID:** BC42308</span></span>  
+ <span data-ttu-id="974c0-106">**ID errore:** BC42308</span><span class="sxs-lookup"><span data-stu-id="974c0-106">**Error ID:** BC42308</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cae1d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cae1d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="974c0-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="974c0-107">To correct this error</span></span>  
   
-- <span data-ttu-id="cae1d-108">Fornire l'attributo `name` obbligatorio per il tag.</span><span class="sxs-lookup"><span data-stu-id="cae1d-108">Provide the required `name` attribute for the tag.</span></span>  
+- <span data-ttu-id="974c0-108">Fornire l'attributo `name` obbligatorio per il tag.</span><span class="sxs-lookup"><span data-stu-id="974c0-108">Provide the required `name` attribute for the tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cae1d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cae1d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="974c0-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="974c0-109">See also</span></span>
 
-- [<span data-ttu-id="cae1d-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="cae1d-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="cae1d-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="cae1d-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="974c0-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="974c0-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="974c0-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="974c0-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
