--- a/docs/visual-basic/misc/bc30252.md
+++ b/docs/visual-basic/misc/bc30252.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30252
 ms.assetid: 1a2c3278-5dd7-4a72-9dca-3f2a5bdfd04c
-ms.openlocfilehash: ed7a66627693389ca2e4dbc87bcfd8796c0ba3af
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8d3486b379ef43f93e858a95c15dac82092d83c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61768303"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359062"
 ---
-# <a name="end-interface-must-be-preceded-by-a-matching-interface"></a><span data-ttu-id="aaa7e-102">'End Interface' deve essere preceduto da un oggetto 'Interface' corrispondente</span><span class="sxs-lookup"><span data-stu-id="aaa7e-102">'End Interface' must be preceded by a matching 'Interface'</span></span>
-<span data-ttu-id="aaa7e-103">Un'istruzione `End Interface` si verifica senza un'istruzione `Interface` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="aaa7e-103">An `End Interface` statement occurs without a corresponding `Interface` statement.</span></span> <span data-ttu-id="aaa7e-104">`End Interface` deve essere preceduto da un'istruzione `Interface` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="aaa7e-104">`End Interface` must be preceded by a corresponding `Interface` statement.</span></span>  
+# <a name="end-interface-must-be-preceded-by-a-matching-interface"></a><span data-ttu-id="31c2b-102">'End Interface' deve essere preceduto da un oggetto 'Interface' corrispondente</span><span class="sxs-lookup"><span data-stu-id="31c2b-102">'End Interface' must be preceded by a matching 'Interface'</span></span>
+<span data-ttu-id="31c2b-103">Un'istruzione `End Interface` si verifica senza un'istruzione `Interface` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="31c2b-103">An `End Interface` statement occurs without a corresponding `Interface` statement.</span></span> <span data-ttu-id="31c2b-104">`End Interface` deve essere preceduto da un'istruzione `Interface` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="31c2b-104">`End Interface` must be preceded by a corresponding `Interface` statement.</span></span>  
   
- <span data-ttu-id="aaa7e-105">**ID errore:** BC30252</span><span class="sxs-lookup"><span data-stu-id="aaa7e-105">**Error ID:** BC30252</span></span>  
+ <span data-ttu-id="31c2b-105">**ID errore:** BC30252</span><span class="sxs-lookup"><span data-stu-id="31c2b-105">**Error ID:** BC30252</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aaa7e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aaa7e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="31c2b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="31c2b-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="aaa7e-107">Verificare che un'istruzione `Interface` precedente non sia stata digitata in modo non corretto o non sia valida.</span><span class="sxs-lookup"><span data-stu-id="aaa7e-107">Check to see if a preceding `Interface` statement is misspelled or otherwise invalid.</span></span>  
+1. <span data-ttu-id="31c2b-107">Verificare che un'istruzione `Interface` precedente non sia stata digitata in modo non corretto o non sia valida.</span><span class="sxs-lookup"><span data-stu-id="31c2b-107">Check to see if a preceding `Interface` statement is misspelled or otherwise invalid.</span></span>  
   
-2. <span data-ttu-id="aaa7e-108">Verificare che la formattazione dei membri `Interface` sia corretta.</span><span class="sxs-lookup"><span data-stu-id="aaa7e-108">Ensure that the `Interface` members are correctly formatted.</span></span>  
+2. <span data-ttu-id="31c2b-108">Verificare che la formattazione dei membri `Interface` sia corretta.</span><span class="sxs-lookup"><span data-stu-id="31c2b-108">Ensure that the `Interface` members are correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aaa7e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aaa7e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="31c2b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="31c2b-109">See also</span></span>
 
-- [<span data-ttu-id="aaa7e-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="aaa7e-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="31c2b-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="31c2b-110">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
