--- a/docs/visual-basic/misc/bc30626.md
+++ b/docs/visual-basic/misc/bc30626.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30626
 ms.assetid: d3c74252-0e71-4621-ad83-4e2183b7b442
-ms.openlocfilehash: 64b84a19e6f18de97872570cffafdb334fd5040e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b66a5131e148469594d1d9bf95a8a9e1f9c5f4a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646674"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415310"
 ---
-# <a name="namespace-statement-must-end-with-a-matching-end-namespace"></a><span data-ttu-id="f59ff-102">L'istruzione 'Namespace' deve terminare con un oggetto 'End Namespace' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f59ff-102">'Namespace' statement must end with a matching 'End Namespace'</span></span>
-<span data-ttu-id="f59ff-103">I blocchi`Namespace` devono terminare con un'istruzione `End Namespace` .</span><span class="sxs-lookup"><span data-stu-id="f59ff-103">`Namespace` blocks must end with an `End Namespace` statement.</span></span>  
+# <a name="namespace-statement-must-end-with-a-matching-end-namespace"></a><span data-ttu-id="80bfd-102">L'istruzione 'Namespace' deve terminare con un oggetto 'End Namespace' corrispondente</span><span class="sxs-lookup"><span data-stu-id="80bfd-102">'Namespace' statement must end with a matching 'End Namespace'</span></span>
+<span data-ttu-id="80bfd-103">I blocchi`Namespace` devono terminare con un'istruzione `End Namespace` .</span><span class="sxs-lookup"><span data-stu-id="80bfd-103">`Namespace` blocks must end with an `End Namespace` statement.</span></span>  
   
- <span data-ttu-id="f59ff-104">**ID errore:** BC30626</span><span class="sxs-lookup"><span data-stu-id="f59ff-104">**Error ID:** BC30626</span></span>  
+ <span data-ttu-id="80bfd-104">**ID errore:** BC30626</span><span class="sxs-lookup"><span data-stu-id="80bfd-104">**Error ID:** BC30626</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f59ff-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f59ff-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="80bfd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="80bfd-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f59ff-106">Aggiungere un'istruzione `End Namespace` alla fine del blocco `Namespace` .</span><span class="sxs-lookup"><span data-stu-id="f59ff-106">Add an `End Namespace` statement to the end of the `Namespace` block.</span></span>  
+- <span data-ttu-id="80bfd-106">Aggiungere un'istruzione `End Namespace` alla fine del blocco `Namespace` .</span><span class="sxs-lookup"><span data-stu-id="80bfd-106">Add an `End Namespace` statement to the end of the `Namespace` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f59ff-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f59ff-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="80bfd-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="80bfd-107">See also</span></span>
 
-- [<span data-ttu-id="f59ff-108">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="f59ff-108">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [<span data-ttu-id="f59ff-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f59ff-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="80bfd-108">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="80bfd-108">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="80bfd-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="80bfd-109">Namespaces in Visual Basic</span></span>](../programming-guide/program-structure/namespaces.md)
