--- a/docs/visual-basic/misc/bc30631.md
+++ b/docs/visual-basic/misc/bc30631.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30631
 ms.assetid: de7ca4a2-9951-4ac1-897a-aca78e89133f
-ms.openlocfilehash: 11ef3f40123b2a51064386a40c993ff40248818c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99e2ccc090f14a6fb227220da322a2a5208baadf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646621"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415219"
 ---
-# <a name="get-statement-must-end-with-a-matching-end-get"></a><span data-ttu-id="0bd3c-102">L'istruzione 'Get' deve terminare con un oggetto 'End Get' corrispondente</span><span class="sxs-lookup"><span data-stu-id="0bd3c-102">'Get' statement must end with a matching 'End Get'</span></span>
-<span data-ttu-id="0bd3c-103">Le routine della proprietà`Get` devono terminare con un'istruzione `End Get` .</span><span class="sxs-lookup"><span data-stu-id="0bd3c-103">`Get` property procedures must end with an `End Get` statement.</span></span>  
+# <a name="get-statement-must-end-with-a-matching-end-get"></a><span data-ttu-id="e8344-102">L'istruzione 'Get' deve terminare con un oggetto 'End Get' corrispondente</span><span class="sxs-lookup"><span data-stu-id="e8344-102">'Get' statement must end with a matching 'End Get'</span></span>
+<span data-ttu-id="e8344-103">Le routine della proprietà`Get` devono terminare con un'istruzione `End Get` .</span><span class="sxs-lookup"><span data-stu-id="e8344-103">`Get` property procedures must end with an `End Get` statement.</span></span>  
   
- <span data-ttu-id="0bd3c-104">**ID errore:** BC30631</span><span class="sxs-lookup"><span data-stu-id="0bd3c-104">**Error ID:** BC30631</span></span>  
+ <span data-ttu-id="e8344-104">**ID errore:** BC30631</span><span class="sxs-lookup"><span data-stu-id="e8344-104">**Error ID:** BC30631</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0bd3c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0bd3c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e8344-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e8344-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0bd3c-106">Verificare che la routine della proprietà `Get` termini con un costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="0bd3c-106">Make sure that the `Get` property procedure ends with an `End Get` construct.</span></span>  
+- <span data-ttu-id="e8344-106">Verificare che la routine della proprietà `Get` termini con un costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="e8344-106">Make sure that the `Get` property procedure ends with an `End Get` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0bd3c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0bd3c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e8344-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e8344-107">See also</span></span>
 
-- [<span data-ttu-id="0bd3c-108">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="0bd3c-108">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="e8344-108">Property Statement</span><span class="sxs-lookup"><span data-stu-id="e8344-108">Property Statement</span></span>](../language-reference/statements/property-statement.md)
