--- a/docs/visual-basic/misc/bc30632.md
+++ b/docs/visual-basic/misc/bc30632.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30632
 ms.assetid: 0c3dd065-566b-485c-9996-6177eb0fde39
-ms.openlocfilehash: 6eb9b471223ad87ddf5fff1d13762f62aa829671
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 41b5d56b1b2dac72654191122febb980e616682b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61759239"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415206"
 ---
-# <a name="end-set-must-be-preceded-by-a-matching-set"></a><span data-ttu-id="f650e-102">'End Set' deve essere preceduto da un 'Set' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f650e-102">'End Set' must be preceded by a matching 'Set'</span></span>
-<span data-ttu-id="f650e-103">`End Set` viene usato per terminare le routine della proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="f650e-103">`End Set` is used to terminate `Set` property procedures.</span></span> <span data-ttu-id="f650e-104">Il costrutto `End Set` è stato rilevato all'esterno di una routine della proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="f650e-104">The `End Set` construct was encountered outside a `Set` property procedure.</span></span>  
+# <a name="end-set-must-be-preceded-by-a-matching-set"></a><span data-ttu-id="c1a18-102">'End Set' deve essere preceduto da un 'Set' corrispondente</span><span class="sxs-lookup"><span data-stu-id="c1a18-102">'End Set' must be preceded by a matching 'Set'</span></span>
+<span data-ttu-id="c1a18-103">`End Set` viene usato per terminare le routine della proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="c1a18-103">`End Set` is used to terminate `Set` property procedures.</span></span> <span data-ttu-id="c1a18-104">Il costrutto `End Set` è stato rilevato all'esterno di una routine della proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="c1a18-104">The `End Set` construct was encountered outside a `Set` property procedure.</span></span>  
   
- <span data-ttu-id="f650e-105">**ID errore:** BC30632</span><span class="sxs-lookup"><span data-stu-id="f650e-105">**Error ID:** BC30632</span></span>  
+ <span data-ttu-id="c1a18-105">**ID errore:** BC30632</span><span class="sxs-lookup"><span data-stu-id="c1a18-105">**Error ID:** BC30632</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f650e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f650e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c1a18-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1a18-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="f650e-107">Verificare che la routine della proprietà `Set` venga dichiarata dopo una parola chiave `Property` e prima del costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="f650e-107">Make sure that the `Set` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
+1. <span data-ttu-id="c1a18-107">Verificare che la routine della proprietà `Set` venga dichiarata dopo una parola chiave `Property` e prima del costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="c1a18-107">Make sure that the `Set` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
   
-2. <span data-ttu-id="f650e-108">Verificare che la routine della proprietà `Set` inizi dopo una parola chiave `Set` e termini con un costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="f650e-108">Make sure that the `Set` property procedure begins with the `Set` keyword and ends with an `End Set` construct.</span></span>  
+2. <span data-ttu-id="c1a18-108">Verificare che la routine della proprietà `Set` inizi dopo una parola chiave `Set` e termini con un costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="c1a18-108">Make sure that the `Set` property procedure begins with the `Set` keyword and ends with an `End Set` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f650e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f650e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c1a18-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1a18-109">See also</span></span>
 
-- [<span data-ttu-id="f650e-110">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="f650e-110">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="c1a18-110">Property Statement</span><span class="sxs-lookup"><span data-stu-id="c1a18-110">Property Statement</span></span>](../language-reference/statements/property-statement.md)
