--- a/docs/visual-basic/misc/bc30635.md
+++ b/docs/visual-basic/misc/bc30635.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30635
 ms.assetid: 36974424-9d67-434d-a86f-635b7f59a730
-ms.openlocfilehash: b44c93ef8d30a4755d633c403879932345834fdd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 192836ec7917cd7fdcdfaa9bb3aa2a8186d43dda
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646571"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415193"
 ---
-# <a name="readonly-and-writeonly-cannot-be-combined"></a><span data-ttu-id="0bdc2-102">Non è possibile combinare 'ReadOnly' e 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="0bdc2-102">'ReadOnly' and 'WriteOnly' cannot be combined</span></span>
-<span data-ttu-id="0bdc2-103">I modificatori `ReadOnly` e `WriteOnly` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="0bdc2-103">The `ReadOnly` and `WriteOnly` modifiers are mutually exclusive.</span></span>  
+# <a name="readonly-and-writeonly-cannot-be-combined"></a><span data-ttu-id="29734-102">Non è possibile combinare 'ReadOnly' e 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="29734-102">'ReadOnly' and 'WriteOnly' cannot be combined</span></span>
+<span data-ttu-id="29734-103">I modificatori `ReadOnly` e `WriteOnly` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="29734-103">The `ReadOnly` and `WriteOnly` modifiers are mutually exclusive.</span></span>  
   
- <span data-ttu-id="0bdc2-104">**ID errore:** BC30635</span><span class="sxs-lookup"><span data-stu-id="0bdc2-104">**Error ID:** BC30635</span></span>  
+ <span data-ttu-id="29734-104">**ID errore:** BC30635</span><span class="sxs-lookup"><span data-stu-id="29734-104">**Error ID:** BC30635</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0bdc2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0bdc2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="29734-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="29734-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0bdc2-106">Specificare `ReadOnly` o `WriteOnly`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="0bdc2-106">Specify either `ReadOnly` or `WriteOnly`, but not both.</span></span>  
+- <span data-ttu-id="29734-106">Specificare `ReadOnly` o `WriteOnly`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="29734-106">Specify either `ReadOnly` or `WriteOnly`, but not both.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0bdc2-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0bdc2-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="29734-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="29734-107">See also</span></span>
 
-- [<span data-ttu-id="0bdc2-108">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="0bdc2-108">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
-- [<span data-ttu-id="0bdc2-109">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="0bdc2-109">WriteOnly</span></span>](../../visual-basic/language-reference/modifiers/writeonly.md)
+- [<span data-ttu-id="29734-108">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="29734-108">ReadOnly</span></span>](../language-reference/modifiers/readonly.md)
+- [<span data-ttu-id="29734-109">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="29734-109">WriteOnly</span></span>](../language-reference/modifiers/writeonly.md)
