--- a/docs/visual-basic/misc/bc30636.md
+++ b/docs/visual-basic/misc/bc30636.md
@@ -1,5 +1,5 @@
 ---
-title: previsto ' >'
+title: Previsto ' >'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30636
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30636
 ms.assetid: 37d7115d-0fbf-4ac4-9065-b7580e116bdd
-ms.openlocfilehash: 5eb876af4053361293011f88893e7828f80202dd
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: c1315d22dcbcfc3e6d6e1347d710e39ecb3cea00
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667170"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415154"
 ---
-# <a name="-expected"></a><span data-ttu-id="2598a-102">previsto ' >'</span><span class="sxs-lookup"><span data-stu-id="2598a-102">'>' expected</span></span>
-<span data-ttu-id="2598a-103">La sintassi per il codice specificato non è corretta.</span><span class="sxs-lookup"><span data-stu-id="2598a-103">The syntax for the specified code is incorrect.</span></span> <span data-ttu-id="2598a-104">Questo errore indica spesso che manca la parentesi angolare di chiusura per un attributo o valore letterale elemento XML.</span><span class="sxs-lookup"><span data-stu-id="2598a-104">This error often indicates that the closing angle bracket for an attribute or XML element literal is missing.</span></span>  
+# <a name="-expected"></a><span data-ttu-id="a4e61-102">Previsto ' >'</span><span class="sxs-lookup"><span data-stu-id="a4e61-102">'>' expected</span></span>
+<span data-ttu-id="a4e61-103">La sintassi per il codice specificato non è corretta.</span><span class="sxs-lookup"><span data-stu-id="a4e61-103">The syntax for the specified code is incorrect.</span></span> <span data-ttu-id="a4e61-104">Questo errore indica spesso che manca la parentesi angolare di chiusura per un attributo o valore letterale elemento XML.</span><span class="sxs-lookup"><span data-stu-id="a4e61-104">This error often indicates that the closing angle bracket for an attribute or XML element literal is missing.</span></span>  
   
- <span data-ttu-id="2598a-105">**ID errore:** BC30636</span><span class="sxs-lookup"><span data-stu-id="2598a-105">**Error ID:** BC30636</span></span>  
+ <span data-ttu-id="a4e61-105">**ID errore:** BC30636</span><span class="sxs-lookup"><span data-stu-id="a4e61-105">**Error ID:** BC30636</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2598a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2598a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a4e61-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a4e61-106">To correct this error</span></span>  
   
-- <span data-ttu-id="2598a-107">Controllare la sintassi per il codice in uso.</span><span class="sxs-lookup"><span data-stu-id="2598a-107">Check the syntax for the code being used.</span></span>  
+- <span data-ttu-id="a4e61-107">Controllare la sintassi per il codice in uso.</span><span class="sxs-lookup"><span data-stu-id="a4e61-107">Check the syntax for the code being used.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2598a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2598a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a4e61-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a4e61-108">See also</span></span>
 
-- [<span data-ttu-id="2598a-109">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="2598a-109">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
-- [<span data-ttu-id="2598a-110">Istruzioni di dichiarazione</span><span class="sxs-lookup"><span data-stu-id="2598a-110">Declaration Statements</span></span>](../programming-guide/language-features/statements.md#declaration-statements)
-- [<span data-ttu-id="2598a-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="2598a-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+- [<span data-ttu-id="a4e61-109">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="a4e61-109">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="a4e61-110">Istruzioni di dichiarazione</span><span class="sxs-lookup"><span data-stu-id="a4e61-110">Declaration Statements</span></span>](../programming-guide/language-features/statements.md#declaration-statements)
+- [<span data-ttu-id="a4e61-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="a4e61-111">XML Literals</span></span>](../language-reference/xml-literals/index.md)
