--- a/docs/visual-basic/misc/bc30639.md
+++ b/docs/visual-basic/misc/bc30639.md
@@ -1,5 +1,5 @@
 ---
-title: Le proprietà non possono essere dichiarate '<modifiername>'
+title: Le proprietà non possono essere dichiarate ' <modifiername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30639
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30639
 ms.assetid: 6d7005a2-b1c9-4eb4-ac77-8c7e2c802984
-ms.openlocfilehash: fd82b706efaadf706a52f9337bd92ae1c0c585b7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 738594e3538257878e543ccc6cea17047b5e2258
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646585"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415141"
 ---
-# <a name="properties-cannot-be-declared-modifiername"></a><span data-ttu-id="ac5bf-102">Le proprietà non possono essere dichiarate '\<nomemodificatore >'</span><span class="sxs-lookup"><span data-stu-id="ac5bf-102">Properties cannot be declared '\<modifiername>'</span></span>
-<span data-ttu-id="ac5bf-103">La sintassi della dichiarazione `Property` contiene un errore.</span><span class="sxs-lookup"><span data-stu-id="ac5bf-103">There is an error in the syntax used in the `Property` declaration.</span></span> <span data-ttu-id="ac5bf-104">Questo errore in genere si verifica quando si è specificata una parola chiave che non può essere usata in una dichiarazione `WithEvents`, ad esempio `Property` .</span><span class="sxs-lookup"><span data-stu-id="ac5bf-104">This error generally indicates that a specified keyword, such as `WithEvents`, cannot be used in a `Property` declaration.</span></span>  
+# <a name="properties-cannot-be-declared-modifiername"></a><span data-ttu-id="51614-102">Le proprietà non possono essere dichiarate ' \<modifiername> '</span><span class="sxs-lookup"><span data-stu-id="51614-102">Properties cannot be declared '\<modifiername>'</span></span>
+<span data-ttu-id="51614-103">La sintassi della dichiarazione `Property` contiene un errore.</span><span class="sxs-lookup"><span data-stu-id="51614-103">There is an error in the syntax used in the `Property` declaration.</span></span> <span data-ttu-id="51614-104">Questo errore in genere si verifica quando si è specificata una parola chiave che non può essere usata in una dichiarazione `WithEvents`, ad esempio `Property` .</span><span class="sxs-lookup"><span data-stu-id="51614-104">This error generally indicates that a specified keyword, such as `WithEvents`, cannot be used in a `Property` declaration.</span></span>  
   
- <span data-ttu-id="ac5bf-105">**ID errore:** BC30639</span><span class="sxs-lookup"><span data-stu-id="ac5bf-105">**Error ID:** BC30639</span></span>  
+ <span data-ttu-id="51614-105">**ID errore:** BC30639</span><span class="sxs-lookup"><span data-stu-id="51614-105">**Error ID:** BC30639</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac5bf-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ac5bf-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="51614-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="51614-106">To correct this error</span></span>  
   
-- <span data-ttu-id="ac5bf-107">Controllare la sintassi della dichiarazione `Property` .</span><span class="sxs-lookup"><span data-stu-id="ac5bf-107">Check the syntax for the `Property` declaration.</span></span>  
+- <span data-ttu-id="51614-107">Controllare la sintassi della dichiarazione `Property` .</span><span class="sxs-lookup"><span data-stu-id="51614-107">Check the syntax for the `Property` declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac5bf-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ac5bf-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="51614-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="51614-108">See also</span></span>
 
-- [<span data-ttu-id="ac5bf-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="ac5bf-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="51614-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="51614-109">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
