--- a/docs/visual-basic/misc/bc30647.md
+++ b/docs/visual-basic/misc/bc30647.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30647
 ms.assetid: d4c05c28-d650-4f49-976e-650d84802036
-ms.openlocfilehash: d9abcd9b0b352292f11b389ed0481ae08786cfa9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 18508c0f0648f0e10ae9367a07571f4021d7c645
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646503"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415076"
 ---
-# <a name="return-statement-in-a-sub-or-a-set-cannot-return-a-value"></a><span data-ttu-id="85a4b-102">L'istruzione 'Return' in un Sub o Set non può restituire un valore</span><span class="sxs-lookup"><span data-stu-id="85a4b-102">'Return' statement in a Sub or a Set cannot return a value</span></span>
-<span data-ttu-id="85a4b-103">Le routine`Sub` e le routine `Set` di proprietà non possono restituire valori.</span><span class="sxs-lookup"><span data-stu-id="85a4b-103">`Sub` procedures and property `Set` procedures cannot return values.</span></span>  
+# <a name="return-statement-in-a-sub-or-a-set-cannot-return-a-value"></a><span data-ttu-id="841c4-102">L'istruzione 'Return' in un Sub o Set non può restituire un valore</span><span class="sxs-lookup"><span data-stu-id="841c4-102">'Return' statement in a Sub or a Set cannot return a value</span></span>
+<span data-ttu-id="841c4-103">Le routine`Sub` e le routine `Set` di proprietà non possono restituire valori.</span><span class="sxs-lookup"><span data-stu-id="841c4-103">`Sub` procedures and property `Set` procedures cannot return values.</span></span>  
   
- <span data-ttu-id="85a4b-104">**ID errore:** BC30647</span><span class="sxs-lookup"><span data-stu-id="85a4b-104">**Error ID:** BC30647</span></span>  
+ <span data-ttu-id="841c4-104">**ID errore:** BC30647</span><span class="sxs-lookup"><span data-stu-id="841c4-104">**Error ID:** BC30647</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="85a4b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="85a4b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="841c4-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="841c4-105">To correct this error</span></span>  
   
-- <span data-ttu-id="85a4b-106">Modificare la routine corrente in una funzione oppure in una routine della proprietà `Get` se la routine corrente fa parte di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="85a4b-106">Change the current procedure to a function, or to a `Get` property procedure if the current procedure is part of a property.</span></span>  
+- <span data-ttu-id="841c4-106">Modificare la routine corrente in una funzione oppure in una routine della proprietà `Get` se la routine corrente fa parte di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="841c4-106">Change the current procedure to a function, or to a `Get` property procedure if the current procedure is part of a property.</span></span>  
   
-- <span data-ttu-id="85a4b-107">È possibile restituire valori dalle routine `Sub` modificando il valore dei parametri passati dal riferimento tramite la parola chiave `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="85a4b-107">You can effectively return values from `Sub` procedures by modifying the value of parameters passed by reference using the `ByRef` keyword.</span></span>  
+- <span data-ttu-id="841c4-107">È possibile restituire valori dalle routine `Sub` modificando il valore dei parametri passati dal riferimento tramite la parola chiave `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="841c4-107">You can effectively return values from `Sub` procedures by modifying the value of parameters passed by reference using the `ByRef` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="85a4b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="85a4b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="841c4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="841c4-108">See also</span></span>
 
-- [<span data-ttu-id="85a4b-109">Istruzione Return</span><span class="sxs-lookup"><span data-stu-id="85a4b-109">Return Statement</span></span>](../../visual-basic/language-reference/statements/return-statement.md)
-- [<span data-ttu-id="85a4b-110">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="85a4b-110">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="85a4b-111">Routine Function</span><span class="sxs-lookup"><span data-stu-id="85a4b-111">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="85a4b-112">Routine Property</span><span class="sxs-lookup"><span data-stu-id="85a4b-112">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="841c4-109">Return (istruzione)</span><span class="sxs-lookup"><span data-stu-id="841c4-109">Return Statement</span></span>](../language-reference/statements/return-statement.md)
+- [<span data-ttu-id="841c4-110">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="841c4-110">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="841c4-111">Routine Function</span><span class="sxs-lookup"><span data-stu-id="841c4-111">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="841c4-112">Routine Property</span><span class="sxs-lookup"><span data-stu-id="841c4-112">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
