--- a/docs/visual-basic/misc/bc30649.md
+++ b/docs/visual-basic/misc/bc30649.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo non supportato"
+title: "' <typename> ' è un tipo non supportato"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30649
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30649
 ms.assetid: fc44494c-9603-42ab-9780-9d2286015180
-ms.openlocfilehash: 758f7ee576e7c023ba8bcfc941f5c20ebcee635e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c40b165e760a64395a5357ddcb0615cfac9a8d8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646491"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415063"
 ---
-# <a name="typename-is-an-unsupported-type"></a><span data-ttu-id="23568-102">'\<nomeTipo >' è un tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="23568-102">'\<typename>' is an unsupported type</span></span>
-<span data-ttu-id="23568-103">Il tipo specificato non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="23568-103">The type specified cannot be represented by Visual Studio.</span></span>  
+# <a name="typename-is-an-unsupported-type"></a><span data-ttu-id="5aafe-102">' \<typename> ' è un tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="5aafe-102">'\<typename>' is an unsupported type</span></span>
+<span data-ttu-id="5aafe-103">Il tipo specificato non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="5aafe-103">The type specified cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="23568-104">**ID errore:** BC30649</span><span class="sxs-lookup"><span data-stu-id="23568-104">**Error ID:** BC30649</span></span>  
+ <span data-ttu-id="5aafe-104">**ID errore:** BC30649</span><span class="sxs-lookup"><span data-stu-id="5aafe-104">**Error ID:** BC30649</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="23568-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="23568-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5aafe-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5aafe-105">To correct this error</span></span>  
   
-- <span data-ttu-id="23568-106">Usare un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="23568-106">Use a supported type.</span></span>  
+- <span data-ttu-id="5aafe-106">Usare un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="5aafe-106">Use a supported type.</span></span>  
   
-- <span data-ttu-id="23568-107">Sviluppare un nuovo tipo.</span><span class="sxs-lookup"><span data-stu-id="23568-107">Develop a new type.</span></span>  
+- <span data-ttu-id="5aafe-107">Sviluppare un nuovo tipo.</span><span class="sxs-lookup"><span data-stu-id="5aafe-107">Develop a new type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="23568-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="23568-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5aafe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5aafe-108">See also</span></span>
 
-- [<span data-ttu-id="23568-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="23568-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
+- [<span data-ttu-id="5aafe-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="5aafe-109">Data Types</span></span>](../language-reference/data-types/index.md)
