--- a/docs/visual-basic/misc/bc30651.md
+++ b/docs/visual-basic/misc/bc30651.md
@@ -1,5 +1,5 @@
 ---
-title: <Property> parametri non possono essere dichiarati 'ByRef'
+title: <Property>I parametri  non possono essere dichiarati 'ByRef'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30651
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30651
 ms.assetid: d36d1f91-6703-4465-8ba8-c7630e616916
-ms.openlocfilehash: 48b3dca703dbb04351b9237d668385cf5a21fab8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4292c252e73a727caaa93fd954894a0afc772941
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646466"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415024"
 ---
-# <a name="property-parameters-cannot-be-declared-byref"></a><span data-ttu-id="b4bd9-102">\<Proprietà > parametri non possono essere dichiarati 'ByRef'</span><span class="sxs-lookup"><span data-stu-id="b4bd9-102">\<Property> parameters cannot be declared 'ByRef'</span></span>
-<span data-ttu-id="b4bd9-103">I parametri per le proprietà devono essere dichiarati usando il modificatore `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="b4bd9-103">Parameters for properties must be declared using the `ByVal` modifier.</span></span>  
+# <a name="property-parameters-cannot-be-declared-byref"></a><span data-ttu-id="6c3ea-102">\<Property>I parametri  non possono essere dichiarati 'ByRef'</span><span class="sxs-lookup"><span data-stu-id="6c3ea-102">\<Property> parameters cannot be declared 'ByRef'</span></span>
+<span data-ttu-id="6c3ea-103">I parametri per le proprietà devono essere dichiarati usando il modificatore `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="6c3ea-103">Parameters for properties must be declared using the `ByVal` modifier.</span></span>  
   
- <span data-ttu-id="b4bd9-104">**ID errore:** BC30651</span><span class="sxs-lookup"><span data-stu-id="b4bd9-104">**Error ID:** BC30651</span></span>  
+ <span data-ttu-id="6c3ea-104">**ID errore:** BC30651</span><span class="sxs-lookup"><span data-stu-id="6c3ea-104">**Error ID:** BC30651</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b4bd9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4bd9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6c3ea-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6c3ea-105">To correct this error</span></span>  
   
-- <span data-ttu-id="b4bd9-106">Definire i parametri di proprietà come `ByVal`.</span><span class="sxs-lookup"><span data-stu-id="b4bd9-106">Define property parameters as `ByVal`.</span></span>  
+- <span data-ttu-id="6c3ea-106">Definire i parametri di proprietà come `ByVal`.</span><span class="sxs-lookup"><span data-stu-id="6c3ea-106">Define property parameters as `ByVal`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b4bd9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4bd9-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6c3ea-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6c3ea-107">See also</span></span>
 
-- [<span data-ttu-id="b4bd9-108">ByVal</span><span class="sxs-lookup"><span data-stu-id="b4bd9-108">ByVal</span></span>](../../visual-basic/language-reference/modifiers/byval.md)
-- [<span data-ttu-id="b4bd9-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="b4bd9-109">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
+- [<span data-ttu-id="6c3ea-108">ByVal</span><span class="sxs-lookup"><span data-stu-id="6c3ea-108">ByVal</span></span>](../language-reference/modifiers/byval.md)
+- [<span data-ttu-id="6c3ea-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="6c3ea-109">ByRef</span></span>](../language-reference/modifiers/byref.md)
