--- a/docs/visual-basic/misc/bc30666.md
+++ b/docs/visual-basic/misc/bc30666.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30666
 ms.assetid: a208a6ea-0e36-4bf1-8984-4de1a0e38a2a
-ms.openlocfilehash: 17e7817c608e9c3513e0320b62f42410613f33b0
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c4ab115b01e78c245cbd9f564b50573d6e30c5e7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61666040"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414933"
 ---
-# <a name="throw-statement-cannot-omit-operand-outside-a-catch-statement-or-inside-a-finally-statement"></a><span data-ttu-id="38bdc-102">L'istruzione 'Throw' non può omettere l'operando all'esterno di un'istruzione 'Catch' o all'interno di un'istruzione 'Finally'</span><span class="sxs-lookup"><span data-stu-id="38bdc-102">'Throw' statement cannot omit operand outside a 'Catch' statement or inside a 'Finally' statement</span></span>
-<span data-ttu-id="38bdc-103">Le istruzioni`Throw` di fuori dell'istruzione `Catch` devono fornire il nome di un oggetto eccezione.</span><span class="sxs-lookup"><span data-stu-id="38bdc-103">`Throw` statements outside of `Catch` statement must supply the name of an exception object.</span></span>  
+# <a name="throw-statement-cannot-omit-operand-outside-a-catch-statement-or-inside-a-finally-statement"></a><span data-ttu-id="570ed-102">L'istruzione 'Throw' non può omettere l'operando all'esterno di un'istruzione 'Catch' o all'interno di un'istruzione 'Finally'</span><span class="sxs-lookup"><span data-stu-id="570ed-102">'Throw' statement cannot omit operand outside a 'Catch' statement or inside a 'Finally' statement</span></span>
+<span data-ttu-id="570ed-103">Le istruzioni`Throw` di fuori dell'istruzione `Catch` devono fornire il nome di un oggetto eccezione.</span><span class="sxs-lookup"><span data-stu-id="570ed-103">`Throw` statements outside of `Catch` statement must supply the name of an exception object.</span></span>  
   
- <span data-ttu-id="38bdc-104">**ID errore:** BC30666</span><span class="sxs-lookup"><span data-stu-id="38bdc-104">**Error ID:** BC30666</span></span>  
+ <span data-ttu-id="570ed-104">**ID errore:** BC30666</span><span class="sxs-lookup"><span data-stu-id="570ed-104">**Error ID:** BC30666</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="38bdc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="38bdc-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="570ed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="570ed-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="38bdc-106">Specificare il nome di un oggetto eccezione derivato da `System.Exception`.</span><span class="sxs-lookup"><span data-stu-id="38bdc-106">Specify the name of an exception object derived from `System.Exception`.</span></span>  
+1. <span data-ttu-id="570ed-106">Specificare il nome di un oggetto eccezione derivato da `System.Exception`.</span><span class="sxs-lookup"><span data-stu-id="570ed-106">Specify the name of an exception object derived from `System.Exception`.</span></span>  
   
-2. <span data-ttu-id="38bdc-107">Ristrutturare il codice in modo che l'istruzione `Throw` si trovi in un blocco `Catch` .</span><span class="sxs-lookup"><span data-stu-id="38bdc-107">Restructure your code so that the `Throw` statement is inside a `Catch` block.</span></span>  
+2. <span data-ttu-id="570ed-107">Ristrutturare il codice in modo che l'istruzione `Throw` si trovi in un blocco `Catch` .</span><span class="sxs-lookup"><span data-stu-id="570ed-107">Restructure your code so that the `Throw` statement is inside a `Catch` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="38bdc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="38bdc-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="570ed-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="570ed-108">See also</span></span>
 
-- [<span data-ttu-id="38bdc-109">Istruzione Throw</span><span class="sxs-lookup"><span data-stu-id="38bdc-109">Throw Statement</span></span>](../../visual-basic/language-reference/statements/throw-statement.md)
-- [<span data-ttu-id="38bdc-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="38bdc-110">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="570ed-109">Istruzione throw</span><span class="sxs-lookup"><span data-stu-id="570ed-109">Throw Statement</span></span>](../language-reference/statements/throw-statement.md)
+- [<span data-ttu-id="570ed-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="570ed-110">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
 - <xref:System.Exception?displayProperty=nameWithType>
-- [<span data-ttu-id="38bdc-111">Gestione e generazione di eccezioni in .NET</span><span class="sxs-lookup"><span data-stu-id="38bdc-111">Handling and throwing exceptions in .NET</span></span>](../../standard/exceptions/index.md)
+- [<span data-ttu-id="570ed-111">Gestione e generazione di eccezioni in .NET</span><span class="sxs-lookup"><span data-stu-id="570ed-111">Handling and throwing exceptions in .NET</span></span>](../../standard/exceptions/index.md)
