--- a/docs/visual-basic/misc/bc30675.md
+++ b/docs/visual-basic/misc/bc30675.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30675
 ms.assetid: bf687e99-1503-45fe-ad70-ad622ee7746e
-ms.openlocfilehash: bb0363c765c6c06345fc8236d6f4efede36e3b03
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6a0eb59890fb41f25ddf8ac2f1a8094de19e8a93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657950"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414855"
 ---
-# <a name="synclock-statement-must-end-with-a-matching-end-synclock"></a><span data-ttu-id="83ff0-102">L'istruzione 'SyncLock' deve terminare con un oggetto 'End SyncLock' corrispondente</span><span class="sxs-lookup"><span data-stu-id="83ff0-102">'SyncLock' statement must end with a matching 'End SyncLock'</span></span>
-<span data-ttu-id="83ff0-103">I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="83ff0-103">`SyncLock` blocks begin with the `SyncLock` keyword and end with the `End SyncLock` construct.</span></span>  
+# <a name="synclock-statement-must-end-with-a-matching-end-synclock"></a><span data-ttu-id="f8d1f-102">L'istruzione 'SyncLock' deve terminare con un oggetto 'End SyncLock' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f8d1f-102">'SyncLock' statement must end with a matching 'End SyncLock'</span></span>
+<span data-ttu-id="f8d1f-103">`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="f8d1f-103">`SyncLock` blocks begin with the `SyncLock` keyword and end with the `End SyncLock` construct.</span></span>  
   
- <span data-ttu-id="83ff0-104">**ID errore:** BC30675</span><span class="sxs-lookup"><span data-stu-id="83ff0-104">**Error ID:** BC30675</span></span>  
+ <span data-ttu-id="f8d1f-104">**ID errore:** BC30675</span><span class="sxs-lookup"><span data-stu-id="f8d1f-104">**Error ID:** BC30675</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="83ff0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="83ff0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f8d1f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f8d1f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="83ff0-106">Verificare che il blocco `SyncLock` termini con un costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="83ff0-106">Make sure that `SyncLock` block ends with a `End SyncLock` construct.</span></span>  
+- <span data-ttu-id="f8d1f-106">Verificare che il blocco `SyncLock` termini con un costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="f8d1f-106">Make sure that `SyncLock` block ends with a `End SyncLock` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="83ff0-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="83ff0-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f8d1f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f8d1f-107">See also</span></span>
 
-- [<span data-ttu-id="83ff0-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="83ff0-108">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [<span data-ttu-id="f8d1f-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="f8d1f-108">SyncLock Statement</span></span>](../language-reference/statements/synclock-statement.md)
