--- a/docs/visual-basic/misc/bc30706.md
+++ b/docs/visual-basic/misc/bc30706.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30706
 ms.assetid: 229bb582-d962-4385-97e7-120dcf5d8991
-ms.openlocfilehash: aa4411e09b4eda4497502247818b7503c021e7b5
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 02e35ae2c1cb29571f290b2c71ea7e599f55556c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197978"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412598"
 ---
-# <a name="expression-or-statement-is-not-valid-in-debug-windows"></a><span data-ttu-id="9564c-102">L'espressione o l'istruzione non è valida nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="9564c-102">Expression or statement is not valid in debug windows</span></span>
-<span data-ttu-id="9564c-103">Le istruzioni`Try...Catch...Finally` non possono essere usate nel contesto di debug.</span><span class="sxs-lookup"><span data-stu-id="9564c-103">`Try...Catch...Finally` statements cannot be used in the debugging context.</span></span>  
+# <a name="expression-or-statement-is-not-valid-in-debug-windows"></a><span data-ttu-id="6d824-102">L'espressione o l'istruzione non è valida nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="6d824-102">Expression or statement is not valid in debug windows</span></span>
+<span data-ttu-id="6d824-103">Le istruzioni`Try...Catch...Finally` non possono essere usate nel contesto di debug.</span><span class="sxs-lookup"><span data-stu-id="6d824-103">`Try...Catch...Finally` statements cannot be used in the debugging context.</span></span>  
   
- <span data-ttu-id="9564c-104">**ID errore:** BC30706</span><span class="sxs-lookup"><span data-stu-id="9564c-104">**Error ID:** BC30706</span></span>  
+ <span data-ttu-id="6d824-104">**ID errore:** BC30706</span><span class="sxs-lookup"><span data-stu-id="6d824-104">**Error ID:** BC30706</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9564c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9564c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6d824-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6d824-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="9564c-106">Rimuovere le istruzioni `Try...Catch...Finally` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="9564c-106">Remove `Try...Catch...Finally` statements from debugging code.</span></span>  
+1. <span data-ttu-id="6d824-106">Rimuovere le istruzioni `Try...Catch...Finally` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="6d824-106">Remove `Try...Catch...Finally` statements from debugging code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9564c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9564c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6d824-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6d824-107">See also</span></span>
 
-- [<span data-ttu-id="9564c-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="9564c-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
-- [<span data-ttu-id="9564c-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="9564c-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
+- [<span data-ttu-id="6d824-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="6d824-108">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="6d824-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="6d824-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
