--- a/docs/visual-basic/misc/bc30744.md
+++ b/docs/visual-basic/misc/bc30744.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30744
 ms.assetid: 01ee1afc-e09e-4b1e-92c1-49a697c90ba0
-ms.openlocfilehash: c754aad19a49cb5f6faddc0bd5abafe61f344e2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 562d11504d39f0db81657402a0ecd96c22c7be38
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646120"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412611"
 ---
-# <a name="referenced-array-element-has-a-value-of-nothing"></a><span data-ttu-id="ba9a6-102">L'elemento di matrice a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="ba9a6-102">Referenced array element has a value of 'Nothing'</span></span>
-<span data-ttu-id="ba9a6-103">L'elemento di matrice a cui si fa riferimento non è stato impostato oppure in precedenza è stato impostato su `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="ba9a6-103">The array element being referenced has not been set, or it was previously set to `Nothing`.</span></span>  
+# <a name="referenced-array-element-has-a-value-of-nothing"></a><span data-ttu-id="a84e8-102">L'elemento di matrice a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="a84e8-102">Referenced array element has a value of 'Nothing'</span></span>
+<span data-ttu-id="a84e8-103">L'elemento di matrice a cui si fa riferimento non è stato impostato oppure in precedenza è stato impostato su `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="a84e8-103">The array element being referenced has not been set, or it was previously set to `Nothing`.</span></span>  
   
- <span data-ttu-id="ba9a6-104">**ID errore:** BC30744</span><span class="sxs-lookup"><span data-stu-id="ba9a6-104">**Error ID:** BC30744</span></span>  
+ <span data-ttu-id="a84e8-104">**ID errore:** BC30744</span><span class="sxs-lookup"><span data-stu-id="a84e8-104">**Error ID:** BC30744</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ba9a6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ba9a6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a84e8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a84e8-105">To correct this error</span></span>  
   
-- <span data-ttu-id="ba9a6-106">Verificare che i valori della matrice siano impostati correttamente.</span><span class="sxs-lookup"><span data-stu-id="ba9a6-106">Verify that the values in the array are being set correctly.</span></span>  
+- <span data-ttu-id="a84e8-106">Verificare che i valori della matrice siano impostati correttamente.</span><span class="sxs-lookup"><span data-stu-id="a84e8-106">Verify that the values in the array are being set correctly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ba9a6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ba9a6-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a84e8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a84e8-107">See also</span></span>
 
-- [<span data-ttu-id="ba9a6-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="ba9a6-108">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="a84e8-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="a84e8-108">Nothing</span></span>](../language-reference/nothing.md)
