--- a/docs/visual-basic/misc/bc30753.md
+++ b/docs/visual-basic/misc/bc30753.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente conversioni implicite da'<type1>' a'<type2>'. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework
+title: Option Strict On non consente conversioni implicite da '<type1>' a '<type2>'. Il tipo raccolta di Visual Basic 6.0 non è compatibile con il tipo raccolta di .NET Framework
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30753
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30753
 ms.assetid: 7e1bb22e-a507-483e-bfd6-f3a43e24a232
-ms.openlocfilehash: 2fd2c9bff6519a351af007008638c5071e664922
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 0b94f4da1184a3b959bd6155281d3014c405849a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667072"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412559"
 ---
-# <a name="option-strict-on-disallows-implicit-conversions-from-type1-to-type2-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a><span data-ttu-id="2a858-102">Option Strict On non consente conversioni implicite da'\<tipo1 >' a'\<tipo2 >'; il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework</span><span class="sxs-lookup"><span data-stu-id="2a858-102">Option Strict On disallows implicit conversions from '\<type1>' to '\<type2>'; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type</span></span>
-<span data-ttu-id="2a858-103">`Option Strict On`non consente le conversioni implicite da'`<type1>`' a'`<type2>`'. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="2a858-103">`Option Strict On` disallows implicit conversions from '`<type1>`' to '`<type2>`'; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type.</span></span>
+# <a name="option-strict-on-disallows-implicit-conversions-from-type1-to-type2-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a><span data-ttu-id="173e6-102">Option Strict On non consente conversioni implicite da '\<type1>' a '\<type2>'. Il tipo raccolta di Visual Basic 6.0 non è compatibile con il tipo raccolta di .NET Framework</span><span class="sxs-lookup"><span data-stu-id="173e6-102">Option Strict On disallows implicit conversions from '\<type1>' to '\<type2>'; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type</span></span>
+<span data-ttu-id="173e6-103">`Option Strict On`non consente le conversioni implicite da' `<type1>` ' a' `<type2>` '. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="173e6-103">`Option Strict On` disallows implicit conversions from '`<type1>`' to '`<type2>`'; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type.</span></span>
 
- <span data-ttu-id="2a858-104">L'oggetto raccolta usato in Visual Basic 6,0 differisce dall'oggetto raccolta usato in Visual Studio 2012.</span><span class="sxs-lookup"><span data-stu-id="2a858-104">The collection object that is used in Visual Basic 6.0 differs from the collection object that is used in Visual Studio 2012.</span></span>
+ <span data-ttu-id="173e6-104">L'oggetto raccolta usato in Visual Basic 6,0 differisce dall'oggetto raccolta usato in Visual Studio 2012.</span><span class="sxs-lookup"><span data-stu-id="173e6-104">The collection object that is used in Visual Basic 6.0 differs from the collection object that is used in Visual Studio 2012.</span></span>
 
- <span data-ttu-id="2a858-105">**ID errore:** BC30753</span><span class="sxs-lookup"><span data-stu-id="2a858-105">**Error ID:** BC30753</span></span>
+ <span data-ttu-id="173e6-105">**ID errore:** BC30753</span><span class="sxs-lookup"><span data-stu-id="173e6-105">**Error ID:** BC30753</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="2a858-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2a858-106">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="173e6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="173e6-106">To correct this error</span></span>
 
-- <span data-ttu-id="2a858-107">Convertire gli oggetti raccolta in modo esplicito usando una delle parole chiave di conversione del tipo.</span><span class="sxs-lookup"><span data-stu-id="2a858-107">Explicitly convert collection objects by using one of the type conversion keywords.</span></span> <span data-ttu-id="2a858-108">Le parole chiave [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) e [DirectCast operator](../../visual-basic/language-reference/operators/directcast-operator.md) generano un'eccezione in fase di esecuzione se la conversione non riesce.</span><span class="sxs-lookup"><span data-stu-id="2a858-108">The [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) and [DirectCast Operator](../../visual-basic/language-reference/operators/directcast-operator.md) keywords throw a run-time exception if the conversion fails.</span></span> <span data-ttu-id="2a858-109">La parola chiave dell' [operatore TryCast](../../visual-basic/language-reference/operators/trycast-operator.md) [non restituisce nulla](../../visual-basic/language-reference/nothing.md) se la conversione non riesce.</span><span class="sxs-lookup"><span data-stu-id="2a858-109">The [TryCast Operator](../../visual-basic/language-reference/operators/trycast-operator.md) keyword returns [Nothing](../../visual-basic/language-reference/nothing.md) if the conversion fails.</span></span>
+- <span data-ttu-id="173e6-107">Convertire gli oggetti raccolta in modo esplicito usando una delle parole chiave di conversione del tipo.</span><span class="sxs-lookup"><span data-stu-id="173e6-107">Explicitly convert collection objects by using one of the type conversion keywords.</span></span> <span data-ttu-id="173e6-108">Le parole chiave [CType Function](../language-reference/functions/ctype-function.md) e [DirectCast operator](../language-reference/operators/directcast-operator.md) generano un'eccezione in fase di esecuzione se la conversione non riesce.</span><span class="sxs-lookup"><span data-stu-id="173e6-108">The [CType Function](../language-reference/functions/ctype-function.md) and [DirectCast Operator](../language-reference/operators/directcast-operator.md) keywords throw a run-time exception if the conversion fails.</span></span> <span data-ttu-id="173e6-109">La parola chiave dell' [operatore TryCast](../language-reference/operators/trycast-operator.md) [non restituisce nulla](../language-reference/nothing.md) se la conversione non riesce.</span><span class="sxs-lookup"><span data-stu-id="173e6-109">The [TryCast Operator](../language-reference/operators/trycast-operator.md) keyword returns [Nothing](../language-reference/nothing.md) if the conversion fails.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="2a858-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2a858-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="173e6-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="173e6-110">See also</span></span>
 
-- [<span data-ttu-id="2a858-111">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="2a858-111">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
-- [<span data-ttu-id="2a858-112">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="2a858-112">DirectCast Operator</span></span>](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [<span data-ttu-id="2a858-113">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="2a858-113">TryCast Operator</span></span>](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [<span data-ttu-id="2a858-114">Nothing</span><span class="sxs-lookup"><span data-stu-id="2a858-114">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
-- [<span data-ttu-id="2a858-115">Raccolte (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="2a858-115">Collections (Visual Basic)</span></span>](../programming-guide/concepts/collections.md)
+- [<span data-ttu-id="173e6-111">CType Function</span><span class="sxs-lookup"><span data-stu-id="173e6-111">CType Function</span></span>](../language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="173e6-112">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="173e6-112">DirectCast Operator</span></span>](../language-reference/operators/directcast-operator.md)
+- [<span data-ttu-id="173e6-113">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="173e6-113">TryCast Operator</span></span>](../language-reference/operators/trycast-operator.md)
+- [<span data-ttu-id="173e6-114">Nothing</span><span class="sxs-lookup"><span data-stu-id="173e6-114">Nothing</span></span>](../language-reference/nothing.md)
+- [<span data-ttu-id="173e6-115">Raccolte (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="173e6-115">Collections (Visual Basic)</span></span>](../programming-guide/concepts/collections.md)
