--- a/docs/visual-basic/misc/bc30767.md
+++ b/docs/visual-basic/misc/bc30767.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30767
 ms.assetid: 6aa62dcc-99aa-4051-a81e-3bbb6a8c355f
-ms.openlocfilehash: 8f573a46ddde81299ac19f0c36de0cc0d149cb36
-ms.sourcegitcommit: 17ee6605e01ef32506f8fdc686954244ba6911de
+ms.openlocfilehash: 904a4062ffde5aa0577b1bb02af86624bd257d52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/22/2019
-ms.locfileid: "74346657"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412468"
 ---
-# <a name="get-statements-are-no-longer-supported-visual-basic"></a><span data-ttu-id="889c8-102">Le istruzioni 'Get' non sono più supportate (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="889c8-102">'Get' statements are no longer supported (Visual Basic)</span></span>
-<span data-ttu-id="889c8-103">Le istruzioni`Get` non sono più supportate.</span><span class="sxs-lookup"><span data-stu-id="889c8-103">`Get` statements are no longer supported.</span></span> <span data-ttu-id="889c8-104">La funzionalità di I/O dei file è in genere disponibile nello spazio dei nomi `Microsoft.VisualBasic` , ma non è supportata dalla versione di destinazione di .NET Compact Framework.</span><span class="sxs-lookup"><span data-stu-id="889c8-104">File I/O functionality is normally available in the `Microsoft.VisualBasic` namespace, but the targeted version of the .NET Compact Framework does not support it.</span></span>  
+# <a name="get-statements-are-no-longer-supported-visual-basic"></a><span data-ttu-id="544cf-102">Le istruzioni 'Get' non sono più supportate (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="544cf-102">'Get' statements are no longer supported (Visual Basic)</span></span>
+<span data-ttu-id="544cf-103">Le istruzioni`Get` non sono più supportate.</span><span class="sxs-lookup"><span data-stu-id="544cf-103">`Get` statements are no longer supported.</span></span> <span data-ttu-id="544cf-104">La funzionalità di I/O dei file è in genere disponibile nello spazio dei nomi `Microsoft.VisualBasic` , ma non è supportata dalla versione di destinazione di .NET Compact Framework.</span><span class="sxs-lookup"><span data-stu-id="544cf-104">File I/O functionality is normally available in the `Microsoft.VisualBasic` namespace, but the targeted version of the .NET Compact Framework does not support it.</span></span>  
   
- <span data-ttu-id="889c8-105">**ID errore:** BC30767</span><span class="sxs-lookup"><span data-stu-id="889c8-105">**Error ID:** BC30767</span></span>  
+ <span data-ttu-id="544cf-105">**ID errore:** BC30767</span><span class="sxs-lookup"><span data-stu-id="544cf-105">**Error ID:** BC30767</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="889c8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="889c8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="544cf-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="544cf-106">To correct this error</span></span>  
   
-- <span data-ttu-id="889c8-107">Eseguire operazioni su file con funzioni definite nello spazio dei nomi <xref:System.IO> .</span><span class="sxs-lookup"><span data-stu-id="889c8-107">Perform file operations with functions defined in the <xref:System.IO> namespace.</span></span>  
+- <span data-ttu-id="544cf-107">Eseguire operazioni su file con funzioni definite nello spazio dei nomi <xref:System.IO> .</span><span class="sxs-lookup"><span data-stu-id="544cf-107">Perform file operations with functions defined in the <xref:System.IO> namespace.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="889c8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="889c8-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="544cf-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="544cf-108">See also</span></span>
 
 - <xref:System.IO>
-- [<span data-ttu-id="889c8-109">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="889c8-109">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
-- [<span data-ttu-id="889c8-110">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="889c8-110">File Access with Visual Basic</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [<span data-ttu-id="544cf-109">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="544cf-109">Get Statement</span></span>](../language-reference/statements/get-statement.md)
+- [<span data-ttu-id="544cf-110">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="544cf-110">File Access with Visual Basic</span></span>](../developing-apps/programming/drives-directories-files/file-access.md)
