--- a/docs/visual-basic/misc/bc30768.md
+++ b/docs/visual-basic/misc/bc30768.md
@@ -1,5 +1,5 @@
 ---
-title: Le istruzioni 'Line' non sono più supportate (Smart Device-errore Visual Basic del compilatore)
+title: Le istruzioni ' line ' non sono più supportate (errore del compilatore Visual Basic Smart Device)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30768
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30768
 ms.assetid: e7a17c77-06bb-4d33-966e-addb4f51caaf
-ms.openlocfilehash: 7f6cd2f7bc35cf0a30a05ea7ef93bff92072e0d2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f24ad5fc3a88fb7d598e2479b7227c74911b65db
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657041"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412481"
 ---
-# <a name="line-statements-are-no-longer-supported-smart-devicevisual-basic-compiler-error"></a><span data-ttu-id="1fc48-102">Le istruzioni 'Line' non sono più supportate (errore del compilatore Visual Basic/Smart Device)</span><span class="sxs-lookup"><span data-stu-id="1fc48-102">'Line' statements are no longer supported (Smart Device/Visual Basic Compiler Error)</span></span>
-<span data-ttu-id="1fc48-103">L'istruzione `Line` non è più supportata.</span><span class="sxs-lookup"><span data-stu-id="1fc48-103">The `Line` statement is no longer supported.</span></span> <span data-ttu-id="1fc48-104">La funzionalità di I/O dei file è in genere disponibile come <xref:Microsoft.VisualBasic.FileSystem.LineInput%2A?displayProperty=nameWithType>, ma non è supportata dalla versione di destinazione di .NET Compact Framework.</span><span class="sxs-lookup"><span data-stu-id="1fc48-104">File I/O functionality is normally available as <xref:Microsoft.VisualBasic.FileSystem.LineInput%2A?displayProperty=nameWithType>, but the targeted version of the .NET Compact Framework does not support it.</span></span>  
+# <a name="line-statements-are-no-longer-supported-smart-devicevisual-basic-compiler-error"></a><span data-ttu-id="c94fb-102">Le istruzioni 'Line' non sono più supportate (errore del compilatore Visual Basic/Smart Device)</span><span class="sxs-lookup"><span data-stu-id="c94fb-102">'Line' statements are no longer supported (Smart Device/Visual Basic Compiler Error)</span></span>
+<span data-ttu-id="c94fb-103">L'istruzione `Line` non è più supportata.</span><span class="sxs-lookup"><span data-stu-id="c94fb-103">The `Line` statement is no longer supported.</span></span> <span data-ttu-id="c94fb-104">La funzionalità di I/O dei file è in genere disponibile come <xref:Microsoft.VisualBasic.FileSystem.LineInput%2A?displayProperty=nameWithType>, ma non è supportata dalla versione di destinazione di .NET Compact Framework.</span><span class="sxs-lookup"><span data-stu-id="c94fb-104">File I/O functionality is normally available as <xref:Microsoft.VisualBasic.FileSystem.LineInput%2A?displayProperty=nameWithType>, but the targeted version of the .NET Compact Framework does not support it.</span></span>  
   
- <span data-ttu-id="1fc48-105">**ID errore:** BC30768</span><span class="sxs-lookup"><span data-stu-id="1fc48-105">**Error ID:** BC30768</span></span>  
+ <span data-ttu-id="c94fb-105">**ID errore:** BC30768</span><span class="sxs-lookup"><span data-stu-id="c94fb-105">**Error ID:** BC30768</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1fc48-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1fc48-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c94fb-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c94fb-106">To correct this error</span></span>  
   
-- <span data-ttu-id="1fc48-107">Se si esegue l'accesso ai file, usare le funzioni definite nello spazio dei nomi <xref:System.IO> .</span><span class="sxs-lookup"><span data-stu-id="1fc48-107">If performing file access, use the functions defined in the <xref:System.IO> namespace.</span></span>  
+- <span data-ttu-id="c94fb-107">Se si esegue l'accesso ai file, usare le funzioni definite nello spazio dei nomi <xref:System.IO> .</span><span class="sxs-lookup"><span data-stu-id="c94fb-107">If performing file access, use the functions defined in the <xref:System.IO> namespace.</span></span>  
   
-- <span data-ttu-id="1fc48-108">Per la grafica, usare <xref:System.Drawing.Graphics.DrawLine%2A?displayProperty=nameWithType>.</span><span class="sxs-lookup"><span data-stu-id="1fc48-108">If performing graphics, use <xref:System.Drawing.Graphics.DrawLine%2A?displayProperty=nameWithType>.</span></span>  
+- <span data-ttu-id="c94fb-108">Per la grafica, usare <xref:System.Drawing.Graphics.DrawLine%2A?displayProperty=nameWithType>.</span><span class="sxs-lookup"><span data-stu-id="c94fb-108">If performing graphics, use <xref:System.Drawing.Graphics.DrawLine%2A?displayProperty=nameWithType>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1fc48-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1fc48-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c94fb-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c94fb-109">See also</span></span>
 
 - <xref:System.IO>
 - <xref:System.Drawing>
-- [<span data-ttu-id="1fc48-110">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1fc48-110">File Access with Visual Basic</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [<span data-ttu-id="c94fb-110">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c94fb-110">File Access with Visual Basic</span></span>](../developing-apps/programming/drives-directories-files/file-access.md)
