--- a/docs/visual-basic/misc/bc30769.md
+++ b/docs/visual-basic/misc/bc30769.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30769
 ms.assetid: bdbc976f-48c1-4b97-8c66-51d10f7078f5
-ms.openlocfilehash: 1ed7ed4eb2c94de938c16542f2c5a6bda3673db3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f3c7c7bb00d91244c244d8eb534da16ba8152128
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646017"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412455"
 ---
-# <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-the-end-statement"></a><span data-ttu-id="0e507-102">La versione di destinazione di .NET Compact Framework non supporta l'istruzione 'End'</span><span class="sxs-lookup"><span data-stu-id="0e507-102">The targeted version of the .NET Compact Framework does not support the 'End' statement</span></span>
-<span data-ttu-id="0e507-103">La versione di .NET Compact Framework in uso non supporta l'istruzione `End` .</span><span class="sxs-lookup"><span data-stu-id="0e507-103">The version of the .NET Compact Framework you are working with does not support the `End` statement.</span></span>  
+# <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-the-end-statement"></a><span data-ttu-id="f1b16-102">La versione di destinazione di .NET Compact Framework non supporta l'istruzione 'End'</span><span class="sxs-lookup"><span data-stu-id="f1b16-102">The targeted version of the .NET Compact Framework does not support the 'End' statement</span></span>
+<span data-ttu-id="f1b16-103">La versione di .NET Compact Framework in uso non supporta l'istruzione `End` .</span><span class="sxs-lookup"><span data-stu-id="f1b16-103">The version of the .NET Compact Framework you are working with does not support the `End` statement.</span></span>  
   
- <span data-ttu-id="0e507-104">**ID errore:** BC30769</span><span class="sxs-lookup"><span data-stu-id="0e507-104">**Error ID:** BC30769</span></span>  
+ <span data-ttu-id="f1b16-104">**ID errore:** BC30769</span><span class="sxs-lookup"><span data-stu-id="f1b16-104">**Error ID:** BC30769</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0e507-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0e507-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f1b16-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f1b16-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0e507-106">Rimuovere l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="0e507-106">Remove the statement.</span></span>  
+- <span data-ttu-id="f1b16-106">Rimuovere l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="f1b16-106">Remove the statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0e507-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0e507-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f1b16-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f1b16-107">See also</span></span>
 
-- [<span data-ttu-id="0e507-108">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="0e507-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="f1b16-108">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="f1b16-108">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
