--- a/docs/visual-basic/misc/bc30770.md
+++ b/docs/visual-basic/misc/bc30770.md
@@ -1,5 +1,5 @@
 ---
-title: Evento '<eventname>' evento specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
+title: L'evento '<eventname>' specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30770
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30770
 ms.assetid: 7524fba7-2a37-4bc3-b789-87d73a166575
-ms.openlocfilehash: 25ca6bdb8fa5e9c8aa79efb4ca4a56a344698089
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c0fcf4c38acc4f6345d4b90198a082aa1f3c2e07
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61996736"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412442"
 ---
-# <a name="event-eventname-event-specified-by-the-defaultevent-attribute-is-not-a-publicly-accessible-event-for-this-class"></a><span data-ttu-id="d78c0-102">Evento '\<NomeEvento >' evento specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe</span><span class="sxs-lookup"><span data-stu-id="d78c0-102">Event '\<eventname>' event specified by the 'DefaultEvent' attribute is not a publicly accessible event for this class</span></span>
-<span data-ttu-id="d78c0-103">L'attributo <xref:System.ComponentModel.DefaultEventAttribute> deve specificare il nome dell'evento accessibile pubblicamente nella classe a cui l'attributo è applicato.</span><span class="sxs-lookup"><span data-stu-id="d78c0-103">The <xref:System.ComponentModel.DefaultEventAttribute> attribute must specify the name of publicly accessible event in the class to which the attribute is applied.</span></span>  
+# <a name="event-eventname-event-specified-by-the-defaultevent-attribute-is-not-a-publicly-accessible-event-for-this-class"></a><span data-ttu-id="46d56-102">L'evento '\<eventname>' specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe</span><span class="sxs-lookup"><span data-stu-id="46d56-102">Event '\<eventname>' event specified by the 'DefaultEvent' attribute is not a publicly accessible event for this class</span></span>
+<span data-ttu-id="46d56-103">L'attributo <xref:System.ComponentModel.DefaultEventAttribute> deve specificare il nome dell'evento accessibile pubblicamente nella classe a cui l'attributo è applicato.</span><span class="sxs-lookup"><span data-stu-id="46d56-103">The <xref:System.ComponentModel.DefaultEventAttribute> attribute must specify the name of publicly accessible event in the class to which the attribute is applied.</span></span>  
   
- <span data-ttu-id="d78c0-104">**ID errore:** BC30770</span><span class="sxs-lookup"><span data-stu-id="d78c0-104">**Error ID:** BC30770</span></span>  
+ <span data-ttu-id="46d56-104">**ID errore:** BC30770</span><span class="sxs-lookup"><span data-stu-id="46d56-104">**Error ID:** BC30770</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d78c0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d78c0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="46d56-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="46d56-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="d78c0-106">Verificare che la classe definisca un evento accessibile pubblicamente.</span><span class="sxs-lookup"><span data-stu-id="d78c0-106">Make sure the class defines a publicly accessible event.</span></span>  
+1. <span data-ttu-id="46d56-106">Verificare che la classe definisca un evento accessibile pubblicamente.</span><span class="sxs-lookup"><span data-stu-id="46d56-106">Make sure the class defines a publicly accessible event.</span></span>  
   
-2. <span data-ttu-id="d78c0-107">Verificare che il nome dell'evento nella classe corrisponda al nome specificato dall'attributo <xref:System.ComponentModel.DefaultEventAttribute> .</span><span class="sxs-lookup"><span data-stu-id="d78c0-107">Make sure that the name of the event in the class matches the name specified by the <xref:System.ComponentModel.DefaultEventAttribute> attribute.</span></span>  
+2. <span data-ttu-id="46d56-107">Verificare che il nome dell'evento nella classe corrisponda al nome specificato dall'attributo <xref:System.ComponentModel.DefaultEventAttribute> .</span><span class="sxs-lookup"><span data-stu-id="46d56-107">Make sure that the name of the event in the class matches the name specified by the <xref:System.ComponentModel.DefaultEventAttribute> attribute.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d78c0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d78c0-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="46d56-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="46d56-108">See also</span></span>
 
 - <xref:System.ComponentModel.DefaultEventAttribute>
-- [<span data-ttu-id="d78c0-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="d78c0-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="d78c0-110">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="d78c0-110">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="d78c0-111">Public</span><span class="sxs-lookup"><span data-stu-id="d78c0-111">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="46d56-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="46d56-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="46d56-110">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="46d56-110">Class Statement</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="46d56-111">Pubblica</span><span class="sxs-lookup"><span data-stu-id="46d56-111">Public</span></span>](../language-reference/modifiers/public.md)
