--- a/docs/visual-basic/misc/bc30792.md
+++ b/docs/visual-basic/misc/bc30792.md
@@ -1,5 +1,5 @@
 ---
-title: L'operando 'TryCast' deve essere di tipo riferimento, ma '<typename>' è un tipo valore
+title: L'operando 'TryCast' deve essere un tipo di riferimento, ma '<typename>' è un tipo di valore
 ms.date: 07/20/2015
 f1_keywords:
 - BC30792
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30792
 ms.assetid: 3325fce5-dbc0-4d1d-9530-31f4720bfe6e
-ms.openlocfilehash: 16a735738009ed12ead7ba464a4b7bfaf3f3843c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e8ae3c6768ba68aacd5a1618da397dc1e479337c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412429"
 ---
-# <a name="trycast-operand-must-be-reference-type-but-typename-is-a-value-type"></a><span data-ttu-id="0f0df-102">L'operando 'TryCast' deve essere di tipo riferimento, ma '\<nomeTipo >' è un tipo valore</span><span class="sxs-lookup"><span data-stu-id="0f0df-102">'TryCast' operand must be reference type, but '\<typename>' is a value type</span></span>
-<span data-ttu-id="0f0df-103">L'operatore `TryCast` è usato con un tipo valore per almeno uno degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="0f0df-103">The `TryCast` operator is used with a value type for at least one of the arguments.</span></span>  
+# <a name="trycast-operand-must-be-reference-type-but-typename-is-a-value-type"></a><span data-ttu-id="7971e-102">L'operando 'TryCast' deve essere un tipo di riferimento, ma '\<typename>' è un tipo di valore</span><span class="sxs-lookup"><span data-stu-id="7971e-102">'TryCast' operand must be reference type, but '\<typename>' is a value type</span></span>
+<span data-ttu-id="7971e-103">L'operatore `TryCast` è usato con un tipo valore per almeno uno degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="7971e-103">The `TryCast` operator is used with a value type for at least one of the arguments.</span></span>  
   
- <span data-ttu-id="0f0df-104">`TryCast` esegue un test per individuare una relazione di ereditarietà o implementazione tra i due argomenti.</span><span class="sxs-lookup"><span data-stu-id="0f0df-104">`TryCast` tests for an inheritance or implementation relationship between the two arguments.</span></span> <span data-ttu-id="0f0df-105">Pertanto, consente solo tipi riferimento per gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="0f0df-105">Therefore, it allows only reference types for the arguments.</span></span> <span data-ttu-id="0f0df-106">Per altre informazioni, vedere [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md).</span><span class="sxs-lookup"><span data-stu-id="0f0df-106">For more information, see [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md).</span></span>  
+ <span data-ttu-id="7971e-104">`TryCast` esegue un test per individuare una relazione di ereditarietà o implementazione tra i due argomenti.</span><span class="sxs-lookup"><span data-stu-id="7971e-104">`TryCast` tests for an inheritance or implementation relationship between the two arguments.</span></span> <span data-ttu-id="7971e-105">Pertanto, consente solo tipi riferimento per gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="7971e-105">Therefore, it allows only reference types for the arguments.</span></span> <span data-ttu-id="7971e-106">Per altre informazioni, vedere [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md).</span><span class="sxs-lookup"><span data-stu-id="7971e-106">For more information, see [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md).</span></span>  
   
- <span data-ttu-id="0f0df-107">**ID errore:** BC30792</span><span class="sxs-lookup"><span data-stu-id="0f0df-107">**Error ID:** BC30792</span></span>  
+ <span data-ttu-id="7971e-107">**ID errore:** BC30792</span><span class="sxs-lookup"><span data-stu-id="7971e-107">**Error ID:** BC30792</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0f0df-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0f0df-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7971e-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7971e-108">To correct this error</span></span>  
   
-- <span data-ttu-id="0f0df-109">Usare `DirectCast` o `CType` per eseguire la conversione.</span><span class="sxs-lookup"><span data-stu-id="0f0df-109">Use `DirectCast` or `CType` to perform the conversion.</span></span> <span data-ttu-id="0f0df-110">Entrambi consentono tipi valore.</span><span class="sxs-lookup"><span data-stu-id="0f0df-110">They both allow value types.</span></span>  
+- <span data-ttu-id="7971e-109">Usare `DirectCast` o `CType` per eseguire la conversione.</span><span class="sxs-lookup"><span data-stu-id="7971e-109">Use `DirectCast` or `CType` to perform the conversion.</span></span> <span data-ttu-id="7971e-110">Entrambi consentono tipi valore.</span><span class="sxs-lookup"><span data-stu-id="7971e-110">They both allow value types.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0f0df-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0f0df-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7971e-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7971e-111">See also</span></span>
 
-- [<span data-ttu-id="0f0df-112">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="0f0df-112">TryCast Operator</span></span>](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [<span data-ttu-id="0f0df-113">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="0f0df-113">DirectCast Operator</span></span>](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [<span data-ttu-id="0f0df-114">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="0f0df-114">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
-- [<span data-ttu-id="0f0df-115">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="0f0df-115">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="7971e-112">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="7971e-112">TryCast Operator</span></span>](../language-reference/operators/trycast-operator.md)
+- [<span data-ttu-id="7971e-113">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="7971e-113">DirectCast Operator</span></span>](../language-reference/operators/directcast-operator.md)
+- [<span data-ttu-id="7971e-114">CType Function</span><span class="sxs-lookup"><span data-stu-id="7971e-114">CType Function</span></span>](../language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="7971e-115">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="7971e-115">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
