--- a/docs/visual-basic/misc/bc30798.md
+++ b/docs/visual-basic/misc/bc30798.md
@@ -1,5 +1,5 @@
 ---
-title: «<elementname>'per l'alias di Imports per'<qualifiedelementname>' non fa riferimento a un Namespace, classe, struttura, interfaccia, enumerazione o modulo
+title: "' <elementname> ' per l'alias Imports in ' <qualifiedelementname> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'interfaccia, un'enumerazione o un modulo"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30798
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC30798
 ms.assetid: bfa66627-516a-4955-977d-92372bcea090
-ms.openlocfilehash: 3e4e03f2d44408359ce2fda4d28819a8244b3628
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 73d7900fba73cf5286354e043241200222b88a4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412351"
 ---
-# <a name="elementname-for-the-imports-alias-to-qualifiedelementname-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a><span data-ttu-id="b536b-102">«\<NomeElemento >' per l'alias di Imports per '\<nomeelementoqualificato >' non fa riferimento a un Namespace, classe, struttura, interfaccia, enumerazione o modulo</span><span class="sxs-lookup"><span data-stu-id="b536b-102">'\<elementname>' for the Imports alias to '\<qualifiedelementname>' does not refer to a Namespace, Class, Structure, Interface, Enum or Module</span></span>
-<span data-ttu-id="b536b-103">Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un elemento di programmazione che non può essere importato.</span><span class="sxs-lookup"><span data-stu-id="b536b-103">An [Imports Statement (.NET Namespace and Type)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a programming element that cannot be imported.</span></span>  
+# <a name="elementname-for-the-imports-alias-to-qualifiedelementname-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a><span data-ttu-id="a8eb3-102">' \<elementname> ' per l'alias Imports in ' \<qualifiedelementname> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'interfaccia, un'enumerazione o un modulo</span><span class="sxs-lookup"><span data-stu-id="a8eb3-102">'\<elementname>' for the Imports alias to '\<qualifiedelementname>' does not refer to a Namespace, Class, Structure, Interface, Enum or Module</span></span>
+<span data-ttu-id="a8eb3-103">Un' [istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un elemento di programmazione che non può essere importato.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-103">An [Imports Statement (.NET Namespace and Type)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a programming element that cannot be imported.</span></span>  
   
- <span data-ttu-id="b536b-104">L'istruzione `Imports` si usa per ridurre o rimuovere la necessità di una stringa di qualifica davanti al nome di un elemento.</span><span class="sxs-lookup"><span data-stu-id="b536b-104">The `Imports` statement is used to reduce or remove the need for a qualifying string in front of an element name.</span></span> <span data-ttu-id="b536b-105">Qualificare l'elemento nell'istruzione `Imports` stessa per offrire un percorso non ambiguo di una dichiarazione univoca dell'elemento.</span><span class="sxs-lookup"><span data-stu-id="b536b-105">You qualify the element in the `Imports` statement itself to provide an unambiguous path to a unique declaration of the element.</span></span> <span data-ttu-id="b536b-106">In seguito non sarà necessario qualificare i riferimenti all'elemento.</span><span class="sxs-lookup"><span data-stu-id="b536b-106">Thereafter, you do not need to qualify references to the element.</span></span>  
+ <span data-ttu-id="a8eb3-104">L'istruzione `Imports` si usa per ridurre o rimuovere la necessità di una stringa di qualifica davanti al nome di un elemento.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-104">The `Imports` statement is used to reduce or remove the need for a qualifying string in front of an element name.</span></span> <span data-ttu-id="a8eb3-105">Qualificare l'elemento nell'istruzione `Imports` stessa per offrire un percorso non ambiguo di una dichiarazione univoca dell'elemento.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-105">You qualify the element in the `Imports` statement itself to provide an unambiguous path to a unique declaration of the element.</span></span> <span data-ttu-id="a8eb3-106">In seguito non sarà necessario qualificare i riferimenti all'elemento.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-106">Thereafter, you do not need to qualify references to the element.</span></span>  
   
- <span data-ttu-id="b536b-107">`Imports` viene più comunemente usato per gli spazi dei nomi, ma è anche possibile importare una classe, modulo, struttura, interfaccia o enumerazione per fare riferimento ai suoi elementi senza usare una lunga stringa di qualifica.</span><span class="sxs-lookup"><span data-stu-id="b536b-107">`Imports` is most commonly used for namespaces, but you can also import a class, module, structure, interface, or enumeration to allow reference to its elements without a long qualifying string.</span></span>  
+ <span data-ttu-id="a8eb3-107">`Imports` viene più comunemente usato per gli spazi dei nomi, ma è anche possibile importare una classe, modulo, struttura, interfaccia o enumerazione per fare riferimento ai suoi elementi senza usare una lunga stringa di qualifica.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-107">`Imports` is most commonly used for namespaces, but you can also import a class, module, structure, interface, or enumeration to allow reference to its elements without a long qualifying string.</span></span>  
   
- <span data-ttu-id="b536b-108">Per altre informazioni, vedere "Importazione di elementi contenitore" in.</span><span class="sxs-lookup"><span data-stu-id="b536b-108">For more information, see "Importing Containing Elements" in.</span></span>  
+ <span data-ttu-id="a8eb3-108">Per ulteriori informazioni, vedere "importazione di elementi contenitore" in.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-108">For more information, see "Importing Containing Elements" in.</span></span>  
   
- <span data-ttu-id="b536b-109">**ID errore:** BC30798</span><span class="sxs-lookup"><span data-stu-id="b536b-109">**Error ID:** BC30798</span></span>  
+ <span data-ttu-id="a8eb3-109">**ID errore:** BC30798</span><span class="sxs-lookup"><span data-stu-id="a8eb3-109">**Error ID:** BC30798</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b536b-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b536b-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a8eb3-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8eb3-110">To correct this error</span></span>  
   
-1. <span data-ttu-id="b536b-111">Controllare l'ortografia degli elementi nella stringa di qualificazione dell'istruzione `Imports` , in particolare l'ultimo elemento nella stringa, che è l'elemento che si sta qualificando.</span><span class="sxs-lookup"><span data-stu-id="b536b-111">Check the spelling of the elements in the qualification string in the `Imports` statement, especially the last element in the string, which is the element you are qualifying.</span></span>  
+1. <span data-ttu-id="a8eb3-111">Controllare l'ortografia degli elementi nella stringa di qualificazione dell'istruzione `Imports` , in particolare l'ultimo elemento nella stringa, che è l'elemento che si sta qualificando.</span><span class="sxs-lookup"><span data-stu-id="a8eb3-111">Check the spelling of the elements in the qualification string in the `Imports` statement, especially the last element in the string, which is the element you are qualifying.</span></span>  
   
-2. <span data-ttu-id="b536b-112">Verificare che l'elemento che si sta qualificando di tipo idoneo (spazio dei nomi, classe, modulo, struttura, interfaccia o enumerazione).</span><span class="sxs-lookup"><span data-stu-id="b536b-112">Verify that the element you are qualifying is of an eligible type (namespace, class, module, structure, interface, or enumeration).</span></span> <span data-ttu-id="b536b-113">In caso contrario, rimuovere l'istruzione `Imports` .</span><span class="sxs-lookup"><span data-stu-id="b536b-113">If it is not, remove the `Imports` statement.</span></span>  
+2. <span data-ttu-id="a8eb3-112">Verificare che l'elemento che si sta qualificando di tipo idoneo (spazio dei nomi, classe, modulo, struttura, interfaccia o enumerazione).</span><span class="sxs-lookup"><span data-stu-id="a8eb3-112">Verify that the element you are qualifying is of an eligible type (namespace, class, module, structure, interface, or enumeration).</span></span> <span data-ttu-id="a8eb3-113">In caso contrario, rimuovere l'istruzione `Imports` .</span><span class="sxs-lookup"><span data-stu-id="a8eb3-113">If it is not, remove the `Imports` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b536b-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b536b-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a8eb3-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8eb3-114">See also</span></span>
 
-- [<span data-ttu-id="b536b-115">Riferimenti e istruzione Imports</span><span class="sxs-lookup"><span data-stu-id="b536b-115">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+- [<span data-ttu-id="a8eb3-115">Riferimenti e istruzione Imports</span><span class="sxs-lookup"><span data-stu-id="a8eb3-115">References and the Imports Statement</span></span>](../programming-guide/program-structure/references-and-the-imports-statement.md)
