--- a/docs/visual-basic/misc/bc30803.md
+++ b/docs/visual-basic/misc/bc30803.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30803
 ms.assetid: f830d559-c454-4a8f-9e24-50ef7e7dc26e
-ms.openlocfilehash: 57773ed25ff582666873ff6431945ad6a7fa4e5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cc08296594ccd82ccbfd3fe465edd6f1f1613e87
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633275"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412314"
 ---
-# <a name="currency-is-no-longer-a-supported-type-use-the-decimal-type-instead"></a><span data-ttu-id="faa73-102">Il tipo 'Currency' non è più supportato. Utilizzare il tipo 'Decimal'</span><span class="sxs-lookup"><span data-stu-id="faa73-102">'Currency' is no longer a supported type; use the 'Decimal' type instead</span></span>
-<span data-ttu-id="faa73-103">Il tipo di dati `Currency` è stato sostituito dal tipo di dati `Decimal` .</span><span class="sxs-lookup"><span data-stu-id="faa73-103">The `Currency` data type has been replaced by the `Decimal` data type.</span></span>  
+# <a name="currency-is-no-longer-a-supported-type-use-the-decimal-type-instead"></a><span data-ttu-id="0c73d-102">Il tipo 'Currency' non è più supportato. Utilizzare il tipo 'Decimal'</span><span class="sxs-lookup"><span data-stu-id="0c73d-102">'Currency' is no longer a supported type; use the 'Decimal' type instead</span></span>
+<span data-ttu-id="0c73d-103">Il tipo di dati `Currency` è stato sostituito dal tipo di dati `Decimal` .</span><span class="sxs-lookup"><span data-stu-id="0c73d-103">The `Currency` data type has been replaced by the `Decimal` data type.</span></span>  
   
- <span data-ttu-id="faa73-104">**ID errore:** BC30803</span><span class="sxs-lookup"><span data-stu-id="faa73-104">**Error ID:** BC30803</span></span>  
+ <span data-ttu-id="0c73d-104">**ID errore:** BC30803</span><span class="sxs-lookup"><span data-stu-id="0c73d-104">**Error ID:** BC30803</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="faa73-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="faa73-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0c73d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0c73d-105">To correct this error</span></span>  
   
-- <span data-ttu-id="faa73-106">Usare il tipo di dati `Decimal` invece di `Currency`.</span><span class="sxs-lookup"><span data-stu-id="faa73-106">Use the `Decimal` data type instead of `Currency`.</span></span>  
+- <span data-ttu-id="0c73d-106">Usare il tipo di dati `Decimal` invece di `Currency`.</span><span class="sxs-lookup"><span data-stu-id="0c73d-106">Use the `Decimal` data type instead of `Currency`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="faa73-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="faa73-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0c73d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0c73d-107">See also</span></span>
 
-- [<span data-ttu-id="faa73-108">Tipo di dati Decimal</span><span class="sxs-lookup"><span data-stu-id="faa73-108">Decimal Data Type</span></span>](../../visual-basic/language-reference/data-types/decimal-data-type.md)
+- [<span data-ttu-id="0c73d-108">Tipo di dati Decimal</span><span class="sxs-lookup"><span data-stu-id="0c73d-108">Decimal Data Type</span></span>](../language-reference/data-types/decimal-data-type.md)
