--- a/docs/visual-basic/misc/bc30804.md
+++ b/docs/visual-basic/misc/bc30804.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30804
 ms.assetid: 89835f93-6f51-4193-b2dd-1454b7094996
-ms.openlocfilehash: 6cbfa529d644ae657a1242e91d392ca0185a8242
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 285599c69d58707254ce22d607a1d5cb1eb59758
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633932"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412325"
 ---
-# <a name="variant-is-no-longer-a-supported-type-use-the-object-type-instead"></a><span data-ttu-id="2b706-102">Il tipo 'Variant' non è più supportato. Usare il tipo 'Object'</span><span class="sxs-lookup"><span data-stu-id="2b706-102">'Variant' is no longer a supported type; use the 'Object' type instead</span></span>
-<span data-ttu-id="2b706-103">Il tipo di dati `Object` sostituisce `Variant`.</span><span class="sxs-lookup"><span data-stu-id="2b706-103">The `Object` data type replaces `Variant`.</span></span>  
+# <a name="variant-is-no-longer-a-supported-type-use-the-object-type-instead"></a><span data-ttu-id="6947e-102">Il tipo 'Variant' non è più supportato. Usare il tipo 'Object'</span><span class="sxs-lookup"><span data-stu-id="6947e-102">'Variant' is no longer a supported type; use the 'Object' type instead</span></span>
+<span data-ttu-id="6947e-103">Il tipo di dati `Object` sostituisce `Variant`.</span><span class="sxs-lookup"><span data-stu-id="6947e-103">The `Object` data type replaces `Variant`.</span></span>  
   
- <span data-ttu-id="2b706-104">**ID errore:** BC30804</span><span class="sxs-lookup"><span data-stu-id="2b706-104">**Error ID:** BC30804</span></span>  
+ <span data-ttu-id="6947e-104">**ID errore:** BC30804</span><span class="sxs-lookup"><span data-stu-id="6947e-104">**Error ID:** BC30804</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2b706-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2b706-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6947e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6947e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="2b706-106">Dichiarare l'elemento come `Object`.</span><span class="sxs-lookup"><span data-stu-id="2b706-106">Declare item as `Object`.</span></span>  
+- <span data-ttu-id="6947e-106">Dichiarare l'elemento come `Object`.</span><span class="sxs-lookup"><span data-stu-id="6947e-106">Declare item as `Object`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2b706-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2b706-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6947e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6947e-107">See also</span></span>
 
-- [<span data-ttu-id="2b706-108">Tipo di dati Object</span><span class="sxs-lookup"><span data-stu-id="2b706-108">Object Data Type</span></span>](../../visual-basic/language-reference/data-types/object-data-type.md)
+- [<span data-ttu-id="6947e-108">Object Data Type</span><span class="sxs-lookup"><span data-stu-id="6947e-108">Object Data Type</span></span>](../language-reference/data-types/object-data-type.md)
