--- a/docs/visual-basic/misc/bc30805.md
+++ b/docs/visual-basic/misc/bc30805.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30805
 ms.assetid: f2055387-f4dc-4366-89fb-d752929a0258
-ms.openlocfilehash: 5ff900ffb6c32e700f73444e1391a19ec7c45454
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: abd3a550391c6bd635406ae80e7bdbc439247cc5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513063"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412299"
 ---
-# <a name="array-declarations-cannot-specify-lower-bounds"></a><span data-ttu-id="b2d39-102">Le dichiarazioni di matrice non possono specificare limiti inferiori</span><span class="sxs-lookup"><span data-stu-id="b2d39-102">Array declarations cannot specify lower bounds</span></span>
+# <a name="array-declarations-cannot-specify-lower-bounds"></a><span data-ttu-id="38c0e-102">Le dichiarazioni di matrice non possono specificare limiti inferiori</span><span class="sxs-lookup"><span data-stu-id="38c0e-102">Array declarations cannot specify lower bounds</span></span>
 
-<span data-ttu-id="b2d39-103">Il limite inferiore delle matrici è sempre zero.</span><span class="sxs-lookup"><span data-stu-id="b2d39-103">Arrays always have a lower bound of zero.</span></span> <span data-ttu-id="b2d39-104">È possibile specificare zero come limite inferiore per rendere il codice più leggibile.</span><span class="sxs-lookup"><span data-stu-id="b2d39-104">You can specify zero as the lower bound to make your code more readable.</span></span> <span data-ttu-id="b2d39-105">Non è tuttavia possibile specificare altri valori per il limite inferiore.</span><span class="sxs-lookup"><span data-stu-id="b2d39-105">However, you cannot specify any other value for the lower bound.</span></span>
+<span data-ttu-id="38c0e-103">Il limite inferiore delle matrici è sempre zero.</span><span class="sxs-lookup"><span data-stu-id="38c0e-103">Arrays always have a lower bound of zero.</span></span> <span data-ttu-id="38c0e-104">È possibile specificare zero come limite inferiore per rendere il codice più leggibile.</span><span class="sxs-lookup"><span data-stu-id="38c0e-104">You can specify zero as the lower bound to make your code more readable.</span></span> <span data-ttu-id="38c0e-105">Non è tuttavia possibile specificare altri valori per il limite inferiore.</span><span class="sxs-lookup"><span data-stu-id="38c0e-105">However, you cannot specify any other value for the lower bound.</span></span>
 
-<span data-ttu-id="b2d39-106">**ID errore:** BC30805</span><span class="sxs-lookup"><span data-stu-id="b2d39-106">**Error ID:** BC30805</span></span>
+<span data-ttu-id="38c0e-106">**ID errore:** BC30805</span><span class="sxs-lookup"><span data-stu-id="38c0e-106">**Error ID:** BC30805</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="b2d39-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b2d39-107">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="38c0e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="38c0e-107">To correct this error</span></span>
 
-- <span data-ttu-id="b2d39-108">Creare matrici di dimensioni pari al numero totale di elementi meno uno.</span><span class="sxs-lookup"><span data-stu-id="b2d39-108">Dimension arrays as one less than the total number of elements.</span></span> <span data-ttu-id="b2d39-109">Ad esempio, `Dim y(6)` ha le stesse dimensioni di `Dim x(3 To 9)`(7 elementi).</span><span class="sxs-lookup"><span data-stu-id="b2d39-109">For example, `Dim y(6)` has the same size (7 elements) as `Dim x(3 To 9)`.</span></span> <span data-ttu-id="b2d39-110">È anche possibile specificare `Dim y(0 To 6)`.</span><span class="sxs-lookup"><span data-stu-id="b2d39-110">You can also specify `Dim y(0 To 6)`.</span></span>
+- <span data-ttu-id="38c0e-108">Creare matrici di dimensioni pari al numero totale di elementi meno uno.</span><span class="sxs-lookup"><span data-stu-id="38c0e-108">Dimension arrays as one less than the total number of elements.</span></span> <span data-ttu-id="38c0e-109">Ad esempio, `Dim y(6)` ha le stesse dimensioni di `Dim x(3 To 9)`(7 elementi).</span><span class="sxs-lookup"><span data-stu-id="38c0e-109">For example, `Dim y(6)` has the same size (7 elements) as `Dim x(3 To 9)`.</span></span> <span data-ttu-id="38c0e-110">È anche possibile specificare `Dim y(0 To 6)`.</span><span class="sxs-lookup"><span data-stu-id="38c0e-110">You can also specify `Dim y(0 To 6)`.</span></span>
 
-- <span data-ttu-id="b2d39-111">Usare gli offset per simulare i limiti inferiori diversi da zero.</span><span class="sxs-lookup"><span data-stu-id="b2d39-111">Use offsets to simulate nonzero lower bounds.</span></span> <span data-ttu-id="b2d39-112">L'esempio seguente simula una matrice di dimensioni comprese tra 3 e 9.</span><span class="sxs-lookup"><span data-stu-id="b2d39-112">The following example simulates an array dimensioned from 3 to 9.</span></span>
+- <span data-ttu-id="38c0e-111">Usare gli offset per simulare i limiti inferiori diversi da zero.</span><span class="sxs-lookup"><span data-stu-id="38c0e-111">Use offsets to simulate nonzero lower bounds.</span></span> <span data-ttu-id="38c0e-112">L'esempio seguente simula una matrice di dimensioni comprese tra 3 e 9.</span><span class="sxs-lookup"><span data-stu-id="38c0e-112">The following example simulates an array dimensioned from 3 to 9.</span></span>
 
   ```vb
   Const offset As Integer = 3
@@ -38,7 +38,7 @@ ms.locfileid: "68513063"
   ' corresponding index of y.
   ```
 
-## <a name="see-also"></a><span data-ttu-id="b2d39-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b2d39-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="38c0e-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="38c0e-113">See also</span></span>
 
-- [<span data-ttu-id="b2d39-114">Matrici</span><span class="sxs-lookup"><span data-stu-id="b2d39-114">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
-- [<span data-ttu-id="b2d39-115">Array Dimensions in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b2d39-115">Array Dimensions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/array-dimensions.md)
+- [<span data-ttu-id="38c0e-114">Matrici</span><span class="sxs-lookup"><span data-stu-id="38c0e-114">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="38c0e-115">Array Dimensions in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="38c0e-115">Array Dimensions in Visual Basic</span></span>](../programming-guide/language-features/arrays/array-dimensions.md)
