--- a/docs/visual-basic/misc/bc30807.md
+++ b/docs/visual-basic/misc/bc30807.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30807
 ms.assetid: 41345efa-0d9f-4dfa-b16c-0f649efe8e24
-ms.openlocfilehash: 67c9efac31d99c95d2e0a279cf795d36d4869f89
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9763f0aa5e48c49b8b1114dae388f7dd72a15834
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412286"
 ---
-# <a name="let-and-set-assignment-statements-are-no-longer-supported"></a><span data-ttu-id="48840-102">Le istruzioni di assegnazione 'Let' e 'Set' non sono più supportate</span><span class="sxs-lookup"><span data-stu-id="48840-102">'Let' and 'Set' assignment statements are no longer supported</span></span>
-<span data-ttu-id="48840-103">`Let` e `Set` non possono essere usati nelle assegnazioni.</span><span class="sxs-lookup"><span data-stu-id="48840-103">`Let` and `Set` cannot be used in assignments.</span></span>  
+# <a name="let-and-set-assignment-statements-are-no-longer-supported"></a><span data-ttu-id="f7de7-102">Le istruzioni di assegnazione 'Let' e 'Set' non sono più supportate</span><span class="sxs-lookup"><span data-stu-id="f7de7-102">'Let' and 'Set' assignment statements are no longer supported</span></span>
+<span data-ttu-id="f7de7-103">`Let` e `Set` non possono essere usati nelle assegnazioni.</span><span class="sxs-lookup"><span data-stu-id="f7de7-103">`Let` and `Set` cannot be used in assignments.</span></span>  
   
- <span data-ttu-id="48840-104">**ID errore:** BC30807</span><span class="sxs-lookup"><span data-stu-id="48840-104">**Error ID:** BC30807</span></span>  
+ <span data-ttu-id="f7de7-104">**ID errore:** BC30807</span><span class="sxs-lookup"><span data-stu-id="f7de7-104">**Error ID:** BC30807</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="48840-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="48840-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f7de7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f7de7-105">To correct this error</span></span>  
   
-- <span data-ttu-id="48840-106">Omettere `Let` e `Set` dalle istruzioni di assegnazione, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="48840-106">Omit `Let` and `Set` from assignment statements; for example:</span></span>  
+- <span data-ttu-id="f7de7-106">Omettere `Let` e `Set` dalle istruzioni di assegnazione, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="f7de7-106">Omit `Let` and `Set` from assignment statements; for example:</span></span>  
   
      `X = 2`  
   
-## <a name="see-also"></a><span data-ttu-id="48840-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="48840-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f7de7-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f7de7-107">See also</span></span>
 
-- [<span data-ttu-id="48840-108">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="48840-108">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="f7de7-108">Property Statement</span><span class="sxs-lookup"><span data-stu-id="f7de7-108">Property Statement</span></span>](../language-reference/statements/property-statement.md)
