--- a/docs/visual-basic/misc/bc30808.md
+++ b/docs/visual-basic/misc/bc30808.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà Get, Let e Set non sono più supportate; usare la nuova sintassi di dichiarazione di proprietà
+title: Get, Let e Set non sono più supportati per le proprietà. Usare la nuova sintassi di dichiarazione delle proprietà
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30808
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC30808
 ms.assetid: c8a803eb-316d-4f73-b6ef-27a2914409f3
-ms.openlocfilehash: de6d9468877872f290adefd6e5f0ce25842e6ba8
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 2cea34bfc9f2a5fb8498aa8704eb915e4800cf62
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61796305"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412273"
 ---
-# <a name="property-getletset-are-no-longer-supported-use-the-new-property-declaration-syntax"></a><span data-ttu-id="92761-102">Get, Let e Set non sono più supportati per le proprietà. Utilizzare la nuova sintassi di dichiarazione delle proprietà</span><span class="sxs-lookup"><span data-stu-id="92761-102">Property Get/Let/Set are no longer supported; use the new Property declaration syntax</span></span>
-<span data-ttu-id="92761-103">`Property Get/Let/Set` non sono più supportati. Usare la nuova sintassi di dichiarazione `Property` .</span><span class="sxs-lookup"><span data-stu-id="92761-103">`Property Get/Let/Set` are no longer supported; use the new `Property` declaration syntax.</span></span>  
+# <a name="property-getletset-are-no-longer-supported-use-the-new-property-declaration-syntax"></a><span data-ttu-id="1b0a3-102">Get, Let e Set non sono più supportati per le proprietà. Utilizzare la nuova sintassi di dichiarazione delle proprietà</span><span class="sxs-lookup"><span data-stu-id="1b0a3-102">Property Get/Let/Set are no longer supported; use the new Property declaration syntax</span></span>
+<span data-ttu-id="1b0a3-103">`Property Get/Let/Set` non sono più supportati. Usare la nuova sintassi di dichiarazione `Property` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-103">`Property Get/Let/Set` are no longer supported; use the new `Property` declaration syntax.</span></span>  
   
- <span data-ttu-id="92761-104">La sintassi per la dichiarazione delle proprietà è stata modificata.</span><span class="sxs-lookup"><span data-stu-id="92761-104">The syntax for declaring properties has changed.</span></span> <span data-ttu-id="92761-105">Le proprietà ora vengono definite all'interno di blocchi.</span><span class="sxs-lookup"><span data-stu-id="92761-105">Properties are now defined within blocks.</span></span>  
+ <span data-ttu-id="1b0a3-104">La sintassi per la dichiarazione delle proprietà è stata modificata.</span><span class="sxs-lookup"><span data-stu-id="1b0a3-104">The syntax for declaring properties has changed.</span></span> <span data-ttu-id="1b0a3-105">Le proprietà ora vengono definite all'interno di blocchi.</span><span class="sxs-lookup"><span data-stu-id="1b0a3-105">Properties are now defined within blocks.</span></span>  
   
- <span data-ttu-id="92761-106">**ID errore:** BC30808</span><span class="sxs-lookup"><span data-stu-id="92761-106">**Error ID:** BC30808</span></span>  
+ <span data-ttu-id="1b0a3-106">**ID errore:** BC30808</span><span class="sxs-lookup"><span data-stu-id="1b0a3-106">**Error ID:** BC30808</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="92761-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="92761-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1b0a3-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1b0a3-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="92761-108">Definire le proprietà in blocchi di codice che iniziano con la parola chiave `Property` .</span><span class="sxs-lookup"><span data-stu-id="92761-108">Define properties in blocks of code that begin with the `Property` keyword.</span></span> <span data-ttu-id="92761-109">Terminare le proprietà con il costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="92761-109">End properties using the `End Property` construct.</span></span>  
+1. <span data-ttu-id="1b0a3-108">Definire le proprietà in blocchi di codice che iniziano con la parola chiave `Property` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-108">Define properties in blocks of code that begin with the `Property` keyword.</span></span> <span data-ttu-id="1b0a3-109">Terminare le proprietà con il costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-109">End properties using the `End Property` construct.</span></span>  
   
-2. <span data-ttu-id="92761-110">Definire le routine della proprietà `Get` all'interno di blocchi di proprietà con la parola chiave `Get` .</span><span class="sxs-lookup"><span data-stu-id="92761-110">Define `Get` property procedures within property blocks with the `Get` keyword.</span></span> <span data-ttu-id="92761-111">Terminare le routine `Get` della proprietà con il costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="92761-111">End `Get` property procedures with the `End Get` construct.</span></span>  
+2. <span data-ttu-id="1b0a3-110">Definire le routine della proprietà `Get` all'interno di blocchi di proprietà con la parola chiave `Get` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-110">Define `Get` property procedures within property blocks with the `Get` keyword.</span></span> <span data-ttu-id="1b0a3-111">Terminare le routine `Get` della proprietà con il costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-111">End `Get` property procedures with the `End Get` construct.</span></span>  
   
-3. <span data-ttu-id="92761-112">Definire le routine `Set` della proprietà all'interno di blocchi di proprietà con la parola chiave `Set` .</span><span class="sxs-lookup"><span data-stu-id="92761-112">Define property `Set` procedures within property blocks with the `Set` keyword.</span></span> <span data-ttu-id="92761-113">Terminare le routine `Set` della proprietà con il costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="92761-113">End `Set` property procedures with the `End Set` construct.</span></span>  
+3. <span data-ttu-id="1b0a3-112">Definire le routine `Set` della proprietà all'interno di blocchi di proprietà con la parola chiave `Set` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-112">Define property `Set` procedures within property blocks with the `Set` keyword.</span></span> <span data-ttu-id="1b0a3-113">Terminare le routine `Set` della proprietà con il costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="1b0a3-113">End `Set` property procedures with the `End Set` construct.</span></span>  
   
-4. <span data-ttu-id="92761-114">Usare le routine `Set` della proprietà per tutte le assegnazioni di proprietà.</span><span class="sxs-lookup"><span data-stu-id="92761-114">Use `Set` property procedures for all property assignments.</span></span> <span data-ttu-id="92761-115">Le routine`Let` della proprietà non sono più necessarie né supportate.</span><span class="sxs-lookup"><span data-stu-id="92761-115">`Let` property procedures are no longer necessary, or supported.</span></span>  
+4. <span data-ttu-id="1b0a3-114">Usare le routine `Set` della proprietà per tutte le assegnazioni di proprietà.</span><span class="sxs-lookup"><span data-stu-id="1b0a3-114">Use `Set` property procedures for all property assignments.</span></span> <span data-ttu-id="1b0a3-115">Le routine`Let` della proprietà non sono più necessarie né supportate.</span><span class="sxs-lookup"><span data-stu-id="1b0a3-115">`Let` property procedures are no longer necessary, or supported.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="92761-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="92761-116">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1b0a3-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1b0a3-116">See also</span></span>
 
-- [<span data-ttu-id="92761-117">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="92761-117">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="1b0a3-117">Property Statement</span><span class="sxs-lookup"><span data-stu-id="1b0a3-117">Property Statement</span></span>](../language-reference/statements/property-statement.md)
