--- a/docs/visual-basic/misc/bc30937.md
+++ b/docs/visual-basic/misc/bc30937.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è possibile implementare il membro ' <interfacename>. <procedurename>' corrispondente a questa firma perché l'interfaccia ' <interfacename>' contiene più membri con lo stesso nome e la stessa firma: <signaturelist>"
+title: <interfacename> <procedurename> Non è possibile implementare il membro ' .' che corrisponde a questa firma perché l'interfaccia ' <interfacename> ' contiene più membri con lo stesso nome e la stessa firma:<signaturelist>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30937
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC30937
 ms.assetid: e917d85e-95e0-431a-9d09-39ce5d4fc894
-ms.openlocfilehash: c6b827ed975f442e9de46da20c8d30c18fb2c36b
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: a9609090365dbe7b18ca1589e8e1e871d9dee1f4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352654"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414025"
 ---
-# <a name="member-interfacenameprocedurename-that-matches-this-signature-cannot-be-implemented-because-the-interface-interfacename-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a><span data-ttu-id="a2dc2-102">Non è possibile implementare il membro ' \<interfacename >. \<procedurename >' corrispondente a questa firma perché l'interfaccia ' \<interfacename >' contiene più membri con lo stesso nome e la stessa firma: \<signaturelist ></span><span class="sxs-lookup"><span data-stu-id="a2dc2-102">Member '\<interfacename>.\<procedurename>' that matches this signature cannot be implemented because the interface '\<interfacename>' contains multiple members with this same name and signature: \<signaturelist></span></span>
-<span data-ttu-id="a2dc2-103">Una routine o proprietà prova a implementare una routine o proprietà definita in un'interfaccia implementata, ma il compilatore trova più versioni della routine o della proprietà d'interfaccia con lo stesso nome e la stessa firma.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-103">A procedure or property attempts to implement a procedure or property defined in an implemented interface, but the compiler finds more than one version of the interface procedure or property with the same name and signature.</span></span>  
+# <a name="member-interfacenameprocedurename-that-matches-this-signature-cannot-be-implemented-because-the-interface-interfacename-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a><span data-ttu-id="985bd-102">\<interfacename> \<procedurename> Non è possibile implementare il membro ' .' che corrisponde a questa firma perché l'interfaccia ' \<interfacename> ' contiene più membri con lo stesso nome e la stessa firma:\<signaturelist></span><span class="sxs-lookup"><span data-stu-id="985bd-102">Member '\<interfacename>.\<procedurename>' that matches this signature cannot be implemented because the interface '\<interfacename>' contains multiple members with this same name and signature: \<signaturelist></span></span>
+<span data-ttu-id="985bd-103">Una routine o proprietà prova a implementare una routine o proprietà definita in un'interfaccia implementata, ma il compilatore trova più versioni della routine o della proprietà d'interfaccia con lo stesso nome e la stessa firma.</span><span class="sxs-lookup"><span data-stu-id="985bd-103">A procedure or property attempts to implement a procedure or property defined in an implemented interface, but the compiler finds more than one version of the interface procedure or property with the same name and signature.</span></span>  
   
- <span data-ttu-id="a2dc2-104">Questo errore può verificarsi in una situazione con tipi generici costruiti, come illustrano le seguenti dichiarazioni di struttura.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-104">This error can occur in a situation with constructed generic types, as the following skeleton declarations illustrate.</span></span>  
+ <span data-ttu-id="985bd-104">Questo errore può verificarsi in una situazione con tipi generici costruiti, come illustrano le seguenti dichiarazioni di struttura.</span><span class="sxs-lookup"><span data-stu-id="985bd-104">This error can occur in a situation with constructed generic types, as the following skeleton declarations illustrate.</span></span>  
   
 ```vb  
 Public Interface baseInterface(Of t)  
@@ -32,19 +32,19 @@ Public Class implementingClass
 End Class  
 ```  
   
- <span data-ttu-id="a2dc2-105">Dal momento che `implementingClass` implementa `baseInterface` fornendo `String` al relativo parametro di tipo `t`, le due versioni di `doSomething` in `baseInterface` assumono firme identiche per quanto riguarda `implementingClass` .</span><span class="sxs-lookup"><span data-stu-id="a2dc2-105">Because `implementingClass` implements `baseInterface` supplying `String` to its type parameter `t`, the two versions of `doSomething` in `baseInterface` take on identical signatures as far as `implementingClass` is concerned.</span></span> <span data-ttu-id="a2dc2-106">Di conseguenza, il compilatore non riesce a determinare quale versione implementare.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-106">As a result, the compiler cannot determine which version to implement.</span></span>  
+ <span data-ttu-id="985bd-105">Dal momento che `implementingClass` implementa `baseInterface` fornendo `String` al relativo parametro di tipo `t`, le due versioni di `doSomething` in `baseInterface` assumono firme identiche per quanto riguarda `implementingClass` .</span><span class="sxs-lookup"><span data-stu-id="985bd-105">Because `implementingClass` implements `baseInterface` supplying `String` to its type parameter `t`, the two versions of `doSomething` in `baseInterface` take on identical signatures as far as `implementingClass` is concerned.</span></span> <span data-ttu-id="985bd-106">Di conseguenza, il compilatore non riesce a determinare quale versione implementare.</span><span class="sxs-lookup"><span data-stu-id="985bd-106">As a result, the compiler cannot determine which version to implement.</span></span>  
   
- <span data-ttu-id="a2dc2-107">**ID errore:** BC30937</span><span class="sxs-lookup"><span data-stu-id="a2dc2-107">**Error ID:** BC30937</span></span>  
+ <span data-ttu-id="985bd-107">**ID errore:** BC30937</span><span class="sxs-lookup"><span data-stu-id="985bd-107">**Error ID:** BC30937</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a2dc2-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a2dc2-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="985bd-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="985bd-108">To correct this error</span></span>  
   
-- <span data-ttu-id="a2dc2-109">Modificare l'argomento o gli argomenti di tipo che si forniscono alla classe base in modo che non comportino una o più firme identiche delle routine o proprietà del membro.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-109">Change the type argument or arguments you supply to the base class so that it does not result in one or more identical signatures of member procedures or properties.</span></span>  
+- <span data-ttu-id="985bd-109">Modificare l'argomento o gli argomenti di tipo che si forniscono alla classe base in modo che non comportino una o più firme identiche delle routine o proprietà del membro.</span><span class="sxs-lookup"><span data-stu-id="985bd-109">Change the type argument or arguments you supply to the base class so that it does not result in one or more identical signatures of member procedures or properties.</span></span>  
   
-     <span data-ttu-id="a2dc2-110">-oppure-</span><span class="sxs-lookup"><span data-stu-id="a2dc2-110">-or-</span></span>  
+     <span data-ttu-id="985bd-110">-oppure-</span><span class="sxs-lookup"><span data-stu-id="985bd-110">-or-</span></span>  
   
-- <span data-ttu-id="a2dc2-111">Non implementare questa classe base.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-111">Do not implement this base class.</span></span> <span data-ttu-id="a2dc2-112">Non è possibile implementarla con la raccolta degli argomenti di tipo in uso perché altrimenti sarebbe necessario implementare ciascuno dei relativi membri.</span><span class="sxs-lookup"><span data-stu-id="a2dc2-112">You cannot implement it with the set of type arguments you are using, because you must implement every one of its members.</span></span>  
+- <span data-ttu-id="985bd-111">Non implementare questa classe base.</span><span class="sxs-lookup"><span data-stu-id="985bd-111">Do not implement this base class.</span></span> <span data-ttu-id="985bd-112">Non è possibile implementarla con la raccolta degli argomenti di tipo in uso perché altrimenti sarebbe necessario implementare ciascuno dei relativi membri.</span><span class="sxs-lookup"><span data-stu-id="985bd-112">You cannot implement it with the set of type arguments you are using, because you must implement every one of its members.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a2dc2-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a2dc2-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="985bd-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="985bd-113">See also</span></span>
 
-- [<span data-ttu-id="a2dc2-114">Implements</span><span class="sxs-lookup"><span data-stu-id="a2dc2-114">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
-- [<span data-ttu-id="a2dc2-115">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="a2dc2-115">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="985bd-114">Implementazioni</span><span class="sxs-lookup"><span data-stu-id="985bd-114">Implements</span></span>](../language-reference/statements/implements-clause.md)
+- [<span data-ttu-id="985bd-115">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="985bd-115">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
