--- a/docs/visual-basic/misc/bc31053.md
+++ b/docs/visual-basic/misc/bc31053.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31053
 ms.assetid: 8036a1a1-7e31-4c49-b74b-01601a548f3e
-ms.openlocfilehash: 28aa4d2faa09b3b35fccb56bd3650a1d0a8a0d77
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 8c03a0241ea48c43e393b324f1306cd8de27f8e6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71351462"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414764"
 ---
-# <a name="implements-statement-must-follow-any-inherits-statement-and-precede-all-declarations-in-a-class"></a><span data-ttu-id="9fab0-102">Le istruzioni 'Implements' devono seguire l'istruzione 'Inherits' e precedere tutte le dichiarazioni all'interno di una classe</span><span class="sxs-lookup"><span data-stu-id="9fab0-102">'Implements' statement must follow any 'Inherits' statement and precede all declarations in a class</span></span>
-<span data-ttu-id="9fab0-103">È stata rilevata un'istruzione `Implements` in una posizione non valida.</span><span class="sxs-lookup"><span data-stu-id="9fab0-103">An `Implements` statement was encountered in an invalid location.</span></span>  
+# <a name="implements-statement-must-follow-any-inherits-statement-and-precede-all-declarations-in-a-class"></a><span data-ttu-id="dabb3-102">Le istruzioni 'Implements' devono seguire l'istruzione 'Inherits' e precedere tutte le dichiarazioni all'interno di una classe</span><span class="sxs-lookup"><span data-stu-id="dabb3-102">'Implements' statement must follow any 'Inherits' statement and precede all declarations in a class</span></span>
+<span data-ttu-id="dabb3-103">È stata rilevata un'istruzione `Implements` in una posizione non valida.</span><span class="sxs-lookup"><span data-stu-id="dabb3-103">An `Implements` statement was encountered in an invalid location.</span></span>  
   
- <span data-ttu-id="9fab0-104">**ID errore:** BC31053</span><span class="sxs-lookup"><span data-stu-id="9fab0-104">**Error ID:** BC31053</span></span>  
+ <span data-ttu-id="dabb3-104">**ID errore:** BC31053</span><span class="sxs-lookup"><span data-stu-id="dabb3-104">**Error ID:** BC31053</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9fab0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9fab0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dabb3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dabb3-105">To correct this error</span></span>  
   
-- <span data-ttu-id="9fab0-106">Inserire le istruzioni `Implements` subito dopo le istruzioni `Inherits` , ma prima di qualsiasi dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="9fab0-106">Place `Implements` statements immediately following any `Inherits` statements, but before any declarations.</span></span> <span data-ttu-id="9fab0-107">Esempio:</span><span class="sxs-lookup"><span data-stu-id="9fab0-107">For example:</span></span>  
+- <span data-ttu-id="dabb3-106">Inserire le istruzioni `Implements` subito dopo le istruzioni `Inherits` , ma prima di qualsiasi dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="dabb3-106">Place `Implements` statements immediately following any `Inherits` statements, but before any declarations.</span></span> <span data-ttu-id="dabb3-107">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="dabb3-107">For example:</span></span>  
   
     ```vb  
     Class Derived  
@@ -33,7 +33,7 @@ ms.locfileid: "71351462"
     End Class  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="9fab0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9fab0-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dabb3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dabb3-108">See also</span></span>
 
-- [<span data-ttu-id="9fab0-109">Interfacce</span><span class="sxs-lookup"><span data-stu-id="9fab0-109">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [<span data-ttu-id="9fab0-110">Implements</span><span class="sxs-lookup"><span data-stu-id="9fab0-110">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
+- [<span data-ttu-id="dabb3-109">Interfacce</span><span class="sxs-lookup"><span data-stu-id="dabb3-109">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="dabb3-110">Implementazioni</span><span class="sxs-lookup"><span data-stu-id="dabb3-110">Implements</span></span>](../language-reference/statements/implements-clause.md)
