--- a/docs/visual-basic/misc/bc31509.md
+++ b/docs/visual-basic/misc/bc31509.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è possibile aprire il file di risorse ' <filename>': <error>"
+title: Non è possibile aprire il file di risorse ' <filename> ':<error>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31509
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31509
 ms.assetid: 482a9384-796a-4c2c-9f73-eb19e590f68a
-ms.openlocfilehash: 70ad164d32e8da2c450315f9a42b938525f4c93a
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: cf1230a684b8b61074fdd5076582bf5d7d34112a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72769878"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412208"
 ---
-# <a name="unable-to-open-resource-file-filename-error"></a><span data-ttu-id="c662d-102">Non è possibile aprire il file di risorse ' \<filename >': \<error ></span><span class="sxs-lookup"><span data-stu-id="c662d-102">Unable to open resource file '\<filename>': \<error></span></span>
-<span data-ttu-id="c662d-103">Si è verificato un errore durante l'apertura del file di risorse specificato.</span><span class="sxs-lookup"><span data-stu-id="c662d-103">There was an error opening the specified resource file.</span></span>  
+# <a name="unable-to-open-resource-file-filename-error"></a><span data-ttu-id="217ec-102">Non è possibile aprire il file di risorse ' \<filename> ':\<error></span><span class="sxs-lookup"><span data-stu-id="217ec-102">Unable to open resource file '\<filename>': \<error></span></span>
+<span data-ttu-id="217ec-103">Si è verificato un errore durante l'apertura del file di risorse specificato.</span><span class="sxs-lookup"><span data-stu-id="217ec-103">There was an error opening the specified resource file.</span></span>  
   
- <span data-ttu-id="c662d-104">**ID errore:** BC31509</span><span class="sxs-lookup"><span data-stu-id="c662d-104">**Error ID:** BC31509</span></span>  
+ <span data-ttu-id="217ec-104">**ID errore:** BC31509</span><span class="sxs-lookup"><span data-stu-id="217ec-104">**Error ID:** BC31509</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c662d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c662d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="217ec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="217ec-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="c662d-106">Verificare che il nome e il percorso specificati siano corretti.</span><span class="sxs-lookup"><span data-stu-id="c662d-106">Verify that the specified name and location are correct.</span></span>  
+1. <span data-ttu-id="217ec-106">Verificare che il nome e il percorso specificati siano corretti.</span><span class="sxs-lookup"><span data-stu-id="217ec-106">Verify that the specified name and location are correct.</span></span>  
   
-2. <span data-ttu-id="c662d-107">Verificare che il file non sia danneggiato.</span><span class="sxs-lookup"><span data-stu-id="c662d-107">Verify that the file is not damaged or corrupt.</span></span>  
+2. <span data-ttu-id="217ec-107">Verificare che il file non sia danneggiato.</span><span class="sxs-lookup"><span data-stu-id="217ec-107">Verify that the file is not damaged or corrupt.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c662d-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c662d-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="217ec-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="217ec-108">See also</span></span>
 
-- [<span data-ttu-id="c662d-109">-linkresource ((Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="c662d-109">-linkresource (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/linkresource.md)
-- [<span data-ttu-id="c662d-110">-Resource (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="c662d-110">-resource (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/resource.md)
+- [<span data-ttu-id="217ec-109">-linkresource ((Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="217ec-109">-linkresource (Visual Basic)</span></span>](../reference/command-line-compiler/linkresource.md)
+- [<span data-ttu-id="217ec-110">-Resource (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="217ec-110">-resource (Visual Basic)</span></span>](../reference/command-line-compiler/resource.md)
