--- a/docs/visual-basic/misc/bc31524.md
+++ b/docs/visual-basic/misc/bc31524.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31524
 ms.assetid: 3603e33a-a80b-448d-83e0-e5dbc9af4dcf
-ms.openlocfilehash: 1d18b46b25e636ebd6e969ca5edb66bbf1198fd8
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 54d25f257c36bc3c87b32a26c874864d8390a68a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61908290"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412170"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-get-or-set"></a><span data-ttu-id="90759-102">'System.Runtime.InteropServices.DllImportAttribute' non può essere applicato a 'Get' o 'Set'</span><span class="sxs-lookup"><span data-stu-id="90759-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a 'Get' or 'Set'</span></span>
-<span data-ttu-id="90759-103">L'attributo `DllImportAttribute` è stato applicato a una routine della proprietà `Get` o `Set` .</span><span class="sxs-lookup"><span data-stu-id="90759-103">The `DllImportAttribute` attribute was applied to a `Get` or `Set` property procedure.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-get-or-set"></a><span data-ttu-id="e4caa-102">'System.Runtime.InteropServices.DllImportAttribute' non può essere applicato a 'Get' o 'Set'</span><span class="sxs-lookup"><span data-stu-id="e4caa-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a 'Get' or 'Set'</span></span>
+<span data-ttu-id="e4caa-103">L'attributo `DllImportAttribute` è stato applicato a una routine della proprietà `Get` o `Set` .</span><span class="sxs-lookup"><span data-stu-id="e4caa-103">The `DllImportAttribute` attribute was applied to a `Get` or `Set` property procedure.</span></span>  
   
- <span data-ttu-id="90759-104">**ID errore:** BC31524</span><span class="sxs-lookup"><span data-stu-id="90759-104">**Error ID:** BC31524</span></span>  
+ <span data-ttu-id="e4caa-104">**ID errore:** BC31524</span><span class="sxs-lookup"><span data-stu-id="e4caa-104">**Error ID:** BC31524</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="90759-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="90759-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e4caa-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e4caa-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="90759-106">Rimuovere `DllImportAttribute` dalle routine della proprietà `Get` e `Set` .</span><span class="sxs-lookup"><span data-stu-id="90759-106">Remove `DllImportAttribute` from `Get` and `Set` property procedures.</span></span>  
+1. <span data-ttu-id="e4caa-106">Rimuovere `DllImportAttribute` dalle routine della proprietà `Get` e `Set` .</span><span class="sxs-lookup"><span data-stu-id="e4caa-106">Remove `DllImportAttribute` from `Get` and `Set` property procedures.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="90759-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="90759-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e4caa-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e4caa-107">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [<span data-ttu-id="90759-108">Routine Property</span><span class="sxs-lookup"><span data-stu-id="90759-108">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="e4caa-108">Routine Property</span><span class="sxs-lookup"><span data-stu-id="e4caa-108">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
