--- a/docs/visual-basic/misc/bc31531.md
+++ b/docs/visual-basic/misc/bc31531.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC31531
 ms.assetid: 0ea3a16c-cfe0-4cb5-b740-358679272f8d
-ms.openlocfilehash: f7893e1e32de8b7389125884650002e0bc2c5bc3
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 750b0837f286d070a735744a4dd4312cad93f3a2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660870"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412104"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-addhandler-removehandler-or-raiseevent-methods"></a><span data-ttu-id="c2114-102">'System.Runtime.InteropServices.DllImportAttribute' non può essere applicato ai metodi 'AddHandler', 'RemoveHandler' o 'RaiseEvent'</span><span class="sxs-lookup"><span data-stu-id="c2114-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to 'AddHandler', 'RemoveHandler', or 'RaiseEvent' methods</span></span>
-<span data-ttu-id="c2114-103">L'attributo `DllImportAttribute` è stato applicato a una dichiarazione di metodo `AddHandler`, `RemoveHandler`o `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="c2114-103">The `DllImportAttribute` attribute was applied to an `AddHandler`, `RemoveHandler`, or `RaiseEvent` method declaration.</span></span> <span data-ttu-id="c2114-104">Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.</span><span class="sxs-lookup"><span data-stu-id="c2114-104">This attribute can only be used with an empty `Function` or `Sub`.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-addhandler-removehandler-or-raiseevent-methods"></a><span data-ttu-id="1f07c-102">'System.Runtime.InteropServices.DllImportAttribute' non può essere applicato ai metodi 'AddHandler', 'RemoveHandler' o 'RaiseEvent'</span><span class="sxs-lookup"><span data-stu-id="1f07c-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to 'AddHandler', 'RemoveHandler', or 'RaiseEvent' methods</span></span>
+<span data-ttu-id="1f07c-103">L'attributo `DllImportAttribute` è stato applicato a una dichiarazione di metodo `AddHandler`, `RemoveHandler`o `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="1f07c-103">The `DllImportAttribute` attribute was applied to an `AddHandler`, `RemoveHandler`, or `RaiseEvent` method declaration.</span></span> <span data-ttu-id="1f07c-104">Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.</span><span class="sxs-lookup"><span data-stu-id="1f07c-104">This attribute can only be used with an empty `Function` or `Sub`.</span></span>  
   
- <span data-ttu-id="c2114-105">**ID errore:** BC31531</span><span class="sxs-lookup"><span data-stu-id="c2114-105">**Error ID:** BC31531</span></span>  
+ <span data-ttu-id="1f07c-105">**ID errore:** BC31531</span><span class="sxs-lookup"><span data-stu-id="1f07c-105">**Error ID:** BC31531</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c2114-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c2114-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1f07c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1f07c-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c2114-107">Rimuovere l'attributo `DllImportAttribute` dalla dichiarazione di metodo.</span><span class="sxs-lookup"><span data-stu-id="c2114-107">Remove the `DllImportAttribute` attribute from the method declaration.</span></span>  
+- <span data-ttu-id="1f07c-107">Rimuovere l'attributo `DllImportAttribute` dalla dichiarazione di metodo.</span><span class="sxs-lookup"><span data-stu-id="1f07c-107">Remove the `DllImportAttribute` attribute from the method declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c2114-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c2114-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1f07c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1f07c-108">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [<span data-ttu-id="c2114-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="c2114-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="c2114-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="c2114-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="c2114-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="c2114-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="c2114-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="c2114-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="1f07c-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="1f07c-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="1f07c-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="1f07c-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="1f07c-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="1f07c-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="1f07c-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="1f07c-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
