--- a/docs/visual-basic/misc/bc32000.md
+++ b/docs/visual-basic/misc/bc32000.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile locale '<variablename>' Impossibile fare riferimento alla prima che sia dichiarata
+title: Impossibile fare riferimento alla variabile locale '<variablename>' prima che sia dichiarata
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32000
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC32000
 ms.assetid: 81e2bbe3-8b8a-4bf7-b344-08489d50ef6e
-ms.openlocfilehash: 400d31634ad92eff3dd2578c129e762f233cfc99
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 50e6046acfa1871e95759e8ce199644c44b8676c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651282"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412070"
 ---
-# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a><span data-ttu-id="afadd-102">Variabile locale '\<nomevariabile >' non può fare riferimento alla prima che sia dichiarata</span><span class="sxs-lookup"><span data-stu-id="afadd-102">Local variable '\<variablename>' cannot be referred to before it is declared</span></span>
-<span data-ttu-id="afadd-103">Una variabile all'interno di una routine viene usata prima di essere dichiarata.</span><span class="sxs-lookup"><span data-stu-id="afadd-103">A variable inside a procedure is used before its declaration.</span></span>  
+# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a><span data-ttu-id="9ce9a-102">Impossibile fare riferimento alla variabile locale '\<variablename>' prima che sia dichiarata</span><span class="sxs-lookup"><span data-stu-id="9ce9a-102">Local variable '\<variablename>' cannot be referred to before it is declared</span></span>
+<span data-ttu-id="9ce9a-103">Una variabile all'interno di una routine viene usata prima di essere dichiarata.</span><span class="sxs-lookup"><span data-stu-id="9ce9a-103">A variable inside a procedure is used before its declaration.</span></span>  
   
- <span data-ttu-id="afadd-104">**ID errore:** BC32000</span><span class="sxs-lookup"><span data-stu-id="afadd-104">**Error ID:** BC32000</span></span>  
+ <span data-ttu-id="9ce9a-104">**ID errore:** BC32000</span><span class="sxs-lookup"><span data-stu-id="9ce9a-104">**Error ID:** BC32000</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="afadd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="afadd-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9ce9a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9ce9a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="afadd-106">Spostare la dichiarazione in modo che preceda il primo riferimento alla variabile.</span><span class="sxs-lookup"><span data-stu-id="afadd-106">Move the declaration to precede the first reference to the variable.</span></span>  
+- <span data-ttu-id="9ce9a-106">Spostare la dichiarazione in modo che preceda il primo riferimento alla variabile.</span><span class="sxs-lookup"><span data-stu-id="9ce9a-106">Move the declaration to precede the first reference to the variable.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="afadd-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="afadd-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9ce9a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9ce9a-107">See also</span></span>
 
-- [<span data-ttu-id="afadd-108">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="afadd-108">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="9ce9a-108">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="9ce9a-108">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
