--- a/docs/visual-basic/misc/bc32004.md
+++ b/docs/visual-basic/misc/bc32004.md
@@ -1,5 +1,5 @@
 ---
-title: "' <name>' è dichiarato nel progetto ' <projectname1>', a cui non fa riferimento il progetto ' <projectname2>'"
+title: "' <name> ' è dichiarato nel progetto ' <projectname1> ', a cui non fa riferimento il progetto ' <projectname2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32004
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32004
 ms.assetid: 8a305cb5-219b-44ac-b16c-29f42af4ea1a
-ms.openlocfilehash: 66ca7b3bf3f9316367839b8482b62739c845fa3c
-ms.sourcegitcommit: 4f4a32a5c16a75724920fa9627c59985c41e173c
+ms.openlocfilehash: f55e490beb74518769884d4328c8e842de77099f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/17/2019
-ms.locfileid: "72524431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414647"
 ---
-# <a name="name-is-declared-in-project-projectname1-which-is-not-referenced-by-project-projectname2"></a><span data-ttu-id="9322e-102">' \<name >' è dichiarato nel progetto ' \<projectname1 >', a cui non fa riferimento il progetto ' \<projectname2 >'</span><span class="sxs-lookup"><span data-stu-id="9322e-102">'\<name>' is declared in project '\<projectname1>', which is not referenced by project '\<projectname2>'</span></span>
-<span data-ttu-id="9322e-103">Un elemento di programmazione è definito in un progetto al quale il progetto corrente non fa riferimento.</span><span class="sxs-lookup"><span data-stu-id="9322e-103">A programming element is defined in a project to which the current project does not have a reference.</span></span>  
+# <a name="name-is-declared-in-project-projectname1-which-is-not-referenced-by-project-projectname2"></a><span data-ttu-id="fca13-102">' \<name> ' è dichiarato nel progetto ' \<projectname1> ', a cui non fa riferimento il progetto ' \<projectname2> '</span><span class="sxs-lookup"><span data-stu-id="fca13-102">'\<name>' is declared in project '\<projectname1>', which is not referenced by project '\<projectname2>'</span></span>
+<span data-ttu-id="fca13-103">Un elemento di programmazione è definito in un progetto al quale il progetto corrente non fa riferimento.</span><span class="sxs-lookup"><span data-stu-id="fca13-103">A programming element is defined in a project to which the current project does not have a reference.</span></span>  
   
- <span data-ttu-id="9322e-104">**ID errore:** BC32004</span><span class="sxs-lookup"><span data-stu-id="9322e-104">**Error ID:** BC32004</span></span>  
+ <span data-ttu-id="fca13-104">**ID errore:** BC32004</span><span class="sxs-lookup"><span data-stu-id="fca13-104">**Error ID:** BC32004</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9322e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9322e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fca13-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fca13-105">To correct this error</span></span>  
   
-- <span data-ttu-id="9322e-106">Nel progetto corrente aggiungere un riferimento al progetto che contiene l'elemento desiderato.</span><span class="sxs-lookup"><span data-stu-id="9322e-106">In the current project, add a reference to the project that contains the desired element.</span></span>  
+- <span data-ttu-id="fca13-106">Nel progetto corrente aggiungere un riferimento al progetto che contiene l'elemento desiderato.</span><span class="sxs-lookup"><span data-stu-id="fca13-106">In the current project, add a reference to the project that contains the desired element.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9322e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9322e-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fca13-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fca13-107">See also</span></span>
 
-- [<span data-ttu-id="9322e-108">-Reference (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9322e-108">-reference (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/reference.md)
-- [<span data-ttu-id="9322e-109">Gestione delle proprietà di progetti e soluzioni</span><span class="sxs-lookup"><span data-stu-id="9322e-109">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
+- [<span data-ttu-id="fca13-108">-Reference (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="fca13-108">-reference (Visual Basic)</span></span>](../reference/command-line-compiler/reference.md)
+- [<span data-ttu-id="fca13-109">Gestione delle proprietà di progetti e soluzioni</span><span class="sxs-lookup"><span data-stu-id="fca13-109">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
