--- a/docs/visual-basic/misc/bc32015.md
+++ b/docs/visual-basic/misc/bc32015.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32015
 ms.assetid: 6e62fe8d-a875-4995-b6b2-443e75c65e85
-ms.openlocfilehash: 0dce370cfbcf70e3fabe121b907370a4fed549fd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 7e4da18baeb317a1be8ddd91afdc0f2600dd7ce9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833391"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413908"
 ---
-# <a name="assembly-or-module-expected"></a><span data-ttu-id="70d77-102">È previsto 'Assembly' o 'Module'</span><span class="sxs-lookup"><span data-stu-id="70d77-102">'Assembly' or 'Module' expected</span></span>
-<span data-ttu-id="70d77-103">Un attributo globale viene specificato senza indicare se si riferisce all'intero assembly o solo al modulo corrente.</span><span class="sxs-lookup"><span data-stu-id="70d77-103">A global attribute is specified without indicating whether it applies to the entire assembly or only to the current module.</span></span> <span data-ttu-id="70d77-104">Gli attributi globali devono specificare `Assembly` o `Module`.</span><span class="sxs-lookup"><span data-stu-id="70d77-104">Global attributes must specify either `Assembly` or `Module`.</span></span>  
+# <a name="assembly-or-module-expected"></a><span data-ttu-id="b8da7-102">È previsto 'Assembly' o 'Module'</span><span class="sxs-lookup"><span data-stu-id="b8da7-102">'Assembly' or 'Module' expected</span></span>
+<span data-ttu-id="b8da7-103">Un attributo globale viene specificato senza indicare se si riferisce all'intero assembly o solo al modulo corrente.</span><span class="sxs-lookup"><span data-stu-id="b8da7-103">A global attribute is specified without indicating whether it applies to the entire assembly or only to the current module.</span></span> <span data-ttu-id="b8da7-104">Gli attributi globali devono specificare `Assembly` o `Module`.</span><span class="sxs-lookup"><span data-stu-id="b8da7-104">Global attributes must specify either `Assembly` or `Module`.</span></span>  
   
- <span data-ttu-id="70d77-105">Un attributo globale è un attributo che viene specificato da solo su una riga di codice sorgente invece di essere applicato alla dichiarazione di uno specifico elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="70d77-105">A global attribute is one that appears on a source line by itself, rather than being applied to the declaration of a particular programming element.</span></span>  
+ <span data-ttu-id="b8da7-105">Un attributo globale è un attributo che viene specificato da solo su una riga di codice sorgente invece di essere applicato alla dichiarazione di uno specifico elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="b8da7-105">A global attribute is one that appears on a source line by itself, rather than being applied to the declaration of a particular programming element.</span></span>  
   
- <span data-ttu-id="70d77-106">**ID errore:** BC32015</span><span class="sxs-lookup"><span data-stu-id="70d77-106">**Error ID:** BC32015</span></span>  
+ <span data-ttu-id="b8da7-106">**ID errore:** BC32015</span><span class="sxs-lookup"><span data-stu-id="b8da7-106">**Error ID:** BC32015</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="70d77-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="70d77-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b8da7-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b8da7-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="70d77-108">Se si intende usare l'attributo come globale, aggiungere la parola chiave `Assembly` o `Module` all'inizio del blocco dell'attributo, seguita da due punti (:).</span><span class="sxs-lookup"><span data-stu-id="70d77-108">If you intend the attribute to be global, add the `Assembly` or `Module` keyword to the beginning of the attribute block, followed by a colon (:).</span></span>  
+1. <span data-ttu-id="b8da7-108">Se si intende usare l'attributo come globale, aggiungere la parola chiave `Assembly` o `Module` all'inizio del blocco dell'attributo, seguita da due punti (:).</span><span class="sxs-lookup"><span data-stu-id="b8da7-108">If you intend the attribute to be global, add the `Assembly` or `Module` keyword to the beginning of the attribute block, followed by a colon (:).</span></span>  
   
-2. <span data-ttu-id="70d77-109">Se non si intende usare l'attributo come globale, eliminare il blocco dell'attributo o inserirlo nella dichiarazione di un elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="70d77-109">If you do not intend the attribute to be global, delete the attribute block or move it to a programming element declaration.</span></span>  
+2. <span data-ttu-id="b8da7-109">Se non si intende usare l'attributo come globale, eliminare il blocco dell'attributo o inserirlo nella dichiarazione di un elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="b8da7-109">If you do not intend the attribute to be global, delete the attribute block or move it to a programming element declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="70d77-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="70d77-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b8da7-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b8da7-110">See also</span></span>
 
-- [<span data-ttu-id="70d77-111">Assembly</span><span class="sxs-lookup"><span data-stu-id="70d77-111">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
-- [<span data-ttu-id="70d77-112">Modulo \<parola chiave></span><span class="sxs-lookup"><span data-stu-id="70d77-112">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)
+- [<span data-ttu-id="b8da7-111">Assembly</span><span class="sxs-lookup"><span data-stu-id="b8da7-111">Assembly</span></span>](../language-reference/modifiers/assembly.md)
+- [<span data-ttu-id="b8da7-112">Modulo\<keyword></span><span class="sxs-lookup"><span data-stu-id="b8da7-112">Module \<keyword></span></span>](../language-reference/modifiers/module-keyword.md)
