--- a/docs/visual-basic/misc/bc32092.md
+++ b/docs/visual-basic/misc/bc32092.md
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32092
 ms.assetid: b3041c1d-837c-4d58-bbb4-5c46f227b66d
-ms.openlocfilehash: 41ba53761664f83480302003b28b3ca6d952e9fd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fbfca339d042414d6de689e968516167ebca1860
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783721"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358620"
 ---
-# <a name="type-or-new-expected"></a><span data-ttu-id="312ec-102">È previsto il tipo o 'New'</span><span class="sxs-lookup"><span data-stu-id="312ec-102">Type or 'New' expected</span></span>
-<span data-ttu-id="312ec-103">Un parametro di tipo nella dichiarazione di un tipo generico consente di introdurre un elenco di vincoli con la parola chiave `As` ma non specifica un vincolo valido.</span><span class="sxs-lookup"><span data-stu-id="312ec-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
+# <a name="type-or-new-expected"></a><span data-ttu-id="38c73-102">È previsto il tipo o 'New'</span><span class="sxs-lookup"><span data-stu-id="38c73-102">Type or 'New' expected</span></span>
+<span data-ttu-id="38c73-103">Un parametro di tipo nella dichiarazione di un tipo generico consente di introdurre un elenco di vincoli con la parola chiave `As` ma non specifica un vincolo valido.</span><span class="sxs-lookup"><span data-stu-id="38c73-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
   
- <span data-ttu-id="312ec-104">Un vincolo su un parametro di tipo deve essere una classe o un'interfaccia valida o una delle parole chiave `Class`, `Structure`o `New`.</span><span class="sxs-lookup"><span data-stu-id="312ec-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="312ec-105">Se si specifica un vincolo non valido o nessun vincolo, il compilatore genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="312ec-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
+ <span data-ttu-id="38c73-104">Un vincolo su un parametro di tipo deve essere una classe o un'interfaccia valida o una delle parole chiave `Class`, `Structure`o `New`.</span><span class="sxs-lookup"><span data-stu-id="38c73-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="38c73-105">Se si specifica un vincolo non valido o nessun vincolo, il compilatore genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="38c73-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
   
- <span data-ttu-id="312ec-106">**ID errore:** BC32092</span><span class="sxs-lookup"><span data-stu-id="312ec-106">**Error ID:** BC32092</span></span>  
+ <span data-ttu-id="38c73-106">**ID errore:** BC32092</span><span class="sxs-lookup"><span data-stu-id="38c73-106">**Error ID:** BC32092</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="312ec-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="312ec-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="38c73-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="38c73-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="312ec-108">Determinare in che modo vincolare il parametro di tipo e specificare il vincolo appropriato nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="312ec-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
+1. <span data-ttu-id="38c73-108">Determinare in che modo vincolare il parametro di tipo e specificare il vincolo appropriato nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="38c73-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
   
-2. <span data-ttu-id="312ec-109">Se si vuole vincolare il parametro di tipo con una classe o interfaccia, accertarsi che venga digitato in modo corretto.</span><span class="sxs-lookup"><span data-stu-id="312ec-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
+2. <span data-ttu-id="38c73-109">Se si vuole vincolare il parametro di tipo con una classe o interfaccia, accertarsi che venga digitato in modo corretto.</span><span class="sxs-lookup"><span data-stu-id="38c73-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
   
-3. <span data-ttu-id="312ec-110">Ricordarsi di separare i vincoli multipli di un parametro di tipo singolo con le virgole e di racchiudere l'elenco di vincoli tra parentesi graffe (`{ }`).</span><span class="sxs-lookup"><span data-stu-id="312ec-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
+3. <span data-ttu-id="38c73-110">Ricordarsi di separare i vincoli multipli di un parametro di tipo singolo con le virgole e di racchiudere l'elenco di vincoli tra parentesi graffe (`{ }`).</span><span class="sxs-lookup"><span data-stu-id="38c73-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="312ec-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="312ec-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="38c73-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="38c73-111">See also</span></span>
 
-- [<span data-ttu-id="312ec-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="312ec-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="312ec-113">Class (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="312ec-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="312ec-114">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="312ec-114">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="312ec-115">Operatore New</span><span class="sxs-lookup"><span data-stu-id="312ec-115">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
-- [<span data-ttu-id="312ec-116">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="312ec-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="38c73-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="38c73-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="38c73-113">Class (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="38c73-113">Class (Visual Basic)</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="38c73-114">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="38c73-114">Structure (Visual Basic)</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="38c73-115">Operatore New</span><span class="sxs-lookup"><span data-stu-id="38c73-115">New Operator</span></span>](../language-reference/operators/new-operator.md)
+- [<span data-ttu-id="38c73-116">Type List</span><span class="sxs-lookup"><span data-stu-id="38c73-116">Type List</span></span>](../language-reference/statements/type-list.md)
