--- a/docs/visual-basic/misc/bc32093.md
+++ b/docs/visual-basic/misc/bc32093.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32093
 ms.assetid: 9a1baf12-a4a4-442d-9baa-852ad30a956b
-ms.openlocfilehash: 5fbc508322227a249d858744c9e1ef42827b6458
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0733c7cf0b451b408db261a907f37a8db1ee32f9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618593"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358543"
 ---
-# <a name="of-required-when-specifying-type-arguments-for-a-generic-type-or-method"></a><span data-ttu-id="a63dd-102">'Of' è richiesto quando si specificano argomenti tipo per un tipo o metodo generico</span><span class="sxs-lookup"><span data-stu-id="a63dd-102">'Of' required when specifying type arguments for a generic type or method</span></span>
-<span data-ttu-id="a63dd-103">Un'istruzione tenta di costruire un tipo da un tipo generico o di chiamare un metodo generico, senza usare una clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="a63dd-103">A statement attempts to construct a type from a generic type, or call a generic method, without using an [Of](../../visual-basic/language-reference/statements/of-clause.md) clause.</span></span>  
+# <a name="of-required-when-specifying-type-arguments-for-a-generic-type-or-method"></a><span data-ttu-id="c0f2f-102">'Of' è richiesto quando si specificano argomenti tipo per un tipo o metodo generico</span><span class="sxs-lookup"><span data-stu-id="c0f2f-102">'Of' required when specifying type arguments for a generic type or method</span></span>
+<span data-ttu-id="c0f2f-103">Un'istruzione tenta di costruire un tipo da un tipo generico o di chiamare un metodo generico, senza usare una clausola [Of](../language-reference/statements/of-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="c0f2f-103">A statement attempts to construct a type from a generic type, or call a generic method, without using an [Of](../language-reference/statements/of-clause.md) clause.</span></span>  
   
- <span data-ttu-id="a63dd-104">La sintassi di Visual Basic per i tipi generici richiede i parametri e argomenti di tipo siano introdotti dal `Of` (parola chiave).</span><span class="sxs-lookup"><span data-stu-id="a63dd-104">The Visual Basic syntax for generic types calls for the type parameters and type arguments to be introduced by the `Of` keyword.</span></span> <span data-ttu-id="a63dd-105">Inoltre, l'elenco di parametri di tipo o di argomenti di tipo deve essere racchiuso tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="a63dd-105">In addition, the type parameter list or type argument list must be enclosed within parentheses.</span></span>  
+ <span data-ttu-id="c0f2f-104">La sintassi Visual Basic per i tipi generici richiede che i parametri di tipo e gli argomenti di tipo siano introdotti dalla `Of` parola chiave.</span><span class="sxs-lookup"><span data-stu-id="c0f2f-104">The Visual Basic syntax for generic types calls for the type parameters and type arguments to be introduced by the `Of` keyword.</span></span> <span data-ttu-id="c0f2f-105">Inoltre, l'elenco di parametri di tipo o di argomenti di tipo deve essere racchiuso tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="c0f2f-105">In addition, the type parameter list or type argument list must be enclosed within parentheses.</span></span>  
   
- <span data-ttu-id="a63dd-106">**ID errore:** BC32093</span><span class="sxs-lookup"><span data-stu-id="a63dd-106">**Error ID:** BC32093</span></span>  
+ <span data-ttu-id="c0f2f-106">**ID errore:** BC32093</span><span class="sxs-lookup"><span data-stu-id="c0f2f-106">**Error ID:** BC32093</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a63dd-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a63dd-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c0f2f-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c0f2f-107">To correct this error</span></span>  
   
-- <span data-ttu-id="a63dd-108">Includere la parola chiave `Of` all'inizio dell'elenco di argomenti di tipo e racchiudere l'intero elenco tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="a63dd-108">Include the `Of` keyword at the beginning of the type argument list, and enclose the entire list within parentheses.</span></span>  
+- <span data-ttu-id="c0f2f-108">Includere la parola chiave `Of` all'inizio dell'elenco di argomenti di tipo e racchiudere l'intero elenco tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="c0f2f-108">Include the `Of` keyword at the beginning of the type argument list, and enclose the entire list within parentheses.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a63dd-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a63dd-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c0f2f-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c0f2f-109">See also</span></span>
 
-- [<span data-ttu-id="a63dd-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a63dd-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="a63dd-111">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="a63dd-111">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="c0f2f-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c0f2f-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="c0f2f-111">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="c0f2f-111">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
