--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -1,5 +1,5 @@
 ---
-title: Vincolo '<constraint1>'è in conflitto con il vincolo'<constraint2>'già specificato per il parametro di tipo'<typeparametername>'
+title: Il vincolo ' <constraint1> ' è in conflitto con il vincolo ' <constraint2> ' già specificato per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32119
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
-ms.openlocfilehash: 60c2bc30c610ac02ad193c663ec4809bfaca9178
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 709b0fa192b78e1168637111b0ef115c139b056e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640139"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386237"
 ---
-# <a name="constraint-constraint1-conflicts-with-the-constraint-constraint2-already-specified-for-type-parameter-typeparametername"></a><span data-ttu-id="004d4-102">Vincolo '\<constraint1 >' è in conflitto con il vincolo '\<constraint2 >' già specificato per il parametro di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="004d4-102">Constraint '\<constraint1>' conflicts with the constraint '\<constraint2>' already specified for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="004d4-103">Un tipo generico è dichiarato con vincoli in conflitto in un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="004d4-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
+# <a name="constraint-constraint1-conflicts-with-the-constraint-constraint2-already-specified-for-type-parameter-typeparametername"></a><span data-ttu-id="9a63c-102">Il vincolo ' \<constraint1> ' è in conflitto con il vincolo ' \<constraint2> ' già specificato per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="9a63c-102">Constraint '\<constraint1>' conflicts with the constraint '\<constraint2>' already specified for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="9a63c-103">Un tipo generico è dichiarato con vincoli in conflitto in un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="9a63c-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
   
- <span data-ttu-id="004d4-104">L'istruzione seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="004d4-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="9a63c-104">L'istruzione seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="9a63c-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t As {Structure, Class })`  
   
- <span data-ttu-id="004d4-105">I vincoli `Structure` e `Class` determinano un conflitto per il parametro di tipo `t`perché per il vincolo `Structure` l'argomento di tipo corrispondente deve essere un tipo valore, mentre per l'oggetto `Class` deve essere un tipo riferimento.</span><span class="sxs-lookup"><span data-stu-id="004d4-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="9a63c-105">I vincoli `Structure` e `Class` determinano un conflitto per il parametro di tipo `t`perché per il vincolo `Structure` l'argomento di tipo corrispondente deve essere un tipo valore, mentre per l'oggetto `Class` deve essere un tipo riferimento.</span><span class="sxs-lookup"><span data-stu-id="9a63c-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="004d4-106">**ID errore:** BC32119</span><span class="sxs-lookup"><span data-stu-id="004d4-106">**Error ID:** BC32119</span></span>  
+ <span data-ttu-id="9a63c-106">**ID errore:** BC32119</span><span class="sxs-lookup"><span data-stu-id="9a63c-106">**Error ID:** BC32119</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="004d4-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="004d4-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9a63c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9a63c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="004d4-108">Modificare i vincoli del parametro di tipo per evitare conflitti.</span><span class="sxs-lookup"><span data-stu-id="004d4-108">Change the type parameter constraints to avoid conflicts.</span></span>  
+- <span data-ttu-id="9a63c-108">Modificare i vincoli del parametro di tipo per evitare conflitti.</span><span class="sxs-lookup"><span data-stu-id="9a63c-108">Change the type parameter constraints to avoid conflicts.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="004d4-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="004d4-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9a63c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9a63c-109">See also</span></span>
 
-- [<span data-ttu-id="004d4-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="004d4-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="004d4-111">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="004d4-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="004d4-112">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="004d4-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="004d4-113">Class (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="004d4-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="004d4-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="004d4-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="9a63c-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9a63c-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="9a63c-111">Type List</span><span class="sxs-lookup"><span data-stu-id="9a63c-111">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="9a63c-112">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9a63c-112">Structure (Visual Basic)</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="9a63c-113">Class (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9a63c-113">Class (Visual Basic)</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="9a63c-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="9a63c-114">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
