--- a/docs/visual-basic/misc/bc32122.md
+++ b/docs/visual-basic/misc/bc32122.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile<interfacename1>ereditare l'interfaccia '' perché l'interfaccia '<interfacename2>' da cui eredita potrebbe essere identica<interfacename3>all'interfaccia '' da cui<interfacename4>eredita l'interfaccia '' per alcuni argomenti di tipo
+title: Non è possibile ereditare l'interfaccia '<interfacename1>' perché l'interfaccia '<interfacename2>' da cui eredita potrebbe essere identica all'interfaccia '<interfacename3>' da cui eredita l'interfaccia '<interfacename4>' per alcuni argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32122
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - BC32122
 ms.assetid: 64a66ec7-0f5f-4804-a92b-9a6279fdfd6d
-ms.openlocfilehash: e36f5c54ec6f84c04a4fdbe323d9d9226580026a
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 0dee4c42f241b5c0d30548e4a1cb01f0a3d48b93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512920"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386146"
 ---
-# <a name="cannot-inherit-interface-interfacename1-because-the-interface-interfacename2-from-which-it-inherits-could-be-identical-to-interface-interfacename3-from-which-the-interface-interfacename4-inherits-for-some-type-arguments"></a><span data-ttu-id="12b69-102">Non è possibile ereditare l'interfaccia\<' nomeinterfaccia1 >' perché l'interfaccia '\<nomeinterfaccia2 >' da cui eredita potrebbe essere identica\<all'interfaccia ' nomeinterfaccia3 >' da cui\< l'interfaccia ' nomeinterfaccia4 >' eredita per alcuni argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="12b69-102">Cannot inherit interface '\<interfacename1>' because the interface '\<interfacename2>' from which it inherits could be identical to interface '\<interfacename3>' from which the interface '\<interfacename4>' inherits for some type arguments</span></span>
+# <a name="cannot-inherit-interface-interfacename1-because-the-interface-interfacename2-from-which-it-inherits-could-be-identical-to-interface-interfacename3-from-which-the-interface-interfacename4-inherits-for-some-type-arguments"></a><span data-ttu-id="73529-102">Non è possibile ereditare l'interfaccia '\<interfacename1>' perché l'interfaccia '\<interfacename2>' da cui eredita potrebbe essere identica all'interfaccia '\<interfacename3>' da cui eredita l'interfaccia '\<interfacename4>' per alcuni argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="73529-102">Cannot inherit interface '\<interfacename1>' because the interface '\<interfacename2>' from which it inherits could be identical to interface '\<interfacename3>' from which the interface '\<interfacename4>' inherits for some type arguments</span></span>
 
-<span data-ttu-id="12b69-103">Un'interfaccia generica eredita da due o più interfacce generiche e due delle ereditarietà potrebbero essere in conflitto per determinati valori di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="12b69-103">A generic interface inherits from two or more generic interfaces, and two of the inheritances could conflict for certain values of type arguments.</span></span>
+<span data-ttu-id="73529-103">Un'interfaccia generica eredita da due o più interfacce generiche e due delle ereditarietà potrebbero essere in conflitto per determinati valori di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="73529-103">A generic interface inherits from two or more generic interfaces, and two of the inheritances could conflict for certain values of type arguments.</span></span>
 
- <span data-ttu-id="12b69-104">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="12b69-104">The following statements can generate this error.</span></span>
+ <span data-ttu-id="73529-104">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="73529-104">The following statements can generate this error.</span></span>
 
 ```vb
 Public Interface interfaceA(Of u)
@@ -34,21 +34,21 @@ Public Interface derivedInterface(Of t1, t2)
 End Interface
 ```
 
-<span data-ttu-id="12b69-105">Se l'interfaccia `derivedInterface` è costruita o implementata specificando lo stesso tipo sia in `t1` che in `t2`, deve ereditare due versioni di `interfaceA` con argomenti di tipo identici.</span><span class="sxs-lookup"><span data-stu-id="12b69-105">If `derivedInterface` is constructed or implemented supplying the same type to both `t1` and `t2`, it must inherit two versions of `interfaceA` with identical type arguments.</span></span> <span data-ttu-id="12b69-106">In questo modo si produrrebbe un'ambiguità sulla versione a cui accedere.</span><span class="sxs-lookup"><span data-stu-id="12b69-106">Doing so would produce an ambiguity about which version to access.</span></span>
+<span data-ttu-id="73529-105">Se l'interfaccia `derivedInterface` è costruita o implementata specificando lo stesso tipo sia in `t1` che in `t2`, deve ereditare due versioni di `interfaceA` con argomenti di tipo identici.</span><span class="sxs-lookup"><span data-stu-id="73529-105">If `derivedInterface` is constructed or implemented supplying the same type to both `t1` and `t2`, it must inherit two versions of `interfaceA` with identical type arguments.</span></span> <span data-ttu-id="73529-106">In questo modo si produrrebbe un'ambiguità sulla versione a cui accedere.</span><span class="sxs-lookup"><span data-stu-id="73529-106">Doing so would produce an ambiguity about which version to access.</span></span>
 
-<span data-ttu-id="12b69-107">**ID errore:** BC32122</span><span class="sxs-lookup"><span data-stu-id="12b69-107">**Error ID:** BC32122</span></span>
+<span data-ttu-id="73529-107">**ID errore:** BC32122</span><span class="sxs-lookup"><span data-stu-id="73529-107">**Error ID:** BC32122</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="12b69-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="12b69-108">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="73529-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="73529-108">To correct this error</span></span>
 
-- <span data-ttu-id="12b69-109">Modificare uno degli argomenti di tipo forniti all'interfaccia derivata in modo che non siano presenti conflitti.</span><span class="sxs-lookup"><span data-stu-id="12b69-109">Change one of the type arguments supplied to the derived interface so that there is no conflict.</span></span>
+- <span data-ttu-id="73529-109">Modificare uno degli argomenti di tipo forniti all'interfaccia derivata in modo che non siano presenti conflitti.</span><span class="sxs-lookup"><span data-stu-id="73529-109">Change one of the type arguments supplied to the derived interface so that there is no conflict.</span></span>
 
-  <span data-ttu-id="12b69-110">\-oppure-</span><span class="sxs-lookup"><span data-stu-id="12b69-110">\-or-</span></span>
+  <span data-ttu-id="73529-110">\-oppure-</span><span class="sxs-lookup"><span data-stu-id="73529-110">\-or-</span></span>
 
-- <span data-ttu-id="12b69-111">Rimuovere dall'istruzione `Inherits` una delle interfacce che determina il potenziale conflitto di ereditarietà o implementazione.</span><span class="sxs-lookup"><span data-stu-id="12b69-111">Remove from the `Inherits` statement one of the interfaces causing the potential inheritance or implementation conflict.</span></span>
+- <span data-ttu-id="73529-111">Rimuovere dall'istruzione `Inherits` una delle interfacce che determina il potenziale conflitto di ereditarietà o implementazione.</span><span class="sxs-lookup"><span data-stu-id="73529-111">Remove from the `Inherits` statement one of the interfaces causing the potential inheritance or implementation conflict.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="12b69-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="12b69-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="73529-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="73529-112">See also</span></span>
 
-- [<span data-ttu-id="12b69-113">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="12b69-113">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="12b69-114">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="12b69-114">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [<span data-ttu-id="12b69-115">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="12b69-115">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
-- [<span data-ttu-id="12b69-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="12b69-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="73529-113">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="73529-113">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="73529-114">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="73529-114">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="73529-115">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="73529-115">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="73529-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="73529-116">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
