--- a/docs/visual-basic/misc/bc32205.md
+++ b/docs/visual-basic/misc/bc32205.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32205
 ms.assetid: 979ae0df-b4d1-417e-8f0c-7e11c6844135
-ms.openlocfilehash: 60b0389aee3ba2dbfc20af6fe1527d05318aee24
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 629ffef78f964ba470a7ebf103c7c1b8668872d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64616933"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386094"
 ---
-# <a name="withevents-variable-name-length-cannot-exceed-1019-characters"></a><span data-ttu-id="8b519-102">La lunghezza del nome della variabile WithEvents non può superare i 1019 caratteri</span><span class="sxs-lookup"><span data-stu-id="8b519-102">WithEvents variable name length cannot exceed 1019 characters</span></span>
-<span data-ttu-id="8b519-103">Il nome o l'identificatore di tutte le variabili dichiarate con `WithEvents` è limitato a 1019 caratteri.</span><span class="sxs-lookup"><span data-stu-id="8b519-103">The name or identifier of every variable declared using `WithEvents` is limited to 1019 characters.</span></span>  
+# <a name="withevents-variable-name-length-cannot-exceed-1019-characters"></a><span data-ttu-id="b75e2-102">La lunghezza del nome della variabile WithEvents non può superare i 1019 caratteri</span><span class="sxs-lookup"><span data-stu-id="b75e2-102">WithEvents variable name length cannot exceed 1019 characters</span></span>
+<span data-ttu-id="b75e2-103">Il nome o l'identificatore di tutte le variabili dichiarate con `WithEvents` è limitato a 1019 caratteri.</span><span class="sxs-lookup"><span data-stu-id="b75e2-103">The name or identifier of every variable declared using `WithEvents` is limited to 1019 characters.</span></span>  
   
- <span data-ttu-id="8b519-104">**ID errore:** BC32205</span><span class="sxs-lookup"><span data-stu-id="8b519-104">**Error ID:** BC32205</span></span>  
+ <span data-ttu-id="b75e2-104">**ID errore:** BC32205</span><span class="sxs-lookup"><span data-stu-id="b75e2-104">**Error ID:** BC32205</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8b519-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8b519-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b75e2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b75e2-105">To correct this error</span></span>  
   
-- <span data-ttu-id="8b519-106">Ridurre la lunghezza dell'identificatore.</span><span class="sxs-lookup"><span data-stu-id="8b519-106">Reduce the length of the identifier.</span></span>  
+- <span data-ttu-id="b75e2-106">Ridurre la lunghezza dell'identificatore.</span><span class="sxs-lookup"><span data-stu-id="b75e2-106">Reduce the length of the identifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8b519-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8b519-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b75e2-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b75e2-107">See also</span></span>
 
-- [<span data-ttu-id="8b519-108">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="8b519-108">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [<span data-ttu-id="8b519-109">WithEvents</span><span class="sxs-lookup"><span data-stu-id="8b519-109">WithEvents</span></span>](../../visual-basic/language-reference/modifiers/withevents.md)
+- [<span data-ttu-id="b75e2-108">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="b75e2-108">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="b75e2-109">WithEvents</span><span class="sxs-lookup"><span data-stu-id="b75e2-109">WithEvents</span></span>](../language-reference/modifiers/withevents.md)
