--- a/docs/visual-basic/misc/bc32504.md
+++ b/docs/visual-basic/misc/bc32504.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile applicare 'ComClassAttribute' a '<classname1>' perché il relativo contenitore '<classname2>' non è dichiarato 'Public'
+title: Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '<classname1>' perché il relativo contenitore '<classname2>' non è dichiarato 'come Public'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32504
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32504
 ms.assetid: 4138b639-88d6-4b51-afcd-c92a1be36f1c
-ms.openlocfilehash: 276ed8522c9395a81c00f5570264baff76cca229
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 771bdee1313dde55a18733ffaea9d0f1f8b88a47
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591872"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385901"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname1-because-its-container-classname2-is-not-declared-public"></a><span data-ttu-id="e4842-102">Impossibile applicare 'ComClassAttribute' a '\<classname1 >' perché il relativo contenitore '\<classname2 >' non è dichiarato 'Public'</span><span class="sxs-lookup"><span data-stu-id="e4842-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to '\<classname1>' because its container '\<classname2>' is not declared 'Public'</span></span>
-<span data-ttu-id="e4842-103">Una classe che usa un blocco di attributi `COMClassAttribute` è dichiarata all'interno di una classe che non è `Public`.</span><span class="sxs-lookup"><span data-stu-id="e4842-103">A class using a `COMClassAttribute` attribute block is declared inside a class that is not `Public`.</span></span> <span data-ttu-id="e4842-104">Se una classe deve essere esposta come oggetto COM, tutta la sua gerarchia di contenimento deve essere dichiarata con accesso `Public` .</span><span class="sxs-lookup"><span data-stu-id="e4842-104">If a class is to be exposed as a COM object, its entire containment hierarchy must be declared with `Public` access.</span></span>  
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname1-because-its-container-classname2-is-not-declared-public"></a><span data-ttu-id="b9cfc-102">Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '\<classname1>' perché il relativo contenitore '\<classname2>' non è dichiarato 'come Public'</span><span class="sxs-lookup"><span data-stu-id="b9cfc-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to '\<classname1>' because its container '\<classname2>' is not declared 'Public'</span></span>
+<span data-ttu-id="b9cfc-103">Una classe che usa un blocco di attributi `COMClassAttribute` è dichiarata all'interno di una classe che non è `Public`.</span><span class="sxs-lookup"><span data-stu-id="b9cfc-103">A class using a `COMClassAttribute` attribute block is declared inside a class that is not `Public`.</span></span> <span data-ttu-id="b9cfc-104">Se una classe deve essere esposta come oggetto COM, tutta la sua gerarchia di contenimento deve essere dichiarata con accesso `Public` .</span><span class="sxs-lookup"><span data-stu-id="b9cfc-104">If a class is to be exposed as a COM object, its entire containment hierarchy must be declared with `Public` access.</span></span>  
   
- <span data-ttu-id="e4842-105">**ID errore:** BC32504</span><span class="sxs-lookup"><span data-stu-id="e4842-105">**Error ID:** BC32504</span></span>  
+ <span data-ttu-id="b9cfc-105">**ID errore:** BC32504</span><span class="sxs-lookup"><span data-stu-id="b9cfc-105">**Error ID:** BC32504</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e4842-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e4842-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b9cfc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b9cfc-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e4842-107">Dichiarare tutte le classi contenitore `Public`o rimuovere il blocco di attributi `COMClassAttribute` .</span><span class="sxs-lookup"><span data-stu-id="e4842-107">Declare all containing classes `Public`, or remove the `COMClassAttribute` attribute block.</span></span>  
+- <span data-ttu-id="b9cfc-107">Dichiarare tutte le classi contenitore `Public`o rimuovere il blocco di attributi `COMClassAttribute` .</span><span class="sxs-lookup"><span data-stu-id="b9cfc-107">Declare all containing classes `Public`, or remove the `COMClassAttribute` attribute block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e4842-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e4842-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b9cfc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b9cfc-108">See also</span></span>
 
-- [<span data-ttu-id="e4842-109">Classe ComClassAttribute</span><span class="sxs-lookup"><span data-stu-id="e4842-109">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)
-- [<span data-ttu-id="e4842-110">Public</span><span class="sxs-lookup"><span data-stu-id="e4842-110">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="b9cfc-109">Classe ComClassAttribute</span><span class="sxs-lookup"><span data-stu-id="b9cfc-109">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)
+- [<span data-ttu-id="b9cfc-110">Pubblica</span><span class="sxs-lookup"><span data-stu-id="b9cfc-110">Public</span></span>](../language-reference/modifiers/public.md)
