--- a/docs/visual-basic/misc/bc32508.md
+++ b/docs/visual-basic/misc/bc32508.md
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC32508
 ms.assetid: c8af606d-f448-4703-98df-e594fd511f92
-ms.openlocfilehash: 88c8fa7883d79655b2174be110985d6c232f94f1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f06bf0d3eb1ceffe3df084ba918e3ec8507d7f89
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591916"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385756"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-declared-mustinherit"></a><span data-ttu-id="cdfc7-102">Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe dichiarata 'MustInherit'</span><span class="sxs-lookup"><span data-stu-id="cdfc7-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to a class that is declared 'MustInherit'</span></span>
-<span data-ttu-id="cdfc7-103">Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione specifica `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-103">A class is declared with the <xref:Microsoft.VisualBasic.ComClassAttribute>, but its declaration specifies `MustInherit`.</span></span>  
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-declared-mustinherit"></a><span data-ttu-id="8661f-102">Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe dichiarata 'MustInherit'</span><span class="sxs-lookup"><span data-stu-id="8661f-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to a class that is declared 'MustInherit'</span></span>
+<span data-ttu-id="8661f-103">Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione specifica `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="8661f-103">A class is declared with the <xref:Microsoft.VisualBasic.ComClassAttribute>, but its declaration specifies `MustInherit`.</span></span>  
   
- <span data-ttu-id="cdfc7-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="cdfc7-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
+ <span data-ttu-id="8661f-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="8661f-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
   
-- <span data-ttu-id="cdfc7-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="cdfc7-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
+- <span data-ttu-id="8661f-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="8661f-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
   
-- <span data-ttu-id="cdfc7-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
+- <span data-ttu-id="8661f-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="8661f-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
   
-- <span data-ttu-id="cdfc7-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-107">It must not be generic or be declared within a generic container type.</span></span>  
+- <span data-ttu-id="8661f-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="8661f-107">It must not be generic or be declared within a generic container type.</span></span>  
   
- <span data-ttu-id="cdfc7-108">**ID errore:** BC32508</span><span class="sxs-lookup"><span data-stu-id="cdfc7-108">**Error ID:** BC32508</span></span>  
+ <span data-ttu-id="8661f-108">**ID errore:** BC32508</span><span class="sxs-lookup"><span data-stu-id="8661f-108">**Error ID:** BC32508</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cdfc7-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cdfc7-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8661f-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8661f-109">To correct this error</span></span>  
   
-- <span data-ttu-id="cdfc7-110">Rimuovere la parola chiave `MustInherit` dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-110">Remove the `MustInherit` keyword from the class declaration.</span></span>  
+- <span data-ttu-id="8661f-110">Rimuovere la parola chiave `MustInherit` dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="8661f-110">Remove the `MustInherit` keyword from the class declaration.</span></span>  
   
-     <span data-ttu-id="cdfc7-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="cdfc7-111">-or-</span></span>  
+     <span data-ttu-id="8661f-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="8661f-111">-or-</span></span>  
   
-- <span data-ttu-id="cdfc7-112">Se la classe o il relativo elemento contenitore deve essere generico, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-112">If the class or its containing element must be generic, remove the <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="cdfc7-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="cdfc7-113">You cannot expose it to COM.</span></span>  
+- <span data-ttu-id="8661f-112">Se la classe o il relativo elemento contenitore deve essere generico, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="8661f-112">If the class or its containing element must be generic, remove the <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="8661f-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="8661f-113">You cannot expose it to COM.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cdfc7-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cdfc7-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8661f-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8661f-114">See also</span></span>
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [<span data-ttu-id="cdfc7-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="cdfc7-115">COM Interop</span></span>](../../visual-basic/programming-guide/com-interop/index.md)
-- [<span data-ttu-id="cdfc7-116">MustInherit</span><span class="sxs-lookup"><span data-stu-id="cdfc7-116">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="8661f-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="8661f-115">COM Interop</span></span>](../programming-guide/com-interop/index.md)
+- [<span data-ttu-id="8661f-116">MustInherit</span><span class="sxs-lookup"><span data-stu-id="8661f-116">MustInherit</span></span>](../language-reference/modifiers/mustinherit.md)
