--- a/docs/visual-basic/misc/bc42301.md
+++ b/docs/visual-basic/misc/bc42301.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC42301
 ms.assetid: 04c4b833-2001-420d-9f49-4048a3b04ee4
-ms.openlocfilehash: df772d5d508c41fd34cd8a734371eb4e67fd5fba
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f67113b7927a83f6c97170e2b19898f5d5059f99
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588096"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413596"
 ---
-# <a name="only-one-xml-comment-block-is-allowed-per-language-element"></a><span data-ttu-id="66aa6-102">Per ogni elemento di linguaggio è consentito solo un blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="66aa6-102">Only one XML comment block is allowed per language element</span></span>
-<span data-ttu-id="66aa6-103">Sono stati applicati più blocchi di commento XML a un elemento di linguaggio.</span><span class="sxs-lookup"><span data-stu-id="66aa6-103">More than one XML comment block has been applied to a language element.</span></span>  
+# <a name="only-one-xml-comment-block-is-allowed-per-language-element"></a><span data-ttu-id="2f1bd-102">Per ogni elemento di linguaggio è consentito solo un blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="2f1bd-102">Only one XML comment block is allowed per language element</span></span>
+<span data-ttu-id="2f1bd-103">Sono stati applicati più blocchi di commento XML a un elemento di linguaggio.</span><span class="sxs-lookup"><span data-stu-id="2f1bd-103">More than one XML comment block has been applied to a language element.</span></span>  
   
- <span data-ttu-id="66aa6-104">**ID errore:** BC42301</span><span class="sxs-lookup"><span data-stu-id="66aa6-104">**Error ID:** BC42301</span></span>  
+ <span data-ttu-id="2f1bd-104">**ID errore:** BC42301</span><span class="sxs-lookup"><span data-stu-id="2f1bd-104">**Error ID:** BC42301</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="66aa6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66aa6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2f1bd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2f1bd-105">To correct this error</span></span>  
   
-- <span data-ttu-id="66aa6-106">Rimuovere il blocco di commento XML superfluo.</span><span class="sxs-lookup"><span data-stu-id="66aa6-106">Remove the superfluous XML comment block.</span></span>  
+- <span data-ttu-id="2f1bd-106">Rimuovere il blocco di commento XML superfluo.</span><span class="sxs-lookup"><span data-stu-id="2f1bd-106">Remove the superfluous XML comment block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="66aa6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66aa6-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2f1bd-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2f1bd-107">See also</span></span>
 
-- [<span data-ttu-id="66aa6-108">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="66aa6-108">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [<span data-ttu-id="66aa6-109">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="66aa6-109">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="2f1bd-108">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="2f1bd-108">How to: Create XML Documentation</span></span>](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [<span data-ttu-id="2f1bd-109">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="2f1bd-109">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
